@@ -28,7 +28,6 @@ import java.net.URISyntaxException;
 import java.nio.file.AccessDeniedException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.List;
 import java.util.Locale;
@@ -41,12 +40,13 @@ import static io.ballerina.projects.util.ProjectUtils.guessModuleName;
  *
  * @since 2.0.0
  */
-@CommandLine.Command(name = ADD_COMMAND, description = "Add a new module to Ballerina project")
+@CommandLine.Command(name = ADD_COMMAND, description = "Add a new Ballerina module to the current package")
 public class AddCommand implements BLauncherCmd {
 
-    private Path userDir;
-    private PrintStream errStream;
-    private boolean exitWhenFinish;
+    private final Path userDir;
+    private final PrintStream errStream;
+    private final boolean exitWhenFinish;
+    private static final String TEST_FILE_SUFFIX = "_test" + ProjectConstants.BLANG_SOURCE_EXT;
 
     @CommandLine.Parameters
     private List<String> argList;
@@ -58,7 +58,7 @@ public class AddCommand implements BLauncherCmd {
     private String template = "lib";
 
     public AddCommand() {
-        this.userDir = Paths.get(System.getProperty("user.dir"));
+        this.userDir = Path.of(System.getProperty("user.dir"));
         this.errStream = System.err;
         this.exitWhenFinish = true;
         CommandUtil.initJarFs();
@@ -208,7 +208,7 @@ public class AddCommand implements BLauncherCmd {
 
     @Override
     public void printLongDesc(StringBuilder out) {
-        out.append("Add a new Ballerina module");
+        out.append(BLauncherCmd.getCommandUsageInfo(ADD_COMMAND));
     }
 
     @Override
@@ -228,154 +228,30 @@ public class AddCommand implements BLauncherCmd {
         // - modules/
         // -- mymodule/
         // --- main.bal       <- Contains default main method.
-        CommandUtil.applyTemplate(modulePath, template);
-        Path source = modulePath.resolve(template.toLowerCase(Locale.getDefault()) + ".bal");
-        Files.move(source, source.resolveSibling(guessModuleName(moduleName) + ".bal"),
-                StandardCopyOption.REPLACE_EXISTING);
+        CommandUtil.applyTemplate(modulePath, template, false);
+        modifyTestFileName(projectPath, moduleName, template);
     }
 
-//        private void applyBalaTemplate(Path modulePath, String template) {
-//        // find all balas matching org and module name.
-//        Path balaTemplate = findBalaTemplate(template);
-//        if (balaTemplate != null) {
-//            String moduleName = getModuleName(balaTemplate);
-//
-//            URI zipURI = URI.create("jar:" + balaTemplate.toUri().toString());
-//            try (FileSystem zipfs = FileSystems.newFileSystem(zipURI, new HashMap<>())) {
-//                // Copy sources
-//                Path srcDir = zipfs.getPath("/modules").resolve(moduleName);
-//                // We do a string comparison to be efficient.
-//                Files.walkFileTree(srcDir, new FileUtils.Copy(srcDir, modulePath));
-//
-//                // Copy resources
-//                Path resourcesDir = zipfs.getPath("/" + ProjectConstants.RESOURCE_DIR_NAME);
-//                Path moduleResources = modulePath.resolve(ProjectConstants.RESOURCE_DIR_NAME);
-//                Files.createDirectories(moduleResources);
-//                // We do a string comparison to be efficient.
-//                Files.walkFileTree(resourcesDir, new FileUtils.Copy(resourcesDir, moduleResources));
-//                // Copy Module.md
-//                Path moduleMd = zipfs.getPath("/docs").resolve(ProjectConstants.MODULE_MD_FILE_NAME);
-//                Path toModuleMd = modulePath.resolve(ProjectConstants.MODULE_MD_FILE_NAME);
-//                Files.copy(moduleMd, toModuleMd, StandardCopyOption.REPLACE_EXISTING);
-//            } catch (IOException e) {
-//                CommandUtil.printError(errStream,
-//                        "Error while applying template : " + e.getMessage(),
-//                        null,
-//                        false);
-//                Runtime.getRuntime().exit(1);
-//            }
-//        }
-//    }
-
-//    private String getModuleName(Path balaTemplate) {
-//        Path balaName = balaTemplate.getFileName();
-//        if (balaName != null) {
-//            String fileName = balaName.toString();
-//            return fileName.split("-")[0];
-//        }
-//        return "";
-//    }
-
-//    private Path findBalaTemplate(String template) {
-//        // Split the template in to parts
-//        String[] orgSplit = template.split("/");
-//        String orgName = orgSplit[0].trim();
-//        String moduleName = "";
-//        String version = "*";
-//        String modulePart = (orgSplit.length > 1) ? orgSplit[1] : "";
-//        String[] moduleSplit = modulePart.split(":");
-//        moduleName = moduleSplit[0].trim();
-//        version = (moduleSplit.length > 1) ? moduleSplit[1].trim() : version;
-//
-//        String balaGlob = "glob:**/" + orgName + "/" + moduleName + "/" + version + "/*.bala";
-//        PathMatcher pathMatcher = FileSystems.getDefault().getPathMatcher(balaGlob);
-//        Path balaCache = this.homeCache.resolve(ProjectConstants.BALA_CACHE_DIR_NAME);
-//        // Iterate directories
-//        try (Stream<Path> walk = Files.walk(balaCache)) {
-//
-//            List<Path> balaList = walk
-//                    .filter(pathMatcher::matches)
-//                    .collect(Collectors.toList());
-//
-//            Collections.sort(balaList);
-//            // get the latest
-//            if (balaList.size() > 0) {
-//                return balaList.get(balaList.size() - 1);
-//            } else {
-//                return null;
-//            }
-//        } catch (IOException e) {
-//            CommandUtil.printError(errStream,
-//                    "Unable to read home cache",
-//                    null,
-//                    false);
-//            Runtime.getRuntime().exit(1);
-//        }
-//
-//        return homeCache.resolve(ProjectConstants.BALA_CACHE_DIR_NAME);
-//    }
-//
-//    /**
-//     * Iterate home cache and search for template balas.
-//     *
-//     * @return list of templates
-//     */
-//    private List<String> getBalaTemplates() {
-//        List<String> templates = new ArrayList<>();
-//        // get the path to home cache
-//        Path balaCache = this.homeCache.resolve(ProjectConstants.BALA_CACHE_DIR_NAME);
-//        final PathMatcher pathMatcher = FileSystems.getDefault().getPathMatcher("glob:**/*.bala");
-//        // Iterate directories
-//        try (Stream<Path> walk = Files.walk(balaCache)) {
-//
-//            List<Path> balaList = walk
-//                    .filter(pathMatcher::matches)
-//                    .filter(this::isTemplateBala)
-//                    .collect(Collectors.toList());
-//
-//            // Convert the bala list to string list.
-//            templates = balaList.stream()
-//                    .map(this::getModuleToml)
-//                    .filter(o -> o != null)
-//                    .map(m -> {
-//                        return m.getModule_organization() + "/" + m.getModule_name();
-//                    })
-//                    .distinct()
-//                    .collect(Collectors.toList());
-//        } catch (IOException e) {
-//            CommandUtil.printError(errStream,
-//                    "Unable to read home cache",
-//                    null,
-//                    false);
-//            Runtime.getRuntime().exit(1);
-//        }
-//        // filter template modules
-//        return templates;
-//    }
-//
-//    private Module getModuleToml(Path balaPath) {
-//        URI zipURI = URI.create("jar:" + balaPath.toUri().toString());
-//        try (FileSystem zipfs = FileSystems.newFileSystem(zipURI, new HashMap<>())) {
-//            Path metaDataToml = zipfs.getPath("metadata", "MODULE.toml");
-//            // We do a string comparison to be efficient.
-//            String content = new String(Files.readAllBytes(metaDataToml), StandardCharsets.UTF_8);
-//            Toml toml = new Toml().read(content);
-//            return toml.to(Module.class);
-//        } catch (IOException e) {
-//            return null;
-//        }
-//    }
-
-//    private boolean isTemplateBala(Path balaPath) {
-//        URI zipURI = URI.create("jar:" + balaPath.toUri().toString());
-//        try (FileSystem zipfs = FileSystems.newFileSystem(zipURI, new HashMap<>())) {
-//            Path metaDataToml = zipfs.getPath("metadata", "MODULE.toml");
-//            // We do a string comparison to be efficient.
-//            return new String(Files.readAllBytes(metaDataToml), StandardCharsets.UTF_8)
-//                    .contains("template = \"true\"");
-//        } catch (IOException e) {
-//            // we simply ignore the bala file
-//        }
-//        return false;
-//    }
+    /**
+     * Modify the file names to have the module name in them.
+     *
+     * @param projectPath project path
+     * @param moduleName  module name
+     * @param template   template
+     * @throws IOException if an error occurs
+     */
+    private void modifyTestFileName(Path projectPath, String moduleName, String template) throws IOException {
+        String validModuleName = guessModuleName(moduleName);
+        String templateLowerCase = template.toLowerCase(Locale.getDefault());
+        Path modulePath = projectPath.resolve(ProjectConstants.MODULES_ROOT).resolve(moduleName);
+        Path source = modulePath.resolve(templateLowerCase + ProjectConstants.BLANG_SOURCE_EXT);
+        Files.move(source,
+                source.resolveSibling(validModuleName + ProjectConstants.BLANG_SOURCE_EXT),
+                StandardCopyOption.REPLACE_EXISTING);
+        Path testSource = modulePath.resolve(ProjectConstants.TEST_DIR_NAME)
+                .resolve(templateLowerCase + TEST_FILE_SUFFIX);
+        Files.move(testSource,
+                testSource.resolveSibling(validModuleName + TEST_FILE_SUFFIX),
+                StandardCopyOption.REPLACE_EXISTING);
+    }
 }
