@@ -19,9 +19,18 @@
 package io.ballerina.cli.cmd;
 
 import io.ballerina.cli.BLauncherCmd;
+import io.ballerina.projects.CompilationCache;
+import io.ballerina.projects.PackageResolution;
 import io.ballerina.projects.Project;
 import io.ballerina.projects.ProjectException;
+import io.ballerina.projects.ProjectKind;
+import io.ballerina.projects.ProjectLoadResult;
+import io.ballerina.projects.ResolvedPackageDependency;
 import io.ballerina.projects.directory.BuildProject;
+import io.ballerina.projects.directory.ProjectLoader;
+import io.ballerina.projects.directory.WorkspaceProject;
+import io.ballerina.projects.environment.ResolutionOptions;
+import io.ballerina.projects.repos.FileSystemCache;
 import io.ballerina.projects.util.ProjectConstants;
 import io.ballerina.projects.util.ProjectUtils;
 import picocli.CommandLine;
@@ -29,27 +38,30 @@ import picocli.CommandLine;
 import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.List;
 
 import static io.ballerina.cli.cmd.Constants.CLEAN_COMMAND;
+import static io.ballerina.projects.util.ProjectConstants.DIST_CACHE_DIRECTORY;
 
 /**
  * This class represents the "bal clean" command.
  *
  * @since 2.0.0
  */
-@CommandLine.Command(name = CLEAN_COMMAND, description = "Ballerina clean - Cleans out the target directory of a " +
-                                                         "project.")
+@CommandLine.Command(name = CLEAN_COMMAND, description = "Clean the artifacts generated during the build")
 public class CleanCommand implements BLauncherCmd {
     private final PrintStream outStream;
     private final Path projectPath;
-    private boolean exitWhenFinish;
-    
+    private final boolean exitWhenFinish;
+
     @CommandLine.Option(names = {"--help", "-h"}, hidden = true)
     private boolean helpFlag;
 
     @CommandLine.Option(names = "--target-dir", description = "target directory path")
     private Path targetDir;
+
+    @CommandLine.Option(names = "--dependency-cache", description = "clean the caches of project dependencies")
+    private boolean depCache;
 
     public CleanCommand(Path projectPath, boolean exitWhenFinish) {
         this.projectPath = projectPath;
@@ -58,16 +70,23 @@ public class CleanCommand implements BLauncherCmd {
     }
 
     public CleanCommand() {
-        this.projectPath = Paths.get(System.getProperty(ProjectConstants.USER_DIR));
+        this.projectPath = Path.of(System.getProperty(ProjectConstants.USER_DIR));
         this.outStream = System.out;
         this.exitWhenFinish = true;
     }
 
-    public CleanCommand(Path projectPath, boolean exitWhenFinish, Path targetDir) {
+    public CleanCommand(Path projectPath, PrintStream printStream, boolean exitWhenFinish, Path targetDir) {
         this.projectPath = projectPath;
-        this.outStream =  System.out;
+        this.outStream = printStream;
         this.exitWhenFinish = exitWhenFinish;
         this.targetDir = targetDir;
+    }
+
+    public CleanCommand(Path projectPath, PrintStream printStream, boolean depCache, boolean exitWhenFinish) {
+        this.projectPath = projectPath;
+        this.outStream =  printStream;
+        this.exitWhenFinish = exitWhenFinish;
+        this.depCache = depCache;
     }
     
     @Override
@@ -78,36 +97,134 @@ public class CleanCommand implements BLauncherCmd {
             return;
         }
 
-        if (this.targetDir == null) {
-            try {
-                Project project = BuildProject.load(this.projectPath);
-                this.targetDir = project.targetDir();
-            } catch (ProjectException e) {
-                CommandUtil.printError(this.outStream, e.getMessage(), null, false);
-                CommandUtil.exitError(this.exitWhenFinish);
-                return;
+        if (this.targetDir != null) {
+            if (Files.notExists(this.targetDir)) {
+                CommandUtil.printError(this.outStream,
+                        "provided target directory '" + this.targetDir + "' does not exist.",
+                        null, false);
+            } else if (!Files.isDirectory(this.targetDir)) {
+                CommandUtil.printError(this.outStream,
+                        "provided target path '" + this.targetDir + "' is not a directory.",
+                        null, false);
+            } else {
+                Path cacheDir = this.targetDir.resolve("cache");
+                boolean isValidTarget = Files.exists(cacheDir)
+                        && (Files.exists(this.targetDir.resolve(ProjectConstants.BALA_DIR_NAME))
+                        || Files.exists(this.targetDir.resolve(ProjectConstants.BIN_DIR_NAME))
+                        || Files.exists(this.targetDir.resolve(ProjectConstants.TARGET_API_DOC_DIRECTORY))
+                        || Files.exists(cacheDir.resolve(ProjectConstants.TESTS_CACHE_DIR_NAME)));
+
+                if (!isValidTarget) {
+                    CommandUtil.printError(this.outStream,
+                            "provided target directory '" + this.targetDir +
+                                    "' is not a valid target directory.",
+                            null, false);
+                    return;
+                }
+                ProjectUtils.deleteDirectory(this.targetDir);
+                this.outStream.println("Successfully deleted '" + this.targetDir);
             }
+            return;
         }
 
-        // Delete the target directory
-        if (Files.notExists(this.targetDir)) {
-            CommandUtil.printError(this.outStream,
-                    "provided target directory '" + this.targetDir + "' does not exist.",
+        ProjectLoadResult loadResult;
+        try {
+            loadResult = ProjectLoader.load(this.projectPath);
+        } catch (ProjectException e) {
+            CommandUtil.printError(this.outStream, "invalid project directory: " + e.getMessage(),
                     null, false);
             CommandUtil.exitError(this.exitWhenFinish);
             return;
         }
-        if (!Files.isDirectory(this.targetDir)) {
+
+        Project project = loadResult.project();
+        if (project.kind().equals(ProjectKind.SINGLE_FILE_PROJECT)) {
             CommandUtil.printError(this.outStream,
-                    "provided target path '" + this.targetDir + "' is not a directory.",
+                    "clean command is not supported for single file projects.",
                     null, false);
             CommandUtil.exitError(this.exitWhenFinish);
             return;
         }
-        ProjectUtils.deleteDirectory(this.targetDir);
-        this.outStream.println("Successfully deleted '" + this.targetDir + "'.");
+
+        if (project.kind().equals(ProjectKind.WORKSPACE_PROJECT)) {
+            WorkspaceProject workspaceProject = (WorkspaceProject) project;
+            List<BuildProject> projectList;
+
+            if (depCache) {
+                ResolutionOptions resolutionOptions = ResolutionOptions.builder().setOffline(true).build();
+                projectList = workspaceProject.getResolution(resolutionOptions).dependencyGraph()
+                        .toTopologicallySortedList();
+            } else {
+                projectList = workspaceProject.projects();
+            }
+            for (BuildProject buildProject : projectList) {
+                if (depCache) {
+                    cleanDependencyCaches(project);
+                }
+                cleanProject(buildProject);
+            }
+            cleanProject(project);
+        } else {
+            if (depCache) {
+                cleanDependencyCaches(project);
+            }
+            cleanProject(project);
+        }
     }
-    
+
+    private void cleanDependencyCaches(Project project) {
+        ResolutionOptions resolutionOptions = ResolutionOptions.builder().setOffline(true)
+                .setSticky(project.buildOptions().sticky()).setPackageLockingMode(project.buildOptions().lockingMode())
+                .build();
+        PackageResolution packageResolution = project.currentPackage().getResolution(resolutionOptions);
+        for (ResolvedPackageDependency packageDependency : packageResolution.allDependencies()) {
+            Project dependency = packageDependency.packageInstance().project();
+            if (dependency.kind().equals(ProjectKind.BALA_PROJECT)) {
+                if (ProjectUtils.isBuiltInPackage(packageDependency.packageInstance().packageOrg(),
+                        packageDependency.packageInstance().packageName().toString())) {
+                    continue;
+                }
+                if (Files.notExists(dependency.sourceRoot())) {
+                    continue;
+                }
+                // if the cache is in the distribution, do not delete
+                if (dependency.sourceRoot().startsWith(ProjectUtils.getBallerinaHomePath()
+                        .resolve(DIST_CACHE_DIRECTORY))) {
+                    continue;
+                }
+                ProjectUtils.deleteDirectory(dependency.sourceRoot());
+                this.outStream.println("Successfully deleted " + dependency.sourceRoot());
+                Path birPath = ((FileSystemCache) dependency.projectEnvironmentContext()
+                        .getService(CompilationCache.class)).cachePath();
+                if (birPath == null || Files.notExists(birPath)) {
+                    continue;
+                }
+                ProjectUtils.deleteDirectory(birPath);
+                this.outStream.println("Successfully deleted " + birPath);
+            }
+        }
+    }
+
+    private void cleanProject(Project project) {
+        Path generatedDir;
+        try {
+            // delete the generated directory
+            generatedDir = project.sourceRoot().resolve(ProjectConstants.GENERATED_MODULES_ROOT);
+        } catch (ProjectException e) {
+            CommandUtil.printError(this.outStream, e.getMessage(), null, false);
+            CommandUtil.exitError(this.exitWhenFinish);
+            return;
+        }
+        if (Files.exists(project.targetDir())) {
+            ProjectUtils.deleteDirectory(project.targetDir());
+            this.outStream.println("Successfully deleted " + project.targetDir());
+        }
+        if (Files.exists(generatedDir)) {
+            ProjectUtils.deleteDirectory(generatedDir);
+            this.outStream.println("Successfully deleted " + generatedDir);
+        }
+    }
+
     @Override
     public String getName() {
         return CLEAN_COMMAND;
@@ -115,7 +232,7 @@ public class CleanCommand implements BLauncherCmd {
     
     @Override
     public void printLongDesc(StringBuilder out) {
-        out.append("Cleans the \"target\" directory of a Ballerina project. \n");
+        out.append(BLauncherCmd.getCommandUsageInfo(CLEAN_COMMAND));
     }
     
     @Override
