@@ -21,24 +21,46 @@ package io.ballerina.cli.cmd;
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
+import io.ballerina.projects.BuildOptions;
+import io.ballerina.projects.DependencyGraph;
+import io.ballerina.projects.JBallerinaBackend;
 import io.ballerina.projects.JvmTarget;
+import io.ballerina.projects.Package;
+import io.ballerina.projects.PackageCompilation;
+import io.ballerina.projects.PackageManifest;
 import io.ballerina.projects.PackageVersion;
+import io.ballerina.projects.PlatformLibraryScope;
+import io.ballerina.projects.Project;
+import io.ballerina.projects.ProjectEnvironmentBuilder;
 import io.ballerina.projects.ProjectException;
+import io.ballerina.projects.ResolvedPackageDependency;
 import io.ballerina.projects.SemanticVersion;
 import io.ballerina.projects.Settings;
+import io.ballerina.projects.bala.BalaProject;
+import io.ballerina.projects.directory.BuildProject;
+import io.ballerina.projects.directory.WorkspaceProject;
+import io.ballerina.projects.environment.PackageLockingMode;
+import io.ballerina.projects.environment.ResolutionOptions;
+import io.ballerina.projects.internal.bala.BalToolJson;
+import io.ballerina.projects.internal.bala.BalaJson;
 import io.ballerina.projects.internal.bala.DependencyGraphJson;
+import io.ballerina.projects.internal.bala.ModuleDependency;
 import io.ballerina.projects.internal.bala.PackageJson;
+import io.ballerina.projects.internal.model.BuildJson;
 import io.ballerina.projects.internal.model.Dependency;
+import io.ballerina.projects.internal.model.Target;
+import io.ballerina.projects.repos.FileSystemCache;
 import io.ballerina.projects.util.FileUtils;
 import io.ballerina.projects.util.ProjectConstants;
 import io.ballerina.projects.util.ProjectUtils;
+import io.ballerina.tools.diagnostics.Diagnostic;
 import org.ballerinalang.central.client.CentralAPIClient;
 import org.ballerinalang.central.client.CentralClientConstants;
 import org.ballerinalang.central.client.exceptions.CentralClientException;
 import org.ballerinalang.central.client.exceptions.PackageAlreadyExistsException;
-import org.ballerinalang.toml.exceptions.SettingsTomlException;
 import org.wso2.ballerinalang.util.RepoUtils;
 
+import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
@@ -50,32 +72,51 @@ import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
+import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
+import java.nio.file.attribute.BasicFileAttributes;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Formatter;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.StringJoiner;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static io.ballerina.cli.launcher.LauncherUtils.createLauncherException;
+import static io.ballerina.projects.util.ProjectConstants.BALA_JSON;
+import static io.ballerina.projects.util.ProjectConstants.BALLERINA_TOML;
+import static io.ballerina.projects.util.ProjectConstants.BAL_TOOL_JSON;
+import static io.ballerina.projects.util.ProjectConstants.BAL_TOOL_TOML;
+import static io.ballerina.projects.util.ProjectConstants.BLANG_SOURCE_EXT;
 import static io.ballerina.projects.util.ProjectConstants.DEPENDENCIES_TOML;
 import static io.ballerina.projects.util.ProjectConstants.DEPENDENCY_GRAPH_JSON;
+import static io.ballerina.projects.util.ProjectConstants.EXEC_BACKUP_DIR_NAME;
+import static io.ballerina.projects.util.ProjectConstants.LIB_DIR;
+import static io.ballerina.projects.util.ProjectConstants.MODULES_ROOT;
 import static io.ballerina.projects.util.ProjectConstants.PACKAGE_JSON;
+import static io.ballerina.projects.util.ProjectConstants.SETTINGS_FILE_NAME;
+import static io.ballerina.projects.util.ProjectConstants.TEST_DIR_NAME;
+import static io.ballerina.projects.util.ProjectConstants.TOOL_DIR;
+import static io.ballerina.projects.util.ProjectUtils.deleteDirectory;
 import static io.ballerina.projects.util.ProjectUtils.getAccessTokenOfCLI;
 import static io.ballerina.projects.util.ProjectUtils.guessPkgName;
 import static io.ballerina.projects.util.ProjectUtils.initializeProxy;
 import static java.lang.Runtime.getRuntime;
-import static java.nio.file.Files.write;
 import static org.wso2.ballerinalang.programfile.ProgramFileConstants.ANY_PLATFORM;
-import static org.wso2.ballerinalang.programfile.ProgramFileConstants.SUPPORTED_PLATFORMS;
 import static org.wso2.ballerinalang.util.RepoUtils.readSettings;
 
 /**
@@ -83,20 +124,35 @@ import static org.wso2.ballerinalang.util.RepoUtils.readSettings;
  *
  * @since 2.0.0
  */
-public class CommandUtil {
+public final class CommandUtil {
+
     public static final String ORG_NAME = "ORG_NAME";
     public static final String PKG_NAME = "PKG_NAME";
     public static final String DIST_VERSION = "DIST_VERSION";
+    public static final String TOOL_ID = "TOOL_ID";
+    public static final String USER_HOME = "user.home";
     public static final String GITIGNORE = "gitignore";
     public static final String DEVCONTAINER = "devcontainer";
     public static final String NEW_CMD_DEFAULTS = "new_cmd_defaults";
     public static final String CREATE_CMD_TEMPLATES = "create_cmd_templates";
+    public static final String LIBS_DIR = "libs";
+    public static final String DEFAULT_TEMPLATE = "default";
+    public static final String MAIN_TEMPLATE = "main";
+    public static final String FILE_STRING_SEPARATOR = ", ";
+    public static final String SHA_256 = "SHA-256";
+    public static final String BYTE_TO_HEX_FORMAT = "%02x";
+    public static final String JAR = ".jar";
+    public static final String TEST_FAILURES_ERROR = "error: there are test failures";
     private static FileSystem jarFs;
     private static Map<String, String> env;
     private static PrintStream errStream;
     private static PrintStream outStream;
     private static Path homeCache;
     private static boolean exitWhenFinish;
+    private static String platform;
+
+    private CommandUtil() {
+    }
 
     static void setPrintStream(PrintStream errStream) {
         CommandUtil.errStream = errStream;
@@ -154,13 +210,8 @@ public class CommandUtil {
 
 
     static void applyTemplate(String orgName, String templatePkgName, String version, String packageName,
-                              Path projectPath, Path balaCache) {
-        Path balaPath = balaCache.resolve(
-                ProjectUtils.getRelativeBalaPath(orgName, templatePkgName, version, null));
-        //First we will check for a bala that match any platform
-        String platform = findPlatform(balaPath);
-        balaPath = balaCache.resolve(
-                ProjectUtils.getRelativeBalaPath(orgName, templatePkgName, version, platform));
+                              Path projectPath, Path balaCache, List<Path> filesInDir) {
+        Path balaPath = getPlatformSpecificBalaPath(orgName, templatePkgName, version, balaCache);
         if (!Files.exists(balaPath)) {
             CommandUtil.printError(errStream,
                     "unable to find the bala: " + balaPath,
@@ -169,9 +220,9 @@ public class CommandUtil {
             CommandUtil.exitError(exitWhenFinish);
         }
         try {
-            addModules(balaPath, projectPath, packageName, platform);
+            addModules(balaPath, projectPath, packageName);
         } catch (IOException e) {
-            ProjectUtils.deleteDirectory(projectPath);
+            ProjectUtils.deleteSelectedFilesInDirectory(projectPath, filesInDir);
             CommandUtil.printError(errStream,
                     "error occurred while creating the package: " + e.getMessage(),
                     null,
@@ -180,17 +231,21 @@ public class CommandUtil {
         }
     }
 
-    private static void addModules(Path balaPath, Path projectPath, String packageName, String platform)
+    private static void addModules(Path balaPath, Path projectPath, String packageName)
             throws IOException {
         Gson gson = new Gson();
         Path packageJsonPath = balaPath.resolve(PACKAGE_JSON);
         Path dependencyGraphJsonPath = balaPath.resolve(DEPENDENCY_GRAPH_JSON);
-        PackageJson packageJson = null;
-        DependencyGraphJson dependencyGraphJson = null;
+        Path balToolJsonPath = balaPath.resolve(TOOL_DIR).resolve(BAL_TOOL_JSON);
+        PackageJson templatePackageJson = null;
+        BalaJson templateBalaJson = null;
+        Path balaJsonPath = balaPath.resolve(BALA_JSON);
+        DependencyGraphJson templateDependencyGraphJson = null;
+        BalToolJson templateBalToolJson = null;
 
         try (InputStream inputStream = new FileInputStream(String.valueOf(packageJsonPath))) {
             Reader fileReader = new InputStreamReader(inputStream, StandardCharsets.UTF_8);
-            packageJson = gson.fromJson(fileReader, PackageJson.class);
+            templatePackageJson = gson.fromJson(fileReader, PackageJson.class);
         } catch (IOException e) {
             printError(errStream,
                     "Error while reading the package json file: " + e.getMessage(),
@@ -199,10 +254,21 @@ public class CommandUtil {
             getRuntime().exit(1);
         }
 
+        try (InputStream inputStream = new FileInputStream(String.valueOf(balaJsonPath))) {
+            Reader fileReader = new InputStreamReader(inputStream, StandardCharsets.UTF_8);
+            templateBalaJson = gson.fromJson(fileReader, BalaJson.class);
+        } catch (IOException e) {
+            printError(errStream,
+                    "Error while reading the bala.json file: " + e.getMessage(),
+                    null,
+                    false);
+            getRuntime().exit(1);
+        }
+
         if (dependencyGraphJsonPath.toFile().exists()) {
             try (InputStream inputStream = new FileInputStream(String.valueOf(dependencyGraphJsonPath))) {
                 Reader fileReader = new InputStreamReader(inputStream, StandardCharsets.UTF_8);
-                dependencyGraphJson = gson.fromJson(fileReader, DependencyGraphJson.class);
+                templateDependencyGraphJson = gson.fromJson(fileReader, DependencyGraphJson.class);
             } catch (IOException e) {
                 printError(errStream,
                         "Error while reading the dependency graph json file: " + e.getMessage(),
@@ -212,7 +278,20 @@ public class CommandUtil {
             }
         }
 
-        if (!packageJson.getTemplate()) {
+        if (balToolJsonPath.toFile().exists()) {
+            try (InputStream inputStream = new FileInputStream(String.valueOf(balToolJsonPath))) {
+                Reader fileReader = new InputStreamReader(inputStream, StandardCharsets.UTF_8);
+                templateBalToolJson = gson.fromJson(fileReader, BalToolJson.class);
+            } catch (IOException e) {
+                printError(errStream,
+                        "Error while reading the " + BAL_TOOL_JSON + " file: " + e.getMessage(),
+                        null,
+                        false);
+                getRuntime().exit(1);
+            }
+        }
+
+        if (!templatePackageJson.getTemplate()) {
             throw createLauncherException("unable to create the package: " +
                     "specified package is not a template");
         }
@@ -221,21 +300,32 @@ public class CommandUtil {
         Path ballerinaToml = projectPath.resolve(ProjectConstants.BALLERINA_TOML);
         Files.createDirectories(projectPath);
         Files.createFile(ballerinaToml);
-        writeBallerinaToml(ballerinaToml, packageJson, packageName, platform);
+        writeBallerinaToml(ballerinaToml, templatePackageJson, templateBalaJson, packageName, platform);
 
         if (dependencyGraphJsonPath.toFile().exists()) {
             // Create Dependencies.toml
             Path dependenciesToml = projectPath.resolve(DEPENDENCIES_TOML);
             Files.createFile(dependenciesToml);
-            writeDependenciesToml(dependenciesToml, dependencyGraphJson);
+            writeDependenciesToml(projectPath, templateDependencyGraphJson, templatePackageJson);
         }
 
-        // Create Package.md
-        Path packageMDFilePath = balaPath.resolve("docs")
-                .resolve(ProjectConstants.PACKAGE_MD_FILE_NAME);
-        Path toPackageMdPath = projectPath.resolve(ProjectConstants.PACKAGE_MD_FILE_NAME);
-        if (Files.exists(packageMDFilePath)) {
-            Files.copy(packageMDFilePath, toPackageMdPath, StandardCopyOption.REPLACE_EXISTING);
+        if (balToolJsonPath.toFile().exists()) {
+            // Create BalTool.toml and copy dependency jars
+            Path balToolToml = projectPath.resolve(BAL_TOOL_TOML);
+            Files.createFile(balToolToml);
+            writeBalToolToml(balToolToml, templateBalToolJson, packageName);
+            copyToolDependencies(projectPath, balaPath.resolve(TOOL_DIR).resolve(LIBS_DIR));
+        }
+
+        // Create README.md
+        Path toPackageMdPath = projectPath.resolve(ProjectConstants.README_MD_FILE_NAME);
+        Path docFilePath = balaPath.resolve("docs").resolve(ProjectConstants.PACKAGE_MD_FILE_NAME);
+        if (templatePackageJson.getReadme() != null) {
+            // New bala structure
+            docFilePath = balaPath.resolve(templatePackageJson.getReadme());
+        }
+        if (Files.exists(docFilePath)) {
+            Files.copy(docFilePath, toPackageMdPath, StandardCopyOption.REPLACE_EXISTING);
         }
 
         // Create default .gitignore
@@ -244,12 +334,23 @@ public class CommandUtil {
         createDefaultDevContainer(projectPath);
 
         // Create modules
-        String templatePkgName = packageJson.getName();
+        String templatePkgName = templatePackageJson.getName();
         Path modulesRoot = balaPath.resolve(ProjectConstants.MODULES_ROOT);
+        Path moduleMdDirRoot = balaPath.resolve("docs").resolve(ProjectConstants.MODULES_ROOT);
         List<Path> modulesList;
         try (Stream<Path> pathStream = Files.list(modulesRoot)) {
-            modulesList = pathStream.collect(Collectors.toList());
+            modulesList = pathStream.toList();
         }
+        copyIcon(balaPath, projectPath);
+        copyPlatformLibraries(balaPath, projectPath);
+        copyIncludeFiles(balaPath, projectPath, templatePackageJson);
+
+        Map<String, String> otherModulesMap = new HashMap<>();
+        if (templatePackageJson.getModules() != null) {
+            otherModulesMap = templatePackageJson.getModules().stream().collect(
+                    Collectors.toMap(PackageManifest.Module::name, PackageManifest.Module::readme));
+        }
+
         for (Path moduleRoot : modulesList) {
             Path moduleDir = Optional.of(moduleRoot.getFileName()).get();
             Path destDir;
@@ -260,30 +361,36 @@ public class CommandUtil {
                 destDir = projectPath.resolve(ProjectConstants.MODULES_ROOT).resolve(moduleDirName);
                 Files.createDirectories(destDir);
             }
-            Files.walkFileTree(moduleRoot, new FileUtils.Copy(moduleRoot, destDir));
-        }
+            Files.walkFileTree(moduleRoot, new FileUtils.Copy(moduleRoot, destDir, templatePkgName, packageName));
 
-        // Copy platform libraries
-        Path platformLibPath = balaPath.resolve("platform").resolve(platform);
-        if (Files.exists(platformLibPath)) {
-            Path libs = projectPath.resolve("libs");
-            Files.createDirectories(libs);
-            Files.walkFileTree(platformLibPath, new FileUtils.Copy(platformLibPath, libs));
-        }
+            // Copy README.md
+            Path moduleMdSource = moduleMdDirRoot.resolve(moduleDir).resolve(ProjectConstants.MODULE_MD_FILE_NAME);
 
-        // Copy icon
+            if (templatePackageJson.getReadme() != null) {
+                String moduleName = Optional.of(moduleRoot.getFileName()).get().toString();
+                if (otherModulesMap.containsKey(moduleName)) {
+                    moduleMdSource = balaPath.resolve(otherModulesMap.get(moduleName));
+                }
+            }
+            if (Files.exists(moduleMdSource)) {
+                Files.copy(moduleMdSource, destDir.resolve(ProjectConstants.README_MD_FILE_NAME),
+                        StandardCopyOption.REPLACE_EXISTING);
+            }
+        }
+    }
+
+    private static void copyIcon(Path balaPath, Path projectPath) {
         Path docsPath = balaPath.resolve(ProjectConstants.BALA_DOCS_DIR);
         try (Stream<Path> pathStream = Files.walk(docsPath, 1)) {
             List<Path> icon = pathStream
                     .filter(FileSystems.getDefault().getPathMatcher("glob:**.png")::matches)
-                    .collect(Collectors.toList());
-            if (icon.isEmpty()) {
-                return;
+                    .toList();
+            if (!icon.isEmpty()) {
+                Path projectDocsDir = projectPath.resolve(ProjectConstants.BALA_DOCS_DIR);
+                Files.createDirectory(projectDocsDir);
+                Path projectIconPath = projectDocsDir.resolve(Optional.of(icon.get(0).getFileName()).get());
+                Files.copy(icon.get(0), projectIconPath, StandardCopyOption.REPLACE_EXISTING);
             }
-            Path projectDocsDir = projectPath.resolve(ProjectConstants.BALA_DOCS_DIR);
-            Files.createDirectory(projectDocsDir);
-            Path projectIconPath = projectDocsDir.resolve(Optional.of(icon.get(0).getFileName()).get());
-            Files.copy(icon.get(0), projectIconPath, StandardCopyOption.REPLACE_EXISTING);
         } catch (IOException e) {
             printError(errStream,
                     "Error while retrieving the icon: " + e.getMessage(),
@@ -291,6 +398,49 @@ public class CommandUtil {
                     false);
             getRuntime().exit(1);
         }
+    }
+
+    private static void copyPlatformLibraries(Path balaPath, Path projectPath) throws IOException {
+        Path platformLibPath = balaPath.resolve("platform").resolve(platform);
+        if (Files.exists(platformLibPath)) {
+            Path libs = projectPath.resolve("libs");
+            Files.createDirectories(libs);
+            Files.walkFileTree(platformLibPath, new FileUtils.Copy(platformLibPath, libs));
+        }
+    }
+
+    private static void copyIncludeFiles(Path balaPath, Path projectPath, PackageJson templatePackageJson)
+            throws IOException {
+        if (templatePackageJson.getInclude() != null) {
+            String templatePkgName = templatePackageJson.getName();
+            List<Path> includePaths = ProjectUtils.getPathsMatchingIncludePatterns(
+                    templatePackageJson.getInclude(), balaPath);
+
+            for (Path includePath : includePaths) {
+                Path moduleNameUpdatedIncludePath = updateModuleDirectoryNaming(includePath, balaPath, templatePkgName);
+                Path fromIncludeFilePath = balaPath.resolve(includePath);
+                Path toIncludeFilePath = projectPath.resolve(moduleNameUpdatedIncludePath);
+                if (Files.notExists(toIncludeFilePath)) {
+                    Files.createDirectories(toIncludeFilePath);
+                    Files.walkFileTree(fromIncludeFilePath, new FileUtils.Copy(fromIncludeFilePath, toIncludeFilePath));
+                }
+            }
+        }
+    }
+
+    private static Path updateModuleDirectoryNaming(Path includePath, Path balaPath, String templatePkgName) {
+        Path modulesDirPath = balaPath.resolve(ProjectConstants.MODULES_ROOT);
+        Path absoluteIncludePath = balaPath.resolve(includePath);
+        if (absoluteIncludePath.startsWith(modulesDirPath)) {
+            Path moduleRootPath = modulesDirPath.relativize(absoluteIncludePath).subpath(0, 1);
+            String moduleDirName = Optional.of(moduleRootPath.getFileName()).get().toString();
+            String destinationDirName = moduleDirName.split(templatePkgName + ProjectConstants.DOT, 2)[1];
+            Path includePathRelativeToModuleRoot = modulesDirPath.resolve(moduleRootPath)
+                    .relativize(absoluteIncludePath);
+            return Path.of(ProjectConstants.MODULES_ROOT).resolve(destinationDirName)
+                    .resolve(includePathRelativeToModuleRoot);
+        }
+        return includePath;
     }
 
     /**
@@ -303,12 +453,7 @@ public class CommandUtil {
         String orgName = findOrg(template);
         String version = findPkgVersion(template);
         if (version != null) {
-            //First we will check for a bala that match any platform
-            Path balaPath = balaCache.resolve(
-                    ProjectUtils.getRelativeBalaPath(orgName, packageName, version, null));
-            String platform = findPlatform(balaPath);
-            balaPath = balaCache.resolve(
-                    ProjectUtils.getRelativeBalaPath(orgName, packageName, version, platform));
+            Path balaPath = getPlatformSpecificBalaPath(orgName, packageName, version, balaCache);
             if (Files.exists(balaPath)) {
                 return balaPath;
             } else {
@@ -319,7 +464,8 @@ public class CommandUtil {
         }
     }
 
-    public static void initPackageFromCentral(Path balaCache, Path projectPath, String packageName, String template) {
+    public static void initPackageFromCentral(Path balaCache, Path projectPath, String packageName, String template,
+                                              List<Path> filesInDir) {
         System.setProperty(CentralClientConstants.ENABLE_OUTPUT_STREAM, "true");
         String templatePackageName = findPkgName(template);
         String orgName = findOrg(template);
@@ -350,35 +496,34 @@ public class CommandUtil {
                 version = latest.toString();
             }
         }
-
         if (version == null) {
             List<PackageVersion> packageVersions = getPackageVersions(pkgCacheParent);
             PackageVersion latest = findLatest(packageVersions);
             version = Objects.requireNonNull(latest).toString();
         }
-        applyTemplate(orgName, templatePackageName, version, packageName, projectPath, balaCache);
+        applyTemplate(orgName, templatePackageName, version, packageName, projectPath, balaCache, filesInDir);
     }
 
     private static void pullPackageFromRemote(String orgName, String packageName, String version, Path destination)
             throws CentralClientException {
-        for (String supportedPlatform : SUPPORTED_PLATFORMS) {
+        String supportedPlatform = Arrays.stream(JvmTarget.values())
+                .map(JvmTarget::code)
+                .collect(Collectors.joining(","));
             Settings settings;
-            try {
-                settings = readSettings();
-                // Ignore Settings.toml diagnostics in the pull command
-            } catch (SettingsTomlException e) {
-                // Ignore 'Settings.toml' parsing errors and return empty Settings object
-                settings = Settings.from();
-            }
-            CentralAPIClient client = new CentralAPIClient(RepoUtils.getRemoteRepoURL(),
-                    initializeProxy(settings.getProxy()),
-                    getAccessTokenOfCLI(settings));
-            client.pullPackage(orgName, packageName, version, destination, supportedPlatform,
-                    RepoUtils.getBallerinaVersion(), false);
-        }
+        settings = readSettings();
+        // Ignore Settings.toml diagnostics in the pull command
+
+        CentralAPIClient client = new CentralAPIClient(RepoUtils.getRemoteRepoURL(),
+                initializeProxy(settings.getProxy()), settings.getProxy().username(),
+                settings.getProxy().password(),
+                getAccessTokenOfCLI(settings), settings.getCentral().getConnectTimeout(),
+                settings.getCentral().getReadTimeout(), settings.getCentral().getWriteTimeout(),
+                settings.getCentral().getCallTimeout(), settings.getCentral().getMaxRetries());
+        client.pullPackage(orgName, packageName, version, destination, supportedPlatform,
+                RepoUtils.getBallerinaVersion(), false);
     }
 
-    public static void writeBallerinaToml(Path balTomlPath, PackageJson packageJson,
+    public static void writeBallerinaToml(Path balTomlPath, PackageJson packageJson, BalaJson balaJson,
                                           String packageName, String platform)
             throws IOException {
 
@@ -388,16 +533,6 @@ public class CommandUtil {
         Files.writeString(balTomlPath, "\nname = \"" + packageName + "\"", StandardOpenOption.APPEND);
         Files.writeString(balTomlPath, "\nversion = \"" + packageJson.getVersion() + "\"",
                 StandardOpenOption.APPEND);
-        List<String> newModuleNames = packageJson.getExport().stream().map(module ->
-                module.replaceFirst(packageJson.getName(), packageName)).collect(Collectors.toList());
-
-        StringJoiner stringJoiner = new StringJoiner(",");
-        for (String newModuleName : newModuleNames) {
-            stringJoiner.add("\"" + newModuleName + "\"");
-        }
-
-        Files.writeString(balTomlPath, "\nexport = [" + stringJoiner + "]"
-                .replaceFirst(packageJson.getName(), packageName), StandardOpenOption.APPEND);
         Files.writeString(balTomlPath, "\ndistribution = \"" + packageJson.getBallerinaVersion()
                 + "\"", StandardOpenOption.APPEND);
 
@@ -411,6 +546,31 @@ public class CommandUtil {
         Files.writeString(balTomlPath, "\n\n[build-options]", StandardOpenOption.APPEND);
         Files.writeString(balTomlPath, "\nobservabilityIncluded = true\n", StandardOpenOption.APPEND);
 
+        StringJoiner stringJoiner = new StringJoiner("\n");
+        if ("2.0.0".equals(balaJson.getBala_version())) {
+            List<String> newModuleNames = packageJson.getExport().stream().map(module ->
+                    module.replaceFirst(packageJson.getName(), packageName)).toList();
+
+            for (String newModuleName : newModuleNames) {
+                if (newModuleName.equals(packageName)) {
+                    continue;
+                }
+                stringJoiner.add("\n[[package.modules]]");
+                stringJoiner.add("name = \"" + newModuleName.replaceFirst(packageJson.getName(), packageName) + "\"");
+                stringJoiner.add("export = true");
+            }
+        } else if (packageJson.getModules() != null) {
+            for (PackageManifest.Module module : packageJson.getModules()) {
+                stringJoiner.add("\n[[package.modules]]");
+                stringJoiner.add("name = \"" + module.name().replaceFirst(packageJson.getName(), packageName) + "\"");
+                stringJoiner.add("export = true");
+            }
+        }
+
+        if (!stringJoiner.toString().isEmpty()) {
+            Files.writeString(balTomlPath, stringJoiner + "\n", StandardOpenOption.APPEND);
+        }
+
         JsonArray platformLibraries = packageJson.getPlatformDependencies();
         if (platformLibraries == null) {
             return;
@@ -418,10 +578,12 @@ public class CommandUtil {
         Files.writeString(balTomlPath, "\n[[platform." + platform + ".dependency]]", StandardOpenOption.APPEND);
         for (Object dependencies : platformLibraries) {
             JsonObject dependenciesObj = (JsonObject) dependencies;
-            String libPath = dependenciesObj.get("path").getAsString();
-            Path libName = Optional.of(Paths.get(libPath).getFileName()).get();
-            Path libRelPath = Paths.get("libs", libName.toString());
-            Files.writeString(balTomlPath, "\npath = \"" + libRelPath + "\"", StandardOpenOption.APPEND);
+            if (null == dependenciesObj.get("scope")) {
+                String libPath = dependenciesObj.get("path").getAsString();
+                Path libName = Optional.of(Path.of(libPath).getFileName()).get();
+                Path libRelPath = Path.of("libs", libName.toString());
+                Files.writeString(balTomlPath, "\npath = \"" + libRelPath + "\"", StandardOpenOption.APPEND);
+            }
 
             if (dependenciesObj.get("artifactId") != null) {
                 String artifactId = dependenciesObj.get("artifactId").getAsString();
@@ -437,61 +599,202 @@ public class CommandUtil {
                 Files.writeString(balTomlPath, "\nversion = \"" + dependencyVersion + "\"\n",
                         StandardOpenOption.APPEND);
             }
+            if (null != dependenciesObj.get("scope") && dependenciesObj.get("scope").getAsString().equals("provided")) {
+                String scope = dependenciesObj.get("scope").getAsString();
+                Files.writeString(balTomlPath, "scope = \"" + scope + "\"\n",
+                        StandardOpenOption.APPEND);
+                String artifactId = dependenciesObj.get("artifactId").getAsString();
+                printError(errStream,
+                        "WARNING: path for the platform dependency " + artifactId + " with provided scope " +
+                                "should be specified in the Ballerina.toml",
+                        null,
+                        false);
+            }
         }
     }
 
-    public static void writeDependenciesToml(Path depsTomlPath, DependencyGraphJson dependencyGraphJson)
+    public static void writeDependenciesToml(Path projectPath, DependencyGraphJson templateDependencyGraphJson,
+                                             PackageJson templatePackageJson)
             throws IOException {
-        String autoGenCode = "# AUTO-GENERATED FILE. DO NOT MODIFY.\n" +
-                "\n" +
-                "# This file is auto-generated by Ballerina for managing dependency versions.\n" +
-                "# It should not be modified by hand.\n" +
-                "\n";
+        Path depsTomlPath = projectPath.resolve(DEPENDENCIES_TOML);
+        String autoGenCode = """
+                # AUTO-GENERATED FILE. DO NOT MODIFY.
+
+                # This file is auto-generated by Ballerina for managing dependency versions.
+                # It should not be modified by hand.
+
+                """;
         Files.writeString(depsTomlPath, autoGenCode, StandardOpenOption.APPEND);
         String balTomlVersion = "[ballerina]\n" +
-                "version = \"" + RepoUtils.getBallerinaShortVersion() + "\"\n" +
                 "dependencies-toml-version = \"" + ProjectConstants.DEPENDENCIES_TOML_VERSION + "\"\n" +
                 "\n";
         Files.writeString(depsTomlPath, balTomlVersion, StandardOpenOption.APPEND);
 
-        StringBuilder pkgDesc = new StringBuilder();
-        for (Dependency packageDependency : dependencyGraphJson.getPackageDependencyGraph()) {
-            pkgDesc.append("[[package]]\n")
-                    .append("org = \"").append(packageDependency.getOrg()).append("\"\n")
-                    .append("name = \"").append(packageDependency.getName()).append("\"\n")
-                    .append("version = \"").append(packageDependency.getVersion()).append("\"\n");
-
-            StringBuilder dependenciesContent = new StringBuilder();
-            if (!packageDependency.getDependencies().isEmpty()) {
-                for (Dependency dependency : packageDependency.getDependencies()) {
-                    dependenciesContent.append("\t{org = \"").append(dependency.getOrg()).append("\", name = \"")
-                            .append(dependency.getName()).append("\"},\n");
-                }
-                String dependenciesPart = dependenciesContent.toString();
-                dependenciesPart = dependenciesPart.replaceFirst("\\s++$", "")
-                        .substring(0, dependenciesPart.replaceFirst("\\s++$", "").length() - 1);
-                pkgDesc.append("dependencies = [\n")
-                        .append(dependenciesPart)
-                        .append("\n]\n");
+        // Get current package module dependencies from dependency graph modules list
+        List<ModuleDependency> currentPkgModules = new ArrayList<>();
+        for (ModuleDependency module : templateDependencyGraphJson.getModuleDependencies()) {
+            if (module.getOrg().equals(templatePackageJson.getOrganization())
+                    && module.getPackageName().equals(templatePackageJson.getName())) {
+                List<ModuleDependency> currentPkgModuleDeps = module.getDependencies();
+                currentPkgModules.addAll(currentPkgModuleDeps);
             }
+        }
 
-            StringBuilder modulesContent = new StringBuilder();
-            if (!packageDependency.getModules().isEmpty()) {
-                for (Dependency.Module module : packageDependency.getModules()) {
-                    modulesContent.append("\t{org = \"").append(module.org()).append("\", packageName = \"")
-                            .append(module.packageName()).append("\", moduleName = \"").append(module.moduleName())
-                            .append("\"},\n");
+        StringBuilder pkgDesc = new StringBuilder();
+        for (Dependency packageDependency : templateDependencyGraphJson.getPackageDependencyGraph()) {
+            // Current package
+            if (templatePackageJson.getOrganization().equals(packageDependency.getOrg())
+                    && templatePackageJson.getName().equals(packageDependency.getName())) {
+                pkgDesc.append("[[package]]\n")
+                        .append("org = \"").append(packageDependency.getOrg()).append("\"\n")
+                        .append("name = \"").append(ProjectUtils.defaultName(projectPath)).append("\"\n")
+                        .append("version = \"").append(packageDependency.getVersion()).append("\"\n");
+                // write `dependencies` array content
+                pkgDesc.append(getDependenciesArrayContent(packageDependency));
+                // Get current package modules from dependency graph modules list
+                // Write them to the `modules` array
+                pkgDesc.append(getDependencyModulesArrayContent(
+                        templateDependencyGraphJson.getModuleDependencies(), true, projectPath));
+            } else {
+                // Not current package
+                pkgDesc.append("[[package]]\n")
+                        .append("org = \"").append(packageDependency.getOrg()).append("\"\n")
+                        .append("name = \"").append(packageDependency.getName()).append("\"\n")
+                        .append("version = \"").append(packageDependency.getVersion()).append("\"\n");
+                // write `dependencies` array content
+                pkgDesc.append(getDependenciesArrayContent(packageDependency));
+                // Check this package dependency has current package modules
+                // If yes, add to `packageDependencyModules` list to write to the `modules` array
+                List<ModuleDependency> packageDependencyModules = new ArrayList<>();
+                for (ModuleDependency module : currentPkgModules) {
+                    if (packageDependency.getOrg().equals(module.getOrg())
+                            && packageDependency.getName().equals(module.getPackageName())) {
+                        packageDependencyModules.add(module);
+                    }
                 }
-                String modulesPart = modulesContent.toString();
-                modulesPart = modulesPart.replaceFirst("\\s++$", "")
-                        .substring(0, modulesPart.replaceFirst("\\s++$", "").length() - 1);
-                pkgDesc.append("modules = [\n")
-                        .append(modulesPart)
-                        .append("\n]\n");
+                // Write `packageDependencyModules` to `modules` array
+                if (!packageDependencyModules.isEmpty()) {
+                    pkgDesc.append(getDependencyModulesArrayContent(packageDependencyModules, false, projectPath));
+                }
             }
             pkgDesc.append("\n");
         }
         Files.writeString(depsTomlPath, pkgDesc.toString(), StandardOpenOption.APPEND);
+    }
+
+    public static Path getPlatformSpecificBalaPath(String orgName, String pkgName, String version,
+                                                    Path balaCache) {
+        Path balaPath = balaCache.resolve(
+                ProjectUtils.getRelativeBalaPath(orgName, pkgName, version, null));
+        //First we will check for a bala that match any platform
+        platform = ANY_PLATFORM;
+        if (!Files.exists(balaPath)) {
+            for (JvmTarget supportedPlatform : JvmTarget.values()) {
+                balaPath = balaCache.resolve(
+                        ProjectUtils.getRelativeBalaPath(orgName, pkgName, version, supportedPlatform.code()));
+                if (Files.exists(balaPath)) {
+                    platform = supportedPlatform.code();
+                    break;
+                }
+            }
+        }
+        return balaPath;
+    }
+
+    /**
+     * Write to BalTool.toml file.
+     *
+     * @param balToolTomlPath path to BalTool.toml
+     * @param balToolJson Bal-tool.json content
+     */
+    public static void writeBalToolToml(Path balToolTomlPath, BalToolJson balToolJson, String packageName)
+            throws IOException {
+        Files.writeString(balToolTomlPath, "[tool]", StandardOpenOption.APPEND);
+        Files.writeString(balToolTomlPath, "\nid = \"" + packageName + "\"\n",
+                StandardOpenOption.APPEND);
+
+        List<String> dependencyPaths = balToolJson.dependencyPaths();
+        StringBuilder dependenciesContent = new StringBuilder();
+        for (String dependencyPath: dependencyPaths) {
+            dependenciesContent.append("\n[[dependency]]\n").append("path = \"").append(dependencyPath).append("\"\n");
+        }
+        Files.writeString(balToolTomlPath, dependenciesContent.toString(), StandardOpenOption.APPEND);
+    }
+
+    /**
+     * Copy dependency jars to new package from template package.
+     *
+     * @param projectPath path to new project
+     * @param toolsLibPath Path to /tool/libs directory containing dependencies
+     */
+    public static void copyToolDependencies(Path projectPath, Path toolsLibPath) throws IOException {
+        Path toolDirectory = projectPath.resolve(TOOL_DIR);
+        Files.createDirectory(toolDirectory);
+        Files.createDirectory(toolDirectory.resolve(LIBS_DIR));
+        Files.walkFileTree(toolsLibPath, new FileUtils.Copy(toolsLibPath, toolDirectory.resolve(LIBS_DIR)));
+
+    }
+
+    /**
+     * Get formatted dependencies array content for Dependencies.toml dependency.
+     *
+     * @param packageDependency package dependency
+     * @return formatted dependencies array content
+     */
+    private static String getDependenciesArrayContent(Dependency packageDependency) {
+        StringBuilder dependenciesContent = new StringBuilder();
+        if (!packageDependency.getDependencies().isEmpty()) {
+            for (Dependency dependency : packageDependency.getDependencies()) {
+                dependenciesContent.append("\t{org = \"").append(dependency.getOrg())
+                        .append("\", name = \"").append(dependency.getName())
+                        .append("\"},\n");
+            }
+            String dependenciesPart = dependenciesContent.toString();
+            dependenciesPart = removeLastCharacter(trimStartingWhitespaces(dependenciesPart));
+            return "dependencies = [\n"
+                    + dependenciesPart
+                    + "\n]\n";
+        }
+        return "";
+    }
+
+    /**
+     * Get formatted modules array content for Dependencies.toml dependency.
+     * <code>
+     * modules = [
+     * {org = "ballerinax", packageName = "redis", moduleName = "redis"}
+     * ]
+     * </code>
+     *
+     * @param dependencyModules modules of the given dependency package
+     * @param isCurrentPackage  is modules array generating for current package
+     * @param projectPath       project path
+     * @return formatted modules array content
+     */
+    private static String getDependencyModulesArrayContent(List<ModuleDependency> dependencyModules,
+                                                           boolean isCurrentPackage, Path projectPath) {
+        StringBuilder modulesContent = new StringBuilder();
+        if (isCurrentPackage) {
+            for (ModuleDependency module : dependencyModules) {
+                String currentPkgName = ProjectUtils.defaultName(projectPath).value();
+                String modulePkgPart = module.getModuleName().split("\\.")[0];
+                String currentPkgModuleName = module.getModuleName().replaceFirst(modulePkgPart, currentPkgName);
+                modulesContent.append("\t{org = \"").append(module.getOrg())
+                        .append("\", packageName = \"").append(currentPkgName)
+                        .append("\", moduleName = \"").append(currentPkgModuleName)
+                        .append("\"},\n");
+            }
+        } else {
+            for (ModuleDependency module : dependencyModules) {
+                modulesContent.append("\t{org = \"").append(module.getOrg())
+                        .append("\", packageName = \"").append(module.getPackageName())
+                        .append("\", moduleName = \"").append(module.getModuleName())
+                        .append("\"},\n");
+            }
+        }
+        String modulesPart = modulesContent.toString();
+        modulesPart = removeLastCharacter(trimStartingWhitespaces(modulesPart));
+        return "modules = [\n" + modulesPart + "\n]\n";
     }
 
     /**
@@ -539,11 +842,9 @@ public class CommandUtil {
     public static String findPkgName(String template) {
         // Split the template in to parts
         String[] orgSplit = template.split("/");
-        String packageName = "";
         String packagePart = (orgSplit.length > 1) ? orgSplit[1] : "";
         String[] pkgSplit = packagePart.split(":");
-        packageName = pkgSplit[0].trim();
-        return packageName;
+        return pkgSplit[0].trim();
     }
 
     /**
@@ -576,47 +877,45 @@ public class CommandUtil {
     }
 
     /**
-     * Find the platform of the module for a given template.
-     *
-     * @param balaPath path to the module
-     * @return platform - platform of the module
-     */
-    public static String findPlatform(Path balaPath) {
-        String platform = "";
-        if (!Files.exists(balaPath)) {
-            //If bala for any platform not exist check for specific platform
-            platform = JvmTarget.JAVA_11.code();
-        } else {
-            platform = ANY_PLATFORM;
-        }
-        return platform;
-    }
-
-    /**
      * Initialize a new ballerina project in the given path.
      *
      * @param path project path
      * @param packageName name of the package
      * @param template package template
+     * @param balFilesExist if bal files exist in the project
      * @throws IOException  If any IO exception occurred
      * @throws URISyntaxException If any URISyntaxException occurred
      */
-    public static void initPackageByTemplate(Path path, String packageName, String template) throws IOException,
-            URISyntaxException {
+    public static void initPackageByTemplate(Path path, String packageName, String template, boolean balFilesExist)
+            throws IOException, URISyntaxException {
         // We will be creating following in the project directory
         // - Ballerina.toml
         // - main.bal
         // - .gitignore       <- git ignore file
         // - .devcontainer.json
 
-        applyTemplate(path, template);
-        if (template.equalsIgnoreCase("lib")) {
+        initPackageByTemplate(path, ProjectUtils.guessOrgName(), packageName, template, balFilesExist);
+    }
+
+    public static void initPackageByTemplate(Path path, String orgName, String packageName, String template,
+                                             boolean balFilesExist)
+            throws IOException, URISyntaxException {
+        // We will be creating following in the project directory
+        // - Ballerina.toml
+        // - main.bal
+        // - .gitignore       <- git ignore file
+        // - .devcontainer.json
+
+        applyTemplate(path, template, balFilesExist);
+        if (template.equalsIgnoreCase(LIB_DIR)) {
             initLibPackage(path, packageName);
             Path source = path.resolve("lib.bal");
             Files.move(source, source.resolveSibling(guessPkgName(packageName, template) + ".bal"),
                     StandardCopyOption.REPLACE_EXISTING);
+        } else if (template.equalsIgnoreCase(TOOL_DIR)) {
+            initToolPackage(path, packageName);
         } else {
-            initPackage(path, packageName);
+            initPackage(path, packageName, orgName);
         }
         createDefaultGitignore(path);
         createDefaultDevContainer(path);
@@ -627,8 +926,10 @@ public class CommandUtil {
         if (Files.notExists(gitignore)) {
             Files.createFile(gitignore);
         }
-        String defaultGitignore = FileUtils.readFileAsString(NEW_CMD_DEFAULTS + "/" + GITIGNORE);
-        Files.write(gitignore, defaultGitignore.getBytes(StandardCharsets.UTF_8));
+        if (Files.size(gitignore) == 0) {
+            String defaultGitignore = FileUtils.readFileAsString(NEW_CMD_DEFAULTS + "/" + GITIGNORE);
+            Files.writeString(gitignore, defaultGitignore);
+        }
     }
 
     private static void createDefaultDevContainer(Path path) throws IOException {
@@ -636,9 +937,11 @@ public class CommandUtil {
         if (Files.notExists(devContainer)) {
             Files.createFile(devContainer);
         }
-        String defaultDevContainer = FileUtils.readFileAsString(NEW_CMD_DEFAULTS + "/" + DEVCONTAINER);
-        defaultDevContainer = defaultDevContainer.replace("latest", RepoUtils.getBallerinaVersion());
-        Files.write(devContainer, defaultDevContainer.getBytes(StandardCharsets.UTF_8));
+        if (Files.size(devContainer) == 0) {
+            String defaultDevContainer = FileUtils.readFileAsString(NEW_CMD_DEFAULTS + "/" + DEVCONTAINER);
+            defaultDevContainer = defaultDevContainer.replace("latest", RepoUtils.getBallerinaVersion());
+            Files.writeString(devContainer, defaultDevContainer);
+        }
     }
 
     /**
@@ -649,21 +952,22 @@ public class CommandUtil {
     public static List<String> getTemplates() {
         try {
             Path templateDir = getTemplatePath();
-            Stream<Path> walk = Files.walk(templateDir, 1);
+            try (Stream<Path> walk = Files.walk(templateDir, 1)) {
 
-            List<String> templates = walk.filter(Files::isDirectory)
+                List<String> templates = walk.filter(Files::isDirectory)
                     .filter(directory -> !templateDir.equals(directory))
-                    .filter(directory -> directory.getFileName() != null)
                     .map(directory -> directory.getFileName())
-                    .map(fileName -> fileName.toString())
-                    .collect(Collectors.toList());
+                    .filter(Objects::nonNull)
+                    .map(Path::toString)
+                    .toList();
 
-            if (null != jarFs) {
-                return templates.stream().map(t -> t
-                        .replace(jarFs.getSeparator(), ""))
-                        .collect(Collectors.toList());
-            } else {
-                return templates;
+                if (null != jarFs) {
+                    return templates.stream().map(t -> t
+                            .replace(jarFs.getSeparator(), ""))
+                        .toList();
+                } else {
+                    return templates;
+                }
             }
 
         } catch (IOException | URISyntaxException e) {
@@ -684,7 +988,7 @@ public class CommandUtil {
             final String[] array = uri.toString().split("!");
             return jarFs.getPath(array[1]);
         } else {
-            return Paths.get(uri);
+            return Path.of(uri);
         }
     }
 
@@ -693,16 +997,22 @@ public class CommandUtil {
      *
      * @param modulePath path to the module
      * @param template template name
+     * @param balFilesExist if bal files exist in the project
      * @throws IOException if any IOException occurred
      * @throws URISyntaxException if any URISyntaxException occurred
      */
-    public static void applyTemplate(Path modulePath, String template) throws IOException, URISyntaxException {
+    public static void applyTemplate(Path modulePath, String template, boolean balFilesExist)
+            throws IOException, URISyntaxException {
         Path templateDir = getTemplatePath().resolve(template);
-        if (template.equalsIgnoreCase("main")) {
-            templateDir = getTemplatePath().resolve("default");
-            Path tempDirTest = getTemplatePath().resolve("main");
+        if (template.equalsIgnoreCase(MAIN_TEMPLATE)) {
+            templateDir = getTemplatePath().resolve(DEFAULT_TEMPLATE);
+            Path tempDirTest = getTemplatePath().resolve(MAIN_TEMPLATE);
             Files.walkFileTree(templateDir, new FileUtils.Copy(templateDir, modulePath));
             Files.walkFileTree(tempDirTest, new FileUtils.Copy(tempDirTest, modulePath));
+        } else if (template.equalsIgnoreCase(DEFAULT_TEMPLATE)) {
+            if (!balFilesExist) {
+                Files.walkFileTree(templateDir, new FileUtils.Copy(templateDir, modulePath));
+            }
         } else {
             Files.walkFileTree(templateDir, new FileUtils.Copy(templateDir, modulePath));
         }
@@ -714,17 +1024,17 @@ public class CommandUtil {
      * @param path Project path
      * @throws IOException If any IO exception occurred
      */
-    public static void initPackage(Path path, String packageName) throws IOException {
+    public static void initPackage(Path path, String packageName, String org) throws IOException {
         Path ballerinaToml = path.resolve(ProjectConstants.BALLERINA_TOML);
         Files.createFile(ballerinaToml);
 
         String defaultManifest = FileUtils.readFileAsString(NEW_CMD_DEFAULTS + "/" + "manifest-app.toml");
         // replace manifest distribution with a guessed value
         defaultManifest = defaultManifest
-                .replaceAll(ORG_NAME, ProjectUtils.guessOrgName())
-                .replaceAll(PKG_NAME, packageName)
-                .replaceAll(DIST_VERSION, RepoUtils.getBallerinaShortVersion());
-        Files.write(ballerinaToml, defaultManifest.getBytes(StandardCharsets.UTF_8));
+                .replace(ORG_NAME, org)
+                .replace(PKG_NAME, guessPkgName(packageName, "app"))
+                .replace(DIST_VERSION, RepoUtils.getBallerinaShortVersion());
+        Files.writeString(ballerinaToml, defaultManifest);
     }
 
     private static void initLibPackage(Path path, String packageName) throws IOException {
@@ -733,18 +1043,50 @@ public class CommandUtil {
 
         String defaultManifest = FileUtils.readFileAsString(NEW_CMD_DEFAULTS + "/" + "manifest-lib.toml");
         // replace manifest org and name with a guessed value.
-        defaultManifest = defaultManifest.replaceAll(ORG_NAME, ProjectUtils.guessOrgName())
-                .replaceAll(PKG_NAME, packageName)
-                .replaceAll(DIST_VERSION, RepoUtils.getBallerinaShortVersion());
+        defaultManifest = defaultManifest.replace(ORG_NAME, ProjectUtils.guessOrgName())
+                .replace(PKG_NAME, guessPkgName(packageName, "lib"))
+                .replace(DIST_VERSION, RepoUtils.getBallerinaShortVersion());
 
-        write(ballerinaToml, defaultManifest.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(ballerinaToml, defaultManifest);
 
-        // Create Package.md
-        String packageMd = FileUtils.readFileAsString(NEW_CMD_DEFAULTS + "/Package.md");
-        write(path.resolve(ProjectConstants.PACKAGE_MD_FILE_NAME), packageMd.getBytes(StandardCharsets.UTF_8));
+        // Create README.md
+        String readmeMd = FileUtils.readFileAsString(NEW_CMD_DEFAULTS + "/" + "lib-readme.md");
+        // replace lib org and name with a guessed value.
+        readmeMd = readmeMd.replace(ORG_NAME, ProjectUtils.guessOrgName())
+                .replace(PKG_NAME, guessPkgName(packageName, "lib"));
+
+        Files.writeString(path.resolve(ProjectConstants.README_MD_FILE_NAME), readmeMd);
     }
 
-    protected static PackageVersion findLatest(List<PackageVersion> packageVersions) {
+    /**
+     * Initialize a new ballerina tool package in the given path.
+     *
+     * @param path Project path
+     * @param packageName package name
+     * @throws IOException If any IO exception occurred
+     */
+    private static void initToolPackage(Path path, String packageName) throws IOException {
+        Path ballerinaToml = path.resolve(ProjectConstants.BALLERINA_TOML);
+        Files.createFile(ballerinaToml);
+
+        String defaultManifest = FileUtils.readFileAsString(NEW_CMD_DEFAULTS + "/" + "manifest-app.toml");
+        defaultManifest = defaultManifest
+                .replace(ORG_NAME, ProjectUtils.guessOrgName())
+                .replace(PKG_NAME, guessPkgName(packageName, TOOL_DIR))
+                .replace(DIST_VERSION, RepoUtils.getBallerinaShortVersion());
+        Files.writeString(ballerinaToml, defaultManifest);
+
+        Path balToolToml = path.resolve(BAL_TOOL_TOML);
+        Files.createFile(balToolToml);
+        String balToolManifest = FileUtils.readFileAsString(NEW_CMD_DEFAULTS + "/" + "manifest-tool.toml");
+        balToolManifest = balToolManifest.replace(TOOL_ID, guessPkgName(packageName, TOOL_DIR));
+        Files.writeString(balToolToml, balToolManifest);
+
+        String readmeMd = FileUtils.readFileAsString(NEW_CMD_DEFAULTS + "/" + "tool-readme.md");
+        Files.writeString(path.resolve(ProjectConstants.README_MD_FILE_NAME), readmeMd);
+    }
+
+    private static PackageVersion findLatest(List<PackageVersion> packageVersions) {
         if (packageVersions.isEmpty()) {
             return null;
         }
@@ -755,7 +1097,7 @@ public class CommandUtil {
         return latestVersion;
     }
 
-    protected static PackageVersion getLatest(PackageVersion v1, PackageVersion v2) {
+    private static PackageVersion getLatest(PackageVersion v1, PackageVersion v2) {
         SemanticVersion semVer1 = v1.value();
         SemanticVersion semVer2 = v2.value();
         boolean isV1PreReleaseVersion = semVer1.isPreReleaseVersion();
@@ -770,18 +1112,16 @@ public class CommandUtil {
     public static List<PackageVersion> getPackageVersions(Path balaPackagePath) {
         List<Path> versions = new ArrayList<>();
         if (Files.exists(balaPackagePath)) {
-            Stream<Path> collectVersions;
-            try {
-                collectVersions = Files.list(balaPackagePath);
+            try (Stream<Path> collectVersions = Files.list(balaPackagePath)) {
+                versions.addAll(collectVersions.toList());
             } catch (IOException e) {
                 throw new RuntimeException("Error while accessing Distribution cache: " + e.getMessage());
             }
-            versions.addAll(collectVersions.collect(Collectors.toList()));
         }
         return pathToVersions(versions);
     }
 
-    protected static List<PackageVersion> pathToVersions(List<Path> versions) {
+    private static List<PackageVersion> pathToVersions(List<Path> versions) {
         List<PackageVersion> availableVersions = new ArrayList<>();
         versions.stream().map(path -> Optional.ofNullable(path)
                 .map(Path::getFileName)
@@ -797,5 +1137,496 @@ public class CommandUtil {
             }
         });
         return availableVersions;
+    }
+
+    /**
+     * Remove starting whitespaces of a string.
+     *
+     * @param str given string
+     * @return starting whitespaces removed string
+     */
+    private static String trimStartingWhitespaces(String str) {
+        return str.replaceFirst("\\s++$", "");
+    }
+
+    /**
+     * Remove last character of a string.
+     *
+     * @param str given string
+     * @return last character removed string
+     */
+    private static String removeLastCharacter(String str) {
+        return str.substring(0, str.length() - 1);
+    }
+
+    /**
+     * Check if files of the given template exist in a given path.
+     *
+     * @param template given string
+     * @param packagePath given path
+     * @throws URISyntaxException if URI syntax exception occurred
+     * @throws IOException if IO exception occurred
+     */
+    public static String checkTemplateFilesExists(String template, Path packagePath) throws URISyntaxException,
+            IOException {
+        Path templateDir = getTemplatePath().resolve(template);
+        List<Path> templateFilePathList;
+        try (Stream<Path> paths = Files.list(templateDir)) {
+            templateFilePathList = paths.toList();
+        }
+        StringBuilder existingFiles = new StringBuilder();
+        for (Path path : templateFilePathList) {
+            Optional<String> fileNameOptional = Optional.ofNullable(path.getFileName()).map(Path::toString);
+            if (fileNameOptional.isPresent()) {
+                String fileName = fileNameOptional.get();
+                if (!fileName.endsWith(ProjectConstants.BLANG_SOURCE_EXT) &&
+                        Files.exists(packagePath.resolve(fileName))) {
+                    existingFiles.append(fileName).append(FILE_STRING_SEPARATOR);
+                }
+            }
+        }
+        return existingFiles.toString();
+    }
+
+    /**
+     * Check if common files of a package exist in a given path.
+     *
+     * @param packagePath given path
+     */
+    public static String checkPackageFilesExists(Path packagePath) {
+        String[] packageFiles = {DEPENDENCIES_TOML, BAL_TOOL_TOML, ProjectConstants.PACKAGE_MD_FILE_NAME,
+                ProjectConstants.MODULE_MD_FILE_NAME, ProjectConstants.MODULES_ROOT, TEST_DIR_NAME};
+        StringBuilder existingFiles = new StringBuilder();
+        for (String file : packageFiles) {
+            if (Files.exists(packagePath.resolve(file))) {
+                existingFiles.append(file).append(FILE_STRING_SEPARATOR);
+            }
+        }
+        return existingFiles.toString();
+    }
+
+    /**
+     * Check if .bal files exist in a given path.
+     *
+     * @param packagePath given path
+     * @return error message if files exists
+     */
+    public static boolean balFilesExists(Path packagePath) throws IOException {
+        //Only skip the bal file to be created if any other .bal files exists
+        try (Stream<Path> list = Files.list(packagePath)) {
+            return list.anyMatch(path -> path.toString().endsWith(ProjectConstants.BLANG_SOURCE_EXT));
+        }
+    }
+
+    /**
+     * Get the latest version from a given list of versions.
+     *
+     * @param versions the list of strings
+     * @return the latest version
+     */
+    static String getLatestVersion(List<String> versions) {
+        String latestVersion = versions.get(0);
+        for (String version : versions) {
+            if (SemanticVersion.from(version).greaterThan(SemanticVersion.from(latestVersion))) {
+                latestVersion = version;
+            }
+        }
+        return latestVersion;
+    }
+
+    /**
+     * Pull the dependencies of a given package from central.
+     *
+     * @param orgName org name of the dependent package
+     * @param packageName name of the dependent package
+     * @param version version of the dependent package
+     * @param buildOptions build options {sticky, offline}
+     * @return true if the dependent package compilation has errors
+     */
+    static boolean pullDependencyPackages(String orgName, String packageName, String version,
+                                          BuildOptions buildOptions, String repository) {
+        Path ballerinaUserHomeDirPath = ProjectUtils.createAndGetHomeReposPath();
+        Path centralRepositoryDirPath = ballerinaUserHomeDirPath.resolve(ProjectConstants.REPOSITORIES_DIR)
+                .resolve(repository);
+        Path balaDirPath = centralRepositoryDirPath.resolve(ProjectConstants.BALA_DIR_NAME);
+        Path balaPath = ProjectUtils.getPackagePath(balaDirPath, orgName, packageName, version);
+        String ballerinaShortVersion = RepoUtils.getBallerinaShortVersion();
+        Path cacheDir = centralRepositoryDirPath.resolve(
+                ProjectConstants.CACHES_DIR_NAME + "-" + ballerinaShortVersion);
+
+        ProjectEnvironmentBuilder defaultBuilder = ProjectEnvironmentBuilder.getDefaultBuilder();
+        defaultBuilder.addCompilationCacheFactory(new FileSystemCache.FileSystemCacheFactory(cacheDir));
+        BalaProject balaProject = BalaProject.loadProject(defaultBuilder, balaPath, buildOptions);
+
+        // Delete package cache if available
+        Path packageCacheDir = cacheDir.resolve(orgName).resolve(packageName).resolve(version);
+        if (packageCacheDir.toFile().exists()) {
+            deleteDirectory(packageCacheDir);
+        }
+
+        // getResolution pulls all dependencies of the pulled package
+        PackageCompilation packageCompilation = balaProject.currentPackage().getCompilation();
+        Collection<Diagnostic> resolutionDiagnostics = packageCompilation.getResolution()
+                .diagnosticResult().diagnostics();
+        if (!resolutionDiagnostics.isEmpty()) {
+            printDiagnostics(resolutionDiagnostics);
+        }
+        if (packageCompilation.getResolution().diagnosticResult().hasErrors()) {
+            return true;
+        }
+        if (!hasProvidedPlatformDeps(balaProject.currentPackage())) {
+            JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_21);
+            Collection<Diagnostic> backendDiagnostics = jBallerinaBackend.diagnosticResult().diagnostics(false);
+            if (!backendDiagnostics.isEmpty()) {
+                printDiagnostics(backendDiagnostics);
+            }
+            return jBallerinaBackend.diagnosticResult().hasErrors();
+        }
+        errStream.println("Warning: Cache generation skipped due to platform dependencies with 'provided' scope");
+        return false;
+    }
+
+    private static void printDiagnostics(Collection<Diagnostic> diagnostics) {
+        for (Diagnostic diagnostic: diagnostics) {
+            CommandUtil.printError(errStream, diagnostic.toString(), null, false);
+        }
+    }
+
+    private static boolean hasProvidedPlatformDeps(Package pkg) {
+        for (PackageManifest.Platform platform: pkg.manifest().platforms().values()) {
+            for (Map<String, Object> dependency: platform.dependencies()) {
+                if (PlatformLibraryScope.PROVIDED.getStringValue().equals(dependency.get("scope"))) {
+                    return true;
+                }
+            }
+        }
+        PackageCompilation packageCompilation = pkg.getCompilation();
+        Set<Object> providedDeps = new HashSet<>();
+        packageCompilation.getResolution().allDependencies()
+                .stream()
+                .map(ResolvedPackageDependency::packageInstance)
+                .map(Package::manifest)
+                .flatMap(pkgManifest -> pkgManifest.platforms().values().stream())
+                .filter(Objects::nonNull)
+                .flatMap(pkgPlatform -> pkgPlatform.dependencies().stream())
+                .filter(dependency -> PlatformLibraryScope.PROVIDED.equals(dependency.get("scope")))
+                .forEach(providedDeps::add);
+
+        return !providedDeps.isEmpty();
+    }
+
+    public static boolean isPrevCurrCmdCompatible(BuildOptions buildOptions, BuildOptions prevBuildOptions) {
+       // Didn't add the sticky check as sticky is the default behaviour within 24Hr(regardless of sticky is false/true)
+       return prevBuildOptions.offlineBuild() != buildOptions.offlineBuild() ||
+               prevBuildOptions.optimizeDependencyCompilation() != buildOptions.optimizeDependencyCompilation() ||
+               prevBuildOptions.experimental() != buildOptions.experimental() ||
+               prevBuildOptions.remoteManagement() != buildOptions.remoteManagement() ||
+               !buildOptions.lockingMode().equals(prevBuildOptions.lockingMode()) ||
+               buildOptions.observabilityIncluded() != prevBuildOptions.observabilityIncluded();
+    }
+
+
+    public static boolean isFilesModifiedSinceLastBuild(BuildJson buildJson, Project project, boolean isTestExecution,
+                                                        boolean skipExecutable) throws IOException {
+        List<File> srcFilesToEvaluate = getSrcFiles(project);
+        List<File> testSrcFilesToEvaluate = getTestSrcFiles(project);
+        if (isProjectFilesModified(buildJson.getSrcMetaInfo(), srcFilesToEvaluate, project)) {
+            return true;
+        }
+        if (isTestExecution && isProjectFilesModified(buildJson.getTestSrcMetaInfo(), testSrcFilesToEvaluate,
+                project)) {
+            return true;
+        }
+        if (isSettingsFileModified(buildJson)) {
+            return true;
+        }
+        if (isBallerinaTomlFileModified(buildJson, project)) {
+            return true;
+        }
+        if (isTestExecution) {
+            return isTestArtifactsModified(buildJson, project);
+        }
+        if (skipExecutable) {
+            return false;
+        }
+        return isExecutableModified(buildJson, project);
+    }
+
+    public static DependencyGraph<BuildProject> resolveWorkspaceDependencies(
+            WorkspaceProject workspaceProject, PrintStream outStream) {
+        outStream.println("Resolving workspace dependencies");
+        ResolutionOptions resolutionOptions = ResolutionOptions.builder()
+                .setOffline(true)
+                .setPackageLockingMode(PackageLockingMode.HARD)
+                .build();
+        DependencyGraph<BuildProject> projectDependencyGraph = workspaceProject.getResolution(resolutionOptions)
+                .dependencyGraph();
+        projectDependencyGraph.toTopologicallySortedList();
+        workspaceProject.clearCaches();
+        return projectDependencyGraph;
+    }
+
+    private static boolean isBallerinaTomlFileModified(BuildJson buildJson, Project project)  {
+        try {
+            File ballerinaTomlFile = project.sourceRoot().resolve(BALLERINA_TOML).toFile();
+            if (ballerinaTomlFile.exists() && ballerinaTomlFile.isFile()) {
+                long lastModified = ballerinaTomlFile.lastModified();
+                long size = Files.size(ballerinaTomlFile.toPath());
+                BuildJson.FileMetaInfo ballerinaTomlFileMetaInfo = buildJson.getBallerinaTomlMetaInfo();
+                if (ballerinaTomlFileMetaInfo == null) {
+                    return true;
+                }
+                if (ballerinaTomlFileMetaInfo.getSize() == size &&
+                        ballerinaTomlFileMetaInfo.getLastModifiedTime() == lastModified) {
+                    return false;
+                }
+                return !getSHA256Digest(ballerinaTomlFile).equals(ballerinaTomlFileMetaInfo.getHash());
+            }
+            return true;
+        } catch (IOException | NoSuchAlgorithmException e) {
+            return true;
+        }
+    }
+
+    private static boolean isTestArtifactsModified(BuildJson buildJson, Project project) throws IOException {
+        Target target = new Target(project.targetDir().resolve(EXEC_BACKUP_DIR_NAME));
+        Path testSuitePath = target.getTestsCachePath().resolve(ProjectConstants.TEST_SUITE_JSON);
+        if (!Files.exists(testSuitePath)) {
+            return true;
+        }
+        String packageOrg = project.currentPackage().packageOrg().toString();
+        String packageName = project.currentPackage().packageName().toString();
+        String packageVersion = project.currentPackage().packageVersion().toString();
+        List<Path> testArtifactsPaths =
+                Files.walk(target.cachesPath().resolve(packageOrg).resolve(packageName).resolve(packageVersion))
+                        .filter(Files::isRegularFile)
+                        .filter(path -> path.toString().endsWith(JAR))
+                        .toList();
+        BuildJson.FileMetaInfo[] testArtifactMetaInfo = buildJson.getTestArtifactMetaInfo();
+        if (testArtifactMetaInfo == null || testArtifactMetaInfo.length != (testArtifactsPaths.size() + 1)) {
+            return true;
+        }
+        testArtifactsPaths = new ArrayList<>(testArtifactsPaths);
+        testArtifactsPaths.add(testSuitePath);
+        for (BuildJson.FileMetaInfo fileMetaInfo : testArtifactMetaInfo) {
+            boolean fileExist = false;
+            for (Path artifactPath : testArtifactsPaths) {
+                if (!artifactPath.toString().equals(fileMetaInfo.getFile())) {
+                    continue;
+                }
+                fileExist = true;
+                try {
+                    long lastModified = Files.getLastModifiedTime(artifactPath).toMillis();
+                    long size = Files.size(artifactPath);
+                    if (fileMetaInfo.getSize() == size && fileMetaInfo.getLastModifiedTime() == lastModified) {
+                        break;
+                    }
+                    if (getSHA256Digest(artifactPath.toFile()).equals(fileMetaInfo.getHash())) {
+                        break;
+                    }
+                    return true;
+                } catch (IOException | NoSuchAlgorithmException e) {
+                    return true;
+                }
+            }
+            if (!fileExist) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private static boolean isProjectFilesModified(BuildJson.FileMetaInfo[] fileMetaInfos, List<File> filesToEvaluate,
+                                                  Project project) {
+        if (fileMetaInfos == null || filesToEvaluate.size() != fileMetaInfos.length) {
+            return true;
+        }
+        for (BuildJson.FileMetaInfo fileMetaInfo : fileMetaInfos) {
+            boolean fileExist = false;
+            for (File file : filesToEvaluate) {
+                if (!file.getAbsolutePath().equals(fileMetaInfo.getFile())) {
+                    continue;
+                }
+                fileExist = true;
+                try {
+                    long lastModified = file.lastModified();
+                    long size = Files.size(file.toPath());
+                    if (fileMetaInfo.getSize() == size && fileMetaInfo.getLastModifiedTime() == lastModified) {
+                        break;
+                    }
+                    if (getSHA256Digest(file).equals(fileMetaInfo.getHash())) {
+                        break;
+                    }
+                    return true;
+                } catch (IOException | NoSuchAlgorithmException e) {
+                    return true;
+                }
+            }
+            if (!fileExist) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    public static List<File> getSrcFiles(Project project) {
+        File[] filesInRoot = project.sourceRoot().toAbsolutePath().toFile().listFiles();
+        List<File> filesToEvaluate = new ArrayList<>();
+        for (File file : filesInRoot) {
+            if (file.getName().endsWith(BLANG_SOURCE_EXT) || file.getName().equals(BALLERINA_TOML)) {
+                filesToEvaluate.add(file);
+            }
+        }
+        List<String> moduleNames = new ArrayList<>();
+        project.currentPackage().modules().forEach(
+                module -> moduleNames.add(module.moduleName().moduleNamePart()));
+        for (String moduleName : moduleNames) {
+            if (moduleName == null) {
+                continue;
+            }
+            File[] moduleSrcs = project.sourceRoot().resolve(MODULES_ROOT).resolve(moduleName)
+                    .toFile().listFiles();
+            if (moduleSrcs == null) {
+                continue;
+            }
+            for (File moduleSrc : moduleSrcs) {
+                if (moduleSrc.getName().endsWith(BLANG_SOURCE_EXT)) {
+                    filesToEvaluate.add(moduleSrc);
+                }
+            }
+        }
+        return filesToEvaluate;
+    }
+
+    public static List<File> getTestSrcFiles(Project project) {
+        List<File> filesToEvaluate = new ArrayList<>();
+        File testDir = project.sourceRoot().resolve(TEST_DIR_NAME).toFile();
+        if (testDir.exists() && testDir.isDirectory()) {
+            File[] testFiles = testDir.listFiles();
+            if (testFiles != null) {
+                for (File testFile : testFiles) {
+                    if (testFile.getName().endsWith(BLANG_SOURCE_EXT)) {
+                        filesToEvaluate.add(testFile);
+                    }
+                }
+            }
+
+        }
+
+        List<String> moduleNames = new ArrayList<>();
+        project.currentPackage().modules().forEach(
+                module -> moduleNames.add(module.moduleName().moduleNamePart()));
+        for (String moduleName : moduleNames) {
+            if (moduleName == null) {
+                continue;
+            }
+            File[] moduleSrcs = project.sourceRoot().resolve(MODULES_ROOT).resolve(moduleName)
+                    .toFile().listFiles();
+            if (moduleSrcs == null) {
+                continue;
+            }
+            File moduleTestDir = project.sourceRoot().resolve(MODULES_ROOT).resolve(moduleName)
+                    .resolve(TEST_DIR_NAME).toFile();
+            if (!moduleTestDir.exists() || !moduleTestDir.isDirectory()) {
+                continue;
+            }
+            File[] testFiles = moduleTestDir.listFiles();
+            if (testFiles == null) {
+                continue;
+            }
+            for (File testFile : testFiles) {
+                if (testFile.getName().endsWith(BLANG_SOURCE_EXT)) {
+                    filesToEvaluate.add(testFile);
+                }
+            }
+        }
+        return filesToEvaluate;
+    }
+
+    private static boolean isExecutableModified(BuildJson buildJson, Project project) {
+        try {
+            Target target = new Target(project.targetDir().resolve(EXEC_BACKUP_DIR_NAME));
+            File execFile = target.getExecutablePath(project.currentPackage()).toAbsolutePath().toFile();
+            if (execFile.exists() && execFile.isFile()) {
+                long lastModified = execFile.lastModified();
+                long size = Files.size(execFile.toPath());
+                BuildJson.FileMetaInfo targetExecMetaInfo = buildJson.getTargetExecMetaInfo();
+                if (targetExecMetaInfo == null) {
+                    return true;
+                }
+                if (targetExecMetaInfo.getSize() == size && targetExecMetaInfo.getLastModifiedTime() == lastModified) {
+                    return false;
+                }
+                return !getSHA256Digest(execFile).equals(targetExecMetaInfo.getHash());
+            }
+        } catch (IOException | NoSuchAlgorithmException e) {
+           // ignore the error and rebuild again
+        }
+        return true;
+    }
+
+    private static boolean isSettingsFileModified(BuildJson buildJson) {
+        try {
+            File settingsFile = RepoUtils.createAndGetHomeReposPath().resolve(SETTINGS_FILE_NAME)
+                    .toFile();
+            if (settingsFile.exists() && settingsFile.isFile()) {
+                long lastModified = settingsFile.lastModified();
+                long size = Files.size(settingsFile.toPath());
+                BuildJson.FileMetaInfo settingsFileMetaInfo = buildJson.getSettingsMetaInfo();
+                if (settingsFileMetaInfo == null) {
+                    return true;
+                }
+                if (settingsFileMetaInfo.getSize() == size &&
+                        settingsFileMetaInfo.getLastModifiedTime() == lastModified) {
+                    return false;
+                }
+                return !getSHA256Digest(settingsFile).equals(settingsFileMetaInfo.getHash());
+            }
+            return buildJson.getSettingsMetaInfo() != null;
+        } catch (IOException | NoSuchAlgorithmException e) {
+            return true;
+        }
+    }
+
+    public static String getSHA256Digest(File fileToEvaluate) throws NoSuchAlgorithmException, IOException {
+        MessageDigest digest = MessageDigest.getInstance(SHA_256);
+        byte[] fileBytes = Files.readAllBytes(fileToEvaluate.toPath());
+        byte[] hashBytes = digest.digest(fileBytes);
+        return bytesToHex(hashBytes);
+    }
+
+    private static String bytesToHex(byte[] bytes) {
+        Formatter formatter = new Formatter();
+        for (byte b : bytes) {
+            formatter.format(BYTE_TO_HEX_FORMAT, b);
+        }
+        String result = formatter.toString();
+        formatter.close();
+        return result;
+    }
+
+    public static void copyOneDirectoryUp(Path sourcePath) throws IOException {
+        Path parentPath = sourcePath.getParent();
+        Files.walkFileTree(sourcePath, new SimpleFileVisitor<Path>() {
+            @Override
+            public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+                Path relativePath = sourcePath.relativize(file);
+                Path destFile = parentPath.resolve(relativePath);
+                Files.createDirectories(destFile.getParent());
+                Files.copy(file, destFile, StandardCopyOption.REPLACE_EXISTING);
+                return FileVisitResult.CONTINUE;
+            }
+
+            @Override
+            public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) throws IOException {
+                if (dir.equals(sourcePath)) {
+                    return FileVisitResult.CONTINUE;
+                }
+                Path relativePath = sourcePath.relativize(dir);
+                Path destDir = parentPath.resolve(relativePath);
+                Files.createDirectories(destDir);
+                return FileVisitResult.CONTINUE;
+            }
+        });
     }
 }
