@@ -18,17 +18,23 @@
 
 package org.wso2.ballerinalang.compiler.desugar;
 
+import io.ballerina.runtime.api.flags.SymbolFlags;
+import io.ballerina.tools.diagnostics.Location;
+import io.ballerina.tools.text.LinePosition;
+import io.ballerina.tools.text.LineRange;
+import io.ballerina.tools.text.TextRange;
 import org.ballerinalang.model.tree.NodeKind;
 import org.wso2.ballerinalang.compiler.diagnostic.BLangDiagnosticLocation;
 import org.wso2.ballerinalang.compiler.semantics.analyzer.SymbolResolver;
 import org.wso2.ballerinalang.compiler.semantics.model.SymbolEnv;
 import org.wso2.ballerinalang.compiler.semantics.model.SymbolTable;
 import org.wso2.ballerinalang.compiler.semantics.model.symbols.BInvokableSymbol;
-import org.wso2.ballerinalang.compiler.semantics.model.symbols.Symbols;
+import org.wso2.ballerinalang.compiler.semantics.model.symbols.BSymbol;
 import org.wso2.ballerinalang.compiler.tree.BLangBlockFunctionBody;
 import org.wso2.ballerinalang.compiler.tree.BLangFunction;
 import org.wso2.ballerinalang.compiler.tree.BLangPackage;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangCheckedExpr;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangExpression;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangInvocation;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangSimpleVarRef;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangAssignment;
@@ -42,6 +48,7 @@ import org.wso2.ballerinalang.util.Flags;
 import java.util.ArrayList;
 import java.util.List;
 
+import static org.wso2.ballerinalang.compiler.util.Constants.INIT_FUNC_COUNT_PER_CLASS;
 import static org.wso2.ballerinalang.compiler.util.Constants.INIT_METHOD_SPLIT_SIZE;
 import static org.wso2.ballerinalang.compiler.util.Constants.MAX_LISTENER_COUNT_PER_METHOD;
 
@@ -88,15 +95,31 @@ public class LargeMethodSplitter {
         pkgNode.stopFunction = splitStopFunction(pkgNode, env);
     }
 
+    private static BLangDiagnosticLocation getNewFuncPos(Location packageNodePos, String packageFileName,
+                                                         int splitInitFuncClassCount) {
+        LineRange lineRange = packageNodePos.lineRange();
+        TextRange textRange = packageNodePos.textRange();
+        LinePosition startLine = lineRange.startLine();
+        LinePosition endLine = lineRange.endLine();
+        return new BLangDiagnosticLocation(packageFileName + "$" + splitInitFuncClassCount, startLine.line(),
+                endLine.line(), startLine.offset(), endLine.offset(), textRange.startOffset(), textRange.length());
+    }
+
     /**
-     * Split package init function into several smaller functions.
+     * Split package init function into several smaller functions and put them into multiple classes
+     * if the function count is very high.
      *
      * @param packageNode package node
      * @param env symbol environment
      * @return initial init function but trimmed in size
      */
     private BLangFunction splitInitFunction(BLangPackage packageNode, SymbolEnv env) {
-        int methodSize = INIT_METHOD_SPLIT_SIZE;
+        int splitInitFuncClassCount = 1;
+        int splitFuncCount = 0;
+        Location packageNodePos = packageNode.pos;
+        String packageFileName = packageNodePos.lineRange().fileName();
+        BLangDiagnosticLocation newFuncPos = getNewFuncPos(packageNodePos, packageFileName, splitInitFuncClassCount);
+        splitInitFuncClassCount++;
         BLangBlockFunctionBody funcBody = (BLangBlockFunctionBody) packageNode.initFunction.body;
         BLangFunction initFunction = packageNode.initFunction;
 
@@ -108,74 +131,40 @@ public class LargeMethodSplitter {
 
         // until we get to a varDef, stmts are independent, divide it based on methodSize
         int varDefIndex = 0;
-        for (int i = 0; i < stmts.size(); i++) {
-            BLangStatement statement = stmts.get(i);
+        int count = 0;
+        for (BLangStatement statement : stmts) {
             if (statement.getKind() == NodeKind.VARIABLE_DEF) {
                 break;
             }
             varDefIndex++;
-            if (i > 0 && (i % methodSize == 0 || isAssignmentWithInitOrRecordLiteralExpr(statement))) {
+            if (isGlobalOrConstantAssignment(statement, env)) {
+                newFuncBody.stmts.add(statement);
+                continue;
+            }
+            count++;
+            if (count % INIT_METHOD_SPLIT_SIZE == 0) {
                 generatedFunctions.add(newFunc);
                 newFunc = createIntermediateInitFunction(packageNode, env);
-                newFuncBody = (BLangBlockFunctionBody) newFunc.body;
-                symTable.rootScope.define(names.fromIdNode(newFunc.name), newFunc.symbol);
-            }
-            newFuncBody.stmts.add(stmts.get(i));
-        }
-
-        // from a varDef to a service constructor, those stmts should be within single method
-        List<BLangStatement> chunkStmts = new ArrayList<>();
-        for (int i = varDefIndex; i < stmts.size(); i++) {
-            BLangStatement stmt = stmts.get(i);
-            chunkStmts.add(stmt);
-            varDefIndex++;
-            if ((stmt.getKind() == NodeKind.ASSIGNMENT) &&
-                    (((BLangAssignment) stmt).expr.getKind() == NodeKind.SERVICE_CONSTRUCTOR) &&
-                    (newFuncBody.stmts.size() + chunkStmts.size() > methodSize)) {
-                // enf of current chunk
-                if (newFuncBody.stmts.size() + chunkStmts.size() > methodSize) {
-                    generatedFunctions.add(newFunc);
-                    newFunc = createIntermediateInitFunction(packageNode, env);
-                    newFuncBody = (BLangBlockFunctionBody) newFunc.body;
-                    symTable.rootScope.define(names.fromIdNode(newFunc.name), newFunc.symbol);
+                splitFuncCount++;
+                if ((splitFuncCount % INIT_FUNC_COUNT_PER_CLASS) == 0) {
+                    newFuncPos = getNewFuncPos(packageNodePos, packageFileName, splitInitFuncClassCount);
+                    splitInitFuncClassCount++;
                 }
-                newFuncBody.stmts.addAll(chunkStmts);
-                chunkStmts.clear();
-            } else if ((stmt.getKind() == NodeKind.ASSIGNMENT) &&
-                    (((BLangAssignment) stmt).varRef instanceof BLangSimpleVarRef.BLangPackageVarRef) &&
-                    Symbols.isFlagOn(
-                            ((BLangSimpleVarRef.BLangPackageVarRef) ((BLangAssignment) stmt).varRef).varSymbol.flags,
-                            Flags.LISTENER)
-            ) {
-                // this is where listener registrations starts, they are independent stmts
-                break;
-            }
-        }
-        newFuncBody.stmts.addAll(chunkStmts);
-
-        // rest of the statements can be split without chunks
-        for (int i = varDefIndex; i < stmts.size(); i++) {
-            if (i > 0 && i % methodSize == 0) {
-                generatedFunctions.add(newFunc);
-                newFunc = createIntermediateInitFunction(packageNode, env);
+                newFunc.pos = newFuncPos;
                 newFuncBody = (BLangBlockFunctionBody) newFunc.body;
                 symTable.rootScope.define(names.fromIdNode(newFunc.name), newFunc.symbol);
             }
-            newFuncBody.stmts.add(stmts.get(i));
+            newFuncBody.stmts.add(statement);
         }
-
+        newFuncBody.stmts.addAll(stmts.subList(varDefIndex, stmts.size()));
         generatedFunctions.add(newFunc);
-
         for (int j = 0; j < generatedFunctions.size() - 1; j++) {
             BLangFunction thisFunction = generatedFunctions.get(j);
 
-            BLangCheckedExpr checkedExpr =
-                    ASTBuilderUtil.createCheckExpr(initFunction.pos,
-                            desugar.createInvocationNode(generatedFunctions.get(j + 1).name.value,
-                                    new ArrayList<>(), symTable.errorOrNilType),
-                            symTable.nilType);
+            BLangCheckedExpr checkedExpr = ASTBuilderUtil.createCheckExpr(initFunction.pos,
+                    desugar.createInvocationNode(generatedFunctions.get(j + 1).name.value, new ArrayList<>(),
+                            symTable.errorOrNilType), symTable.nilType);
             checkedExpr.equivalentErrorTypeList.add(symTable.errorType);
-
             BLangExpressionStmt expressionStmt = ASTBuilderUtil
                     .createExpressionStmt(thisFunction.pos, (BLangBlockFunctionBody) thisFunction.body);
             expressionStmt.expr = checkedExpr;
@@ -187,15 +176,20 @@ public class LargeMethodSplitter {
                 packageNode.topLevelNodes.add(thisFunction);
             }
         }
-
         rewriteLastSplitFunction(packageNode, env, generatedFunctions);
         initFuncIndex = 0;
-        return generatedFunctions.get(0);
+        return generatedFunctions.getFirst();
     }
 
-    private boolean isAssignmentWithInitOrRecordLiteralExpr(BLangStatement statement) {
+    private boolean isGlobalOrConstantAssignment(BLangStatement statement, SymbolEnv env) {
+        // These will be removed from init method during lazy load desugar
         if (statement.getKind() == NodeKind.ASSIGNMENT) {
-            return desugar.isMappingOrObjectConstructorOrObjInit(((BLangAssignment) statement).getExpression());
+            BLangAssignment assignment = (BLangAssignment) statement;
+            BLangExpression varRef = assignment.varRef;
+            if (varRef.getKind() == NodeKind.SIMPLE_VARIABLE_REF) {
+                BSymbol symbol = ((BLangSimpleVarRef) varRef).symbol;
+                return symbol.owner == env.enclPkg.symbol && !SymbolFlags.isFlagOn(symbol.flags, Flags.CONFIGURABLE);
+            }
         }
         return false;
     }
@@ -231,7 +225,7 @@ public class LargeMethodSplitter {
         }
 
         // original return statement is added to the start function created last
-        newFuncBody.stmts.add(stmts.get(stmts.size() - 1));
+        newFuncBody.stmts.add(stmts.getLast());
         generatedFunctions.add(newFunc);
 
         // statement is added to each function except the last created function
@@ -262,7 +256,7 @@ public class LargeMethodSplitter {
         // start function created last is also added to the function list
         rewriteLastSplitFunction(packageNode, env, generatedFunctions);
         startFuncIndex = 0;
-        return generatedFunctions.get(0);
+        return generatedFunctions.getFirst();
     }
 
     /**
@@ -292,11 +286,12 @@ public class LargeMethodSplitter {
             newFuncBody.stmts.add(stmts.get(i));
         }
 
-        newFuncBody.stmts.add(stmts.get(stmts.size() - 1));
+        newFuncBody.stmts.add(stmts.getLast());
         generatedFunctions.add(newFunc);
 
-        // for the stop function, splitting is done same as the start function except here
-        // here just need only to call the next created stop function because the return value is () and not ()|error
+        // For the stop function, splitting is done the same as the start function except here.
+        // Here, it is only required to call the next created stop function
+        // because the return value is () and not ()|error.
         for (int j = 0; j < generatedFunctions.size() - 1; j++) {
             BLangFunction thisFunction = generatedFunctions.get(j);
 
@@ -319,14 +314,14 @@ public class LargeMethodSplitter {
 
         rewriteLastSplitFunction(packageNode, env, generatedFunctions);
         stopFuncIndex = 0;
-        return generatedFunctions.get(0);
+        return generatedFunctions.getFirst();
     }
 
     private void rewriteLastSplitFunction(BLangPackage packageNode, SymbolEnv env,
                                           List<BLangFunction> generatedFunctions) {
         if (generatedFunctions.size() > 1) {
             // add last func
-            BLangFunction lastFunc = generatedFunctions.get(generatedFunctions.size() - 1);
+            BLangFunction lastFunc = generatedFunctions.getLast();
             lastFunc = desugar.rewrite(lastFunc, env);
             packageNode.functions.add(lastFunc);
             packageNode.topLevelNodes.add(lastFunc);
