@@ -18,6 +18,7 @@
 package org.wso2.ballerinalang.compiler.semantics.analyzer;
 
 import io.ballerina.tools.diagnostics.Location;
+import io.ballerina.types.PredefinedType;
 import org.ballerinalang.compiler.CompilerPhase;
 import org.ballerinalang.model.elements.Flag;
 import org.ballerinalang.model.symbols.SymbolKind;
@@ -26,11 +27,13 @@ import org.ballerinalang.model.tree.NodeKind;
 import org.ballerinalang.model.tree.OperatorKind;
 import org.ballerinalang.model.tree.TopLevelNode;
 import org.ballerinalang.model.tree.expressions.RecordLiteralNode;
+import org.ballerinalang.model.tree.statements.VariableDefinitionNode;
 import org.ballerinalang.model.tree.types.TypeNode;
 import org.ballerinalang.util.diagnostic.DiagnosticErrorCode;
 import org.ballerinalang.util.diagnostic.DiagnosticWarningCode;
 import org.wso2.ballerinalang.compiler.diagnostic.BLangDiagnosticLog;
 import org.wso2.ballerinalang.compiler.semantics.analyzer.cyclefind.GlobalVariableRefAnalyzer;
+import org.wso2.ballerinalang.compiler.semantics.model.Scope;
 import org.wso2.ballerinalang.compiler.semantics.model.SymbolEnv;
 import org.wso2.ballerinalang.compiler.semantics.model.SymbolTable;
 import org.wso2.ballerinalang.compiler.semantics.model.symbols.BConstantSymbol;
@@ -43,6 +46,7 @@ import org.wso2.ballerinalang.compiler.semantics.model.symbols.BVarSymbol;
 import org.wso2.ballerinalang.compiler.semantics.model.symbols.SymTag;
 import org.wso2.ballerinalang.compiler.semantics.model.symbols.Symbols;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BArrayType;
+import org.wso2.ballerinalang.compiler.semantics.model.types.BErrorType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BField;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BMapType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BObjectType;
@@ -75,8 +79,11 @@ import org.wso2.ballerinalang.compiler.tree.BLangTypeDefinition;
 import org.wso2.ballerinalang.compiler.tree.BLangVariable;
 import org.wso2.ballerinalang.compiler.tree.BLangXMLNS;
 import org.wso2.ballerinalang.compiler.tree.OCEDynamicEnvironmentData;
+import org.wso2.ballerinalang.compiler.tree.clauses.BLangCollectClause;
 import org.wso2.ballerinalang.compiler.tree.clauses.BLangDoClause;
 import org.wso2.ballerinalang.compiler.tree.clauses.BLangFromClause;
+import org.wso2.ballerinalang.compiler.tree.clauses.BLangGroupByClause;
+import org.wso2.ballerinalang.compiler.tree.clauses.BLangGroupingKey;
 import org.wso2.ballerinalang.compiler.tree.clauses.BLangJoinClause;
 import org.wso2.ballerinalang.compiler.tree.clauses.BLangLetClause;
 import org.wso2.ballerinalang.compiler.tree.clauses.BLangLimitClause;
@@ -89,11 +96,13 @@ import org.wso2.ballerinalang.compiler.tree.clauses.BLangOrderKey;
 import org.wso2.ballerinalang.compiler.tree.clauses.BLangSelectClause;
 import org.wso2.ballerinalang.compiler.tree.clauses.BLangWhereClause;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangAccessExpression;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangAlternateWorkerReceive;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangAnnotAccessExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangArrowFunction;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangBinaryExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangCheckPanickedExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangCheckedExpr;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangCollectContextInvocation;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangCommitExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangConstRef;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangConstant;
@@ -101,12 +110,14 @@ import org.wso2.ballerinalang.compiler.tree.expressions.BLangElvisExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangErrorConstructorExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangErrorVarRef;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangExpression;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangExtendedXMLNavigationAccess;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangFieldBasedAccess;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangGroupExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangIndexBasedAccess;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangInferredTypedescDefaultNode;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangInvocation;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangInvocation.BLangActionInvocation;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangInvocation.BLangResourceAccessInvocation;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangIsAssignableExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangLambdaFunction;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangLetExpression;
@@ -115,22 +126,33 @@ import org.wso2.ballerinalang.compiler.tree.expressions.BLangLiteral;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangMarkdownDocumentationLine;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangMarkdownParameterDocumentation;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangMarkdownReturnParameterDocumentation;
-import org.wso2.ballerinalang.compiler.tree.expressions.BLangMatchExpression;
-import org.wso2.ballerinalang.compiler.tree.expressions.BLangMatchExpression.BLangMatchExprPatternClause;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangMatchGuard;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangMultipleWorkerReceive;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangNamedArgsExpression;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangNaturalExpression;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangObjectConstructorExpression;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangQueryAction;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangQueryExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangRawTemplateLiteral;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangReAssertion;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangReAtomCharOrEscape;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangReAtomQuantifier;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangReCapturingGroups;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangReCharSet;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangReCharSetRange;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangReCharacterClass;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangReFlagExpression;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangReQuantifier;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangReSequence;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangReTerm;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangRecordLiteral;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangRecordVarRef;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangRegExpTemplateLiteral;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangRestArgsExpression;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangServiceConstructorExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangSimpleVarRef;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangStringTemplateLiteral;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangTableConstructorExpr;
-import org.wso2.ballerinalang.compiler.tree.expressions.BLangTableMultiKeyExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangTernaryExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangTransactionalExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangTrapExpr;
@@ -143,6 +165,7 @@ import org.wso2.ballerinalang.compiler.tree.expressions.BLangUnaryExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangVariableReference;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangWaitExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangWaitForAllExpr;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangWorkerAsyncSendExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangWorkerFlushExpr;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangWorkerReceive;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangWorkerSyncSendExpr;
@@ -150,6 +173,9 @@ import org.wso2.ballerinalang.compiler.tree.expressions.BLangXMLAttribute;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangXMLCommentLiteral;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangXMLElementAccess;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangXMLElementLiteral;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangXMLFilterStepExtend;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangXMLIndexedStepExtend;
+import org.wso2.ballerinalang.compiler.tree.expressions.BLangXMLMethodCallStepExtend;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangXMLNavigationAccess;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangXMLProcInsLiteral;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangXMLQName;
@@ -171,9 +197,6 @@ import org.wso2.ballerinalang.compiler.tree.statements.BLangForeach;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangForkJoin;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangIf;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangLock;
-import org.wso2.ballerinalang.compiler.tree.statements.BLangMatch;
-import org.wso2.ballerinalang.compiler.tree.statements.BLangMatch.BLangMatchStaticBindingPatternClause;
-import org.wso2.ballerinalang.compiler.tree.statements.BLangMatch.BLangMatchStructuredBindingPatternClause;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangMatchStatement;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangPanic;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangRecordDestructure;
@@ -188,7 +211,6 @@ import org.wso2.ballerinalang.compiler.tree.statements.BLangTransaction;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangTupleDestructure;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangTupleVariableDef;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangWhile;
-import org.wso2.ballerinalang.compiler.tree.statements.BLangWorkerSend;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangXMLNSStatement;
 import org.wso2.ballerinalang.compiler.tree.types.BLangArrayType;
 import org.wso2.ballerinalang.compiler.tree.types.BLangBuiltInRefTypeNode;
@@ -219,6 +241,7 @@ import java.util.ArrayList;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -245,18 +268,25 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     private final SymbolResolver symResolver;
     private final Names names;
     private SymbolEnv env;
-    private SymbolTable symTable;
-    private BLangDiagnosticLog dlog;
-    private Types types;
+    private final SymbolTable symTable;
+    private final BLangDiagnosticLog dlog;
+    private final Types types;
     private Map<BSymbol, InitStatus> uninitializedVars;
     private Map<BSymbol, Location> unusedErrorVarsDeclaredWithVar;
     private Map<BSymbol, Location> unusedLocalVariables;
+    private final Map<BSymbol, BSymbol> symbolOwner;
+    private final Map<BSymbol, BSymbol> dependsOnLambda;
+    private final Map<BSymbol, Set<BSymbol>> invocationToDependent;
     private Map<BSymbol, Set<BSymbol>> globalNodeDependsOn;
     private Map<BSymbol, Set<BSymbol>> functionToDependency;
+    private Map<BLangOnFailClause, Map<BSymbol, InitStatus>> possibleFailureUnInitVars;
+    private Deque<BLangOnFailClause> enclosingOnFailClause;
     private boolean flowTerminated = false;
+    private boolean possibleFailureReached = false;
+    private boolean definiteFailureReached = false;
 
     private static final CompilerContext.Key<DataflowAnalyzer> DATAFLOW_ANALYZER_KEY = new CompilerContext.Key<>();
-    private Deque<BSymbol> currDependentSymbolDeque;
+    private final Deque<BSymbol> currDependentSymbolDeque;
     private final GlobalVariableRefAnalyzer globalVariableRefAnalyzer;
 
     private DataflowAnalyzer(CompilerContext context) {
@@ -269,6 +299,9 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         this.currDependentSymbolDeque = new ArrayDeque<>();
         this.globalVariableRefAnalyzer = GlobalVariableRefAnalyzer.getInstance(context);
         this.unusedLocalVariables = new HashMap<>();
+        this.symbolOwner = new HashMap<>();
+        this.dependsOnLambda = new HashMap<>();
+        this.invocationToDependent = new HashMap<>();
     }
 
     public static DataflowAnalyzer getInstance(CompilerContext context) {
@@ -289,6 +322,8 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         this.uninitializedVars = new LinkedHashMap<>();
         this.globalNodeDependsOn = new LinkedHashMap<>();
         this.functionToDependency = new HashMap<>();
+        this.possibleFailureUnInitVars = new LinkedHashMap<>();
+        this.enclosingOnFailClause = new ArrayDeque<>();
         this.dlog.setCurrentPackageId(pkgNode.packageID);
         SymbolEnv pkgEnv = this.symTable.pkgEnvMap.get(pkgNode.symbol);
         analyzeNode(pkgNode, pkgEnv);
@@ -326,7 +361,8 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         }
         checkForUninitializedGlobalVars(pkgNode.globalVars);
         pkgNode.getTestablePkgs().forEach(testablePackage -> visit((BLangPackage) testablePackage));
-        this.globalVariableRefAnalyzer.analyzeAndReOrder(pkgNode, this.globalNodeDependsOn);
+        updateProvidersForLambdaInvocations();
+        this.globalVariableRefAnalyzer.analyzeAndReOrder(pkgNode, this.globalNodeDependsOn, this.symbolOwner);
         this.globalVariableRefAnalyzer.populateFunctionDependencies(this.functionToDependency, pkgNode.globalVars);
         pkgNode.globalVariableDependencies = globalVariableRefAnalyzer.getGlobalVariablesDependsOn();
         checkUnusedImports(pkgNode.imports);
@@ -338,6 +374,36 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         this.unusedErrorVarsDeclaredWithVar = prevUnusedErrorVarsDeclaredWithVar;
 
         pkgNode.completedPhases.add(CompilerPhase.DATAFLOW_ANALYZE);
+    }
+
+    /**
+     * When seeing a lambda function expression, we do not add it as a provider to current dependent symbol.
+     * Instead, we need to add it as a provider when it is invoked. This method is used to update the providers
+     * for those invocations.
+     */
+    private void updateProvidersForLambdaInvocations() {
+        // eg:
+        // function() returns int a = function() returns int { return 1; };
+        // int b = a();
+        // int c = a();
+        // `a` is already a provider for `b` and `c`. But the lambda function is not added as a provider for `a`. Hence,
+        // lambda function will not be a provider of `b` and `c` at this point.
+        // This function will add the lambda as a provider for `b` and `c`
+        //
+        // dependsOnLambda will contain a -> lambda
+        // invocationToDependent will contain a -> {b, c}
+        // now the lambda should be a provider for `b` and `c`
+        for (Map.Entry<BSymbol, BSymbol> entry : dependsOnLambda.entrySet()) {
+            BSymbol dependent = entry.getKey();
+            BSymbol lambda = entry.getValue();
+            if (invocationToDependent.containsKey(dependent)) {
+                Set<BSymbol> dependents = invocationToDependent.get(dependent);
+                dependents.forEach(d -> {
+                    Set<BSymbol> providers = globalNodeDependsOn.computeIfAbsent(d, s -> new LinkedHashSet<>());
+                    providers.add(lambda);
+                });
+            }
+        }
     }
 
     private void addModuleInitToSortedNodeList(BLangPackage pkgNode, List<TopLevelNode> sortedListOfNodes) {
@@ -368,9 +434,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
 
         this.currDependentSymbolDeque.push(funcNode.symbol);
         SymbolEnv moduleInitFuncEnv = SymbolEnv.createModuleInitFunctionEnv(funcNode, funcNode.symbol.scope, env);
-        for (BLangAnnotationAttachment bLangAnnotationAttachment : funcNode.annAttachments) {
-            analyzeNode(bLangAnnotationAttachment.expr, env);
-        }
+        funcNode.annAttachments.forEach(attachment -> analyzeNode(attachment, env));
         analyzeNode(funcNode.body, moduleInitFuncEnv);
         this.currDependentSymbolDeque.pop();
 
@@ -399,9 +463,10 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         this.unusedLocalVariables = new HashMap<>();
         this.currDependentSymbolDeque.push(funcNode.symbol);
 
-        funcNode.annAttachments.forEach(bLangAnnotationAttachment -> analyzeNode(bLangAnnotationAttachment.expr, env));
+        funcNode.annAttachments.forEach(attachment -> analyzeNode(attachment, env));
         funcNode.requiredParams.forEach(param -> analyzeNode(param, funcEnv));
         analyzeNode(funcNode.restParam, funcEnv);
+        analyzeNode(funcNode.returnTypeNode, env);
 
         if (funcNode.flagSet.contains(Flag.OBJECT_CTOR)) {
             visitFunctionBodyWithDynamicEnv(funcNode, funcEnv);
@@ -426,6 +491,8 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         // updated/marked as initialized.
         this.uninitializedVars = copyUninitializedVars();
         this.flowTerminated = false;
+        this.possibleFailureReached = false;
+        this.definiteFailureReached = false;
 
         analyzeNode(funcNode.body, funcEnv);
 
@@ -492,20 +559,19 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
             analyzeNode(attachedExpr, env);
         }
 
-        service.annAttachments.forEach(bLangAnnotationAttachment -> analyzeNode(bLangAnnotationAttachment.expr, env));
+        service.annAttachments.forEach(attachment -> analyzeNode(attachment, env));
         this.currDependentSymbolDeque.pop();
     }
 
     @Override
     public void visit(BLangTypeDefinition typeDefinition) {
-        SymbolEnv typeDefEnv;
         BSymbol symbol = typeDefinition.symbol;
         if (typeDefinition.symbol.kind == SymbolKind.TYPE_DEF) {
             symbol = symbol.type.tsymbol;
         }
-        typeDefEnv = SymbolEnv.createTypeEnv(typeDefinition.typeNode, symbol.scope, env);
         this.currDependentSymbolDeque.push(symbol);
-        analyzeNode(typeDefinition.typeNode, typeDefEnv);
+        typeDefinition.annAttachments.forEach(attachment -> analyzeNode(attachment, env));
+        analyzeNode(typeDefinition.typeNode, env);
         this.currDependentSymbolDeque.pop();
     }
 
@@ -516,29 +582,31 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         Map<BSymbol, Location> prevUnusedLocalVariables = null;
         Map<BSymbol, InitStatus> prevUninitializedVars = null;
         boolean visitedOCE = false;
-        if (classDef.flagSet.contains(Flag.OBJECT_CTOR) && classDef.oceEnvData.capturedClosureEnv != null &&
-                        classDef.oceEnvData.capturedClosureEnv.enclEnv != null) {
-            env = classDef.oceEnvData.capturedClosureEnv.enclEnv;
+        if (classDef.flagSet.contains(Flag.OBJECT_CTOR) && classDef.oceEnvData.capturedClosureEnv != null) {
+            env = classDef.oceEnvData.capturedClosureEnv;
             prevUnusedLocalVariables = this.unusedLocalVariables;
             prevUninitializedVars = this.uninitializedVars;
             this.unusedLocalVariables = new HashMap<>();
             this.unusedLocalVariables.putAll(prevUnusedLocalVariables);
             this.uninitializedVars = copyUninitializedVars();
             this.flowTerminated = false;
+            this.possibleFailureReached = false;
+            this.definiteFailureReached = false;
             visitedOCE = true;
         }
-        SymbolEnv objectEnv = SymbolEnv.createClassEnv(classDef, classDef.symbol.scope, env);
         this.currDependentSymbolDeque.push(classDef.symbol);
 
         for (BLangAnnotationAttachment bLangAnnotationAttachment : classDef.annAttachments) {
-            analyzeNode(bLangAnnotationAttachment.expr, env);
+            analyzeNode(bLangAnnotationAttachment, env);
         }
 
-        classDef.fields.forEach(field -> analyzeNode(field, objectEnv));
-        classDef.referencedFields.forEach(field -> analyzeNode(field, objectEnv));
+        classDef.fields.forEach(field -> analyzeNode(field, this.env));
+        classDef.referencedFields.forEach(field -> analyzeNode(field, this.env));
 
         // Visit the constructor with the same scope as the object
+        analyzeNode(classDef.initFunction, env);
         if (classDef.initFunction != null) {
+            SymbolEnv objectEnv = SymbolEnv.createClassEnv(classDef, classDef.symbol.scope, env);
             if (classDef.initFunction.body == null) {
                 // if the init() function is defined as an outside function definition
                 Optional<BLangFunction> outerFuncDef =
@@ -608,7 +676,8 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         }
         visit(objectConstructorExpression.classNode);
         visit(objectConstructorExpression.typeInit);
-        addDependency(objectConstructorExpression.getBType().tsymbol, objectConstructorExpression.classNode.symbol);
+        addDependency(Types.getImpliedType(objectConstructorExpression.getBType()).tsymbol,
+                objectConstructorExpression.classNode.symbol);
     }
 
     @Override
@@ -633,6 +702,11 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     @Override
     public void visit(BLangSimpleVariable variable) {
         BVarSymbol symbol = variable.symbol;
+        boolean isRecordField = variable.flagSet.contains(Flag.FIELD);
+        if (!isRecordField) {
+            this.currDependentSymbolDeque.push(symbol);
+        }
+
         analyzeNode(variable.typeNode, env);
         if (symbol == null) {
             if (variable.expr != null) {
@@ -640,11 +714,9 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
             }
             return;
         }
-
-        this.currDependentSymbolDeque.push(symbol);
         if (variable.typeNode != null && variable.typeNode.getBType() != null) {
             BType type = variable.typeNode.getBType();
-            recordGlobalVariableReferenceRelationship(Types.getReferredType(type).tsymbol);
+            recordGlobalVariableReferenceRelationship(Types.getImpliedType(type).tsymbol);
         }
         boolean withInModuleVarLetExpr = symbol.owner.tag == SymTag.LET && isGlobalVarSymbol(env.enclVarSym);
         if (withInModuleVarLetExpr) {
@@ -684,7 +756,9 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
             if (withInModuleVarLetExpr) { // double pop
                 this.currDependentSymbolDeque.pop();
             }
-            this.currDependentSymbolDeque.pop();
+            if (!isRecordField) {
+                this.currDependentSymbolDeque.pop();
+            }
         }
     }
 
@@ -712,7 +786,18 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     public void visit(BLangCompoundAssignment compoundAssignNode) {
         analyzeNode(compoundAssignNode.expr, env);
         analyzeNode(compoundAssignNode.varRef, env);
+        //compound statement can have assignment to itself. eg: x += x;
+        //so we need to avoid removing the symbol from possibleFailureUnInitVars list after analyzing the expression.
+        boolean resetOnFailInits = false;
+        Map<BSymbol, InitStatus> onFailInitStatus = null;
+        if (isOnFailEnclosed()) {
+            onFailInitStatus = copyOnFailUninitializedVars(this.enclosingOnFailClause.peek());
+            resetOnFailInits = onFailInitStatus.containsKey(compoundAssignNode.varRef.symbol);
+        }
         checkAssignment(compoundAssignNode.varRef);
+        if (resetOnFailInits) {
+            updateUnInitVarsForOnFailClause(onFailInitStatus);
+        }
         this.uninitializedVars.remove(compoundAssignNode.varRef.symbol);
     }
 
@@ -724,7 +809,9 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     @Override
     public void visit(BLangReturn returnNode) {
         analyzeNode(returnNode.expr, env);
-
+        // If the regular block of code within a failure-handling statement
+        // ends with a "return" statement, we only care about the outcome of the on-fail branch.
+        this.definiteFailureReached = true;
         // return statement will exit from the function.
         terminateFlow();
     }
@@ -740,22 +827,40 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         BranchResult ifResult = analyzeBranch(ifNode.body, env);
         BranchResult elseResult = analyzeBranch(ifNode.elseStmt, env);
 
-        // If the flow was terminated within 'if' block, then after the if-else block,
-        // only the results of the 'else' block matters.
-        if (ifResult.flowTerminated) {
-            this.uninitializedVars = elseResult.uninitializedVars;
-            return;
+        //if both if and else blocks contains uninitialized variables due to possible failure, then merge them.
+        if (ifResult.possibleFailureUnInitVars != null && elseResult.possibleFailureUnInitVars != null) {
+            updateUnInitVarsForOnFailClause(mergeUninitializedVars(ifResult.possibleFailureUnInitVars,
+                    elseResult.possibleFailureUnInitVars));
         }
+        if (!isOnFailEnclosed() || !ifResult.definiteFailureReached
+                || !elseResult.definiteFailureReached) {
+            boolean ifExprConst
+                    = ConditionResolver.checkConstCondition(types, symTable, ifNode.expr) == symTable.trueType;
+            // If the flow was terminated within 'if' block, then after the if-else block,
+            // only the results of the 'else' block matters.
+            if (ifResult.flowTerminated) {
+                this.uninitializedVars = elseResult.uninitializedVars;
+                this.possibleFailureReached = ifResult.possibleFailureReached;
+                if (ifExprConst) {
+                    this.flowTerminated = true;
+                    this.definiteFailureReached = ifResult.definiteFailureReached;
+                }
+                return;
+            }
 
-        // If the flow was terminated within 'else' block, then after the if-else block,
-        // only the results of the 'if' block matters.
-        if (elseResult.flowTerminated ||
-                ConditionResolver.checkConstCondition(types, symTable, ifNode.expr) == symTable.trueType) {
-            this.uninitializedVars = ifResult.uninitializedVars;
-            return;
+            // If the flow was terminated within 'else' block, then after the if-else block,
+            // only the results of the 'if' block matters.
+            if (elseResult.flowTerminated || ifExprConst) {
+                this.uninitializedVars = ifResult.uninitializedVars;
+                if (ifResult.possibleFailureUnInitVars != null) {
+                    updateUnInitVarsForOnFailClause(ifResult.possibleFailureUnInitVars);
+                }
+                return;
+            }
         }
-
         this.uninitializedVars = mergeUninitializedVars(ifResult.uninitializedVars, elseResult.uninitializedVars);
+        this.flowTerminated = ifResult.flowTerminated && elseResult.flowTerminated;
+        this.definiteFailureReached = isDefiniteFailureCase(ifResult, elseResult);
     }
 
     @Override
@@ -821,39 +926,6 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     }
 
     @Override
-    public void visit(BLangMatch match) {
-        analyzeNode(match.expr, env);
-        if (match.onFailClause != null) {
-            analyzeNode(match.onFailClause, env);
-        }
-
-        Map<BSymbol, InitStatus> uninitVars = new HashMap<>();
-        BranchResult lastPatternResult = null;
-        for (BLangMatch.BLangMatchBindingPatternClause patternClause : match.patternClauses) {
-            if (patternClause.isLastPattern) {
-                lastPatternResult = analyzeBranch(patternClause, env);
-            } else {
-                BranchResult result = analyzeBranch(patternClause, env);
-                // If the flow was terminated within the block, then that branch should not be considered for
-                // analyzing the data-flow for the downstream code.
-                if (result.flowTerminated) {
-                    continue;
-                }
-                uninitVars = mergeUninitializedVars(uninitVars, result.uninitializedVars);
-            }
-        }
-
-        if (lastPatternResult != null) {
-            // only if last pattern is present, uninitializedVars should be updated
-            uninitVars = mergeUninitializedVars(uninitVars, lastPatternResult.uninitializedVars);
-            this.uninitializedVars = uninitVars;
-            return;
-        }
-        uninitVars = mergeUninitializedVars(new HashMap<>(), this.uninitializedVars);
-        this.uninitializedVars = uninitVars;
-    }
-
-    @Override
     public void visit(BLangForeach foreach) {
         BLangExpression collection = foreach.collection;
 
@@ -863,10 +935,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         }
 
         analyzeNode(collection, env);
-        analyzeNode(foreach.body, env);
-        if (foreach.onFailClause != null) {
-            analyzeNode(foreach.onFailClause, env);
-        }
+        analyzeStmtWithOnFail(foreach.body, foreach.onFailClause);
     }
 
     @Override
@@ -881,57 +950,154 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         Map<BSymbol, InitStatus> prevUninitializedVars = this.uninitializedVars;
 
         analyzeNode(whileNode.expr, env);
-        BranchResult whileResult = analyzeBranch(whileNode.body, env);
-
-        if (whileNode.onFailClause != null) {
-            analyzeNode(whileNode.onFailClause, env);
-        }
 
         BType constCondition = ConditionResolver.checkConstCondition(types, symTable, whileNode.expr);
-
-        if (constCondition == symTable.falseType) {
-            this.uninitializedVars = prevUninitializedVars;
-            return;
+        boolean ifExprConst = constCondition == symTable.trueType;
+        boolean failuresSelfHandled = whileNode.onFailClause != null;
+        if (ifExprConst) {
+            //if the condition is always true, we don't have to consider it as a branch.
+            analyzeStmtWithOnFail(whileNode.body, whileNode.onFailClause);
+        } else {
+            createUninitializedVarsForOnFailClause(whileNode.onFailClause);
+            BranchResult whileResult = analyzeBranch(whileNode.body, env);
+            if (constCondition == symTable.falseType) {
+                //if the condition is always false, we can reset to the previous state.
+                this.uninitializedVars = prevUninitializedVars;
+                removeEnclosingOnFail(failuresSelfHandled);
+                return;
+            }
+            this.uninitializedVars = mergeUninitializedVars(this.uninitializedVars, whileResult.uninitializedVars);
+            if (failuresSelfHandled) {
+                BranchResult onfailResult = analyzeOnFailBranch(whileNode.onFailClause, whileResult);
+                if (whileResult.definiteFailureReached) {
+                    this.uninitializedVars = onfailResult.uninitializedVars;
+                } else {
+                    this.uninitializedVars
+                            = mergeUninitializedVars(this.uninitializedVars, onfailResult.uninitializedVars);
+                }
+                updateEnclosingOnFailUnInits(this.uninitializedVars);
+                removeEnclosingOnFail(true);
+            }
         }
+    }
 
-        if (whileResult.flowTerminated || constCondition == symTable.trueType) {
-            this.uninitializedVars = whileResult.uninitializedVars;
-            return;
+    private void createUninitializedVarsForOnFailClause(BLangOnFailClause onFailClause) {
+        if (onFailClause != null) {
+            this.enclosingOnFailClause.push(onFailClause);
+            this.possibleFailureUnInitVars.put(onFailClause, copyUninitializedVars());
         }
+    }
 
-        this.uninitializedVars = mergeUninitializedVars(this.uninitializedVars, whileResult.uninitializedVars);
+    private void updateUnInitVarsForOnFailClause(Map<BSymbol, InitStatus> uninitializedVars) {
+        if (isOnFailEnclosed()) {
+            this.possibleFailureUnInitVars.put(this.enclosingOnFailClause.peek(), uninitializedVars);
+        }
+    }
+
+    private void removeEnclosingOnFail(boolean onFailAvailable) {
+        if (onFailAvailable) {
+            this.possibleFailureUnInitVars.remove(this.enclosingOnFailClause.pop());
+        }
     }
 
     @Override
     public void visit(BLangDo doNode) {
-        analyzeNode(doNode.body, env);
-        if (doNode.onFailClause != null) {
-            analyzeNode(doNode.onFailClause, env);
+        analyzeStmtWithOnFail(doNode.body, doNode.onFailClause);
+    }
+
+    private void analyzeStmtWithOnFail(BLangBlockStmt blockStmt, BLangOnFailClause onFailClause) {
+        createUninitializedVarsForOnFailClause(onFailClause);
+        BranchResult doResult = analyzeBranch(blockStmt, env);
+        this.uninitializedVars = doResult.uninitializedVars;
+        if (onFailClause == null) {
+            updateUnInitVarsForOnFailClause(doResult.possibleFailureUnInitVars);
+            return;
+        }
+
+        // Analyze the on-fail block
+        BranchResult onFailResult = analyzeOnFailBranch(onFailClause, doResult);
+        if (blockStmt.failureBreakMode == BLangBlockStmt.FailureBreakMode.NOT_BREAKABLE) {
+            // If the failureBreakMode is NOT_BREAKABLE, then the on-fail block is not reachable
+            this.uninitializedVars
+                    = mergeUninitializedVars(doResult.uninitializedVars, doResult.possibleFailureUnInitVars);
+            removeEnclosingOnFail(true);
+            return;
+        }
+
+        Map<BSymbol, InitStatus> mergedUninitializedVars =
+                mergeUninitializedVars(doResult.uninitializedVars, onFailResult.uninitializedVars);
+        // If the control flow is interrupted inside the 'onfail' block,
+        // only the results of the 'do' block are relevant after the execution
+        // of the entire 'stmt-with-on-fail' statement.
+        if (onFailResult.flowTerminated || onFailResult.possibleFailureReached) {
+            this.uninitializedVars = doResult.uninitializedVars;
+        } else if (doResult.definiteFailureReached) {
+            this.uninitializedVars = onFailResult.uninitializedVars;
+        } else {
+            this.uninitializedVars = mergedUninitializedVars;
+        }
+
+        updateEnclosingOnFailUnInits(mergedUninitializedVars);
+        removeEnclosingOnFail(true);
+    }
+
+    private void updateEnclosingOnFailUnInits(Map<BSymbol, InitStatus> possibleUninitializedVars) {
+        // Update the enclosing on-fail clause's possible failure uninitialized variables
+        int enclosingOnFailSize = this.enclosingOnFailClause.size();
+        if (enclosingOnFailSize > 1) {
+            Iterator<BLangOnFailClause> iterator = this.enclosingOnFailClause.iterator();
+            // get second top element
+            iterator.next();
+            BLangOnFailClause enclosingOnFail = iterator.next();
+            this.possibleFailureUnInitVars.put(enclosingOnFail, possibleUninitializedVars);
         }
     }
 
+    private BranchResult analyzeOnFailBranch(BLangOnFailClause onFailClause, BranchResult doResult) {
+        Map<BSymbol, InitStatus> prevUninitializedVars = this.uninitializedVars;
+        if (doResult.possibleFailureUnInitVars != null) {
+            this.uninitializedVars = mergeUninitializedVars(this.uninitializedVars, doResult.possibleFailureUnInitVars);
+        }
+        this.possibleFailureUnInitVars.put(onFailClause, copyUninitializedVars());
+        BranchResult onFailResult = analyzeBranch(onFailClause, env);
+        if (!onFailResult.possibleFailureUnInitVars.isEmpty()) {
+            onFailResult.uninitializedVars = mergeUninitializedVars(onFailResult.uninitializedVars,
+                    onFailResult.possibleFailureUnInitVars);
+        }
+        this.uninitializedVars = prevUninitializedVars;
+        return onFailResult;
+    }
+
+    private boolean isOnFailEnclosed() {
+        return !this.enclosingOnFailClause.isEmpty();
+    }
+
+    private boolean isDefiniteFailureCase(BranchResult ifResult, BranchResult elseResult) {
+        return ifResult.definiteFailureReached && elseResult.definiteFailureReached;
+    }
+
+    @Override
     public void visit(BLangFail failNode) {
+        if (isOnFailEnclosed()) {
+            this.possibleFailureReached = true;
+            this.definiteFailureReached = true;
+        }
+        terminateFlow();
         analyzeNode(failNode.expr, env);
     }
 
     @Override
     public void visit(BLangLock lockNode) {
-        analyzeNode(lockNode.body, this.env);
-        if (lockNode.onFailClause != null) {
-            analyzeNode(lockNode.onFailClause, env);
-        }
+        analyzeStmtWithOnFail(lockNode.body, lockNode.onFailClause);
     }
 
     @Override
     public void visit(BLangTransaction transactionNode) {
-        analyzeNode(transactionNode.transactionBody, env);
-        if (transactionNode.onFailClause != null) {
-            analyzeNode(transactionNode.onFailClause, env);
-        }
+        analyzeStmtWithOnFail(transactionNode.transactionBody, transactionNode.onFailClause);
 
         // marks the injected import as used
-        Name transactionPkgName = names.fromString(Names.DOT.value + Names.TRANSACTION_PACKAGE.value);
-        Name compUnitName = names.fromString(transactionNode.pos.lineRange().filePath());
+        Name transactionPkgName = Names.fromString(Names.DOT.value + Names.TRANSACTION_PACKAGE.value);
+        Name compUnitName = Names.fromString(transactionNode.pos.lineRange().fileName());
         this.symResolver.resolvePrefixSymbol(env, transactionPkgName, compUnitName);
     }
 
@@ -962,13 +1128,28 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     }
 
     @Override
-    public void visit(BLangWorkerSend workerSendNode) {
-        analyzeNode(workerSendNode.expr, env);
+    public void visit(BLangWorkerAsyncSendExpr asyncSendExpr) {
+        analyzeNode(asyncSendExpr.expr, env);
     }
 
     @Override
     public void visit(BLangWorkerSyncSendExpr syncSendExpr) {
         analyzeNode(syncSendExpr.expr, env);
+    }
+
+    @Override
+    public void visit(BLangAlternateWorkerReceive altWorkerReceive) {
+        for (BLangWorkerReceive workerReceive : altWorkerReceive.getWorkerReceives()) {
+            analyzeNode(workerReceive, env);
+        }
+    }
+
+    @Override
+    public void visit(BLangMultipleWorkerReceive multipleWorkerReceive) {
+        for (BLangMultipleWorkerReceive.BLangReceiveField rvField : multipleWorkerReceive.getReceiveFields()) {
+            analyzeNode(rvField.getKey(), env);
+            analyzeNode(rvField.getWorkerReceive(), env);
+        }
     }
 
     @Override
@@ -1230,7 +1411,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
             }
         } else if (node.getKind() == NodeKind.RECORD_LITERAL_KEY_VALUE) {
             BLangRecordLiteral.BLangRecordKeyValueField field = (BLangRecordLiteral.BLangRecordKeyValueField) node;
-            result = 31 * result + hash(field.key.expr) + hash(field.valueExpr);
+            result = hash(field.key.expr) + hash(field.valueExpr);
         } else if (node.getKind() == NodeKind.ARRAY_LITERAL_EXPR) {
             BLangListConstructorExpr.BLangArrayLiteral arrayLiteral =
                     (BLangListConstructorExpr.BLangArrayLiteral) node;
@@ -1242,25 +1423,25 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
             result = Objects.hash(literal.value);
         } else if (node.getKind() == NodeKind.XML_TEXT_LITERAL) {
             BLangXMLTextLiteral literal = (BLangXMLTextLiteral) node;
-            result = 31 * result + hash(literal.concatExpr);
+            result = hash(literal.concatExpr);
             for (BLangExpression expr : literal.textFragments) {
                 result = result * 31 + hash(expr);
             }
         } else if (node.getKind() == NodeKind.XML_ATTRIBUTE) {
             BLangXMLAttribute attribute = (BLangXMLAttribute) node;
-            result = 31 * result + hash(attribute.name) + hash(attribute.value);
+            result = hash(attribute.name) + hash(attribute.value);
         } else if (node.getKind() == NodeKind.XML_QNAME) {
             BLangXMLQName xmlqName = (BLangXMLQName) node;
-            result = 31 * result + hash(xmlqName.localname) + hash(xmlqName.prefix);
+            result = hash(xmlqName.localname) + hash(xmlqName.prefix);
         } else if (node.getKind() == NodeKind.XML_COMMENT_LITERAL) {
             BLangXMLCommentLiteral literal = (BLangXMLCommentLiteral) node;
-            result = 31 * result + hash(literal.concatExpr);
+            result = hash(literal.concatExpr);
             for (BLangExpression expr : literal.textFragments) {
                 result = result * 31 + hash(expr);
             }
         } else if (node.getKind() == NodeKind.XML_ELEMENT_LITERAL) {
             BLangXMLElementLiteral literal = (BLangXMLElementLiteral) node;
-            result = 31 * result + hash(literal.startTagName) + hash(literal.endTagName);
+            result = hash(literal.startTagName) + hash(literal.endTagName);
             for (BLangExpression expr : literal.attributes) {
                 result = 31 * result + hash(expr);
             }
@@ -1269,16 +1450,16 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
             }
         } else if (node.getKind() == NodeKind.XML_QUOTED_STRING) {
             BLangXMLQuotedString literal = (BLangXMLQuotedString) node;
-            result = 31 * result + hash(literal.concatExpr);
+            result = hash(literal.concatExpr);
             for (BLangExpression expr : literal.textFragments) {
                 result = result * 31 + hash(expr);
             }
         } else if (node.getKind() == NodeKind.XMLNS) {
             BLangXMLNS xmlns = (BLangXMLNS) node;
-            result = result * 31 + hash(xmlns.prefix) + hash(xmlns.namespaceURI);
+            result = hash(xmlns.prefix) + hash(xmlns.namespaceURI);
         } else if (node.getKind() == NodeKind.XML_PI_LITERAL) {
             BLangXMLProcInsLiteral literal = (BLangXMLProcInsLiteral) node;
-            result = 31 * result + hash(literal.target) + hash(literal.dataConcatExpr);
+            result = hash(literal.target) + hash(literal.dataConcatExpr);
             for (BLangExpression expr : literal.dataFragments) {
                 result = result * 31 + hash(expr);
             }
@@ -1311,26 +1492,99 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
             }
         } else if (node.getKind() == NodeKind.TYPE_CONVERSION_EXPR) {
             BLangTypeConversionExpr typeConversionExpr = (BLangTypeConversionExpr) node;
-            result = 31 * result + hash(typeConversionExpr.expr);
+            result = hash(typeConversionExpr.expr);
         } else if (node.getKind() == NodeKind.BINARY_EXPR) {
             BLangBinaryExpr binaryExpr = (BLangBinaryExpr) node;
-            result = 31 * result + hash(binaryExpr.lhsExpr) + hash(binaryExpr.rhsExpr);
+            result = hash(binaryExpr.lhsExpr) + hash(binaryExpr.rhsExpr);
         } else if (node.getKind() == NodeKind.UNARY_EXPR) {
             BLangUnaryExpr unaryExpr = (BLangUnaryExpr) node;
-            result = 31 * result + hash(unaryExpr.expr);
+            result = hash(unaryExpr.expr);
         } else if (node.getKind() == NodeKind.TYPE_TEST_EXPR) {
             BLangTypeTestExpr typeTestExpr = (BLangTypeTestExpr) node;
-            result = 31 * result + hash(typeTestExpr.expr);
+            result = hash(typeTestExpr.expr);
         } else if (node.getKind() == NodeKind.TERNARY_EXPR) {
             BLangTernaryExpr ternaryExpr = (BLangTernaryExpr) node;
-            result = 31 * result + hash(ternaryExpr.expr) + hash(ternaryExpr.thenExpr) + hash(ternaryExpr.elseExpr);
+            result = hash(ternaryExpr.expr) + hash(ternaryExpr.thenExpr) + hash(ternaryExpr.elseExpr);
         } else if (node.getKind() == NodeKind.GROUP_EXPR) {
             BLangGroupExpr groupExpr = (BLangGroupExpr) node;
-            result = 31 * result + hash(groupExpr.expression);
+            result = hash(groupExpr.expression);
+        } else if (node.getKind() == NodeKind.REG_EXP_TEMPLATE_LITERAL) {
+            result = generateHashForRegExp(((BLangRegExpTemplateLiteral) node).reDisjunction.sequenceList);
         } else {
             dlog.error(((BLangExpression) node).pos, DiagnosticErrorCode.EXPRESSION_IS_NOT_A_CONSTANT_EXPRESSION);
         }
         return result;
+    }
+
+    private Integer generateHashForRegExp(List<BLangExpression> exprs) {
+        int regexpHash = 0;
+        for (BLangExpression expr : exprs) {
+            if (expr.getKind() == NodeKind.REG_EXP_SEQUENCE) {
+                BLangReSequence reSequence = (BLangReSequence) expr;
+                for (BLangReTerm term : reSequence.termList) {
+                    if (term.getKind() == NodeKind.REG_EXP_ASSERTION) {
+                        regexpHash = regexpHash + hash(((BLangReAssertion) term).assertion);
+                    } else {
+                        regexpHash = regexpHash + generateHashForReAtomQuantifier((BLangReAtomQuantifier) term);
+                    }
+                }
+            } else {
+                regexpHash = regexpHash + hash(expr);
+            }
+        }
+        return regexpHash;
+    }
+
+    private Integer generateHashForReAtomQuantifier(BLangReAtomQuantifier reAtomQuantifier) {
+        int regexpHash = 0;
+        BLangExpression reAtom = reAtomQuantifier.atom;
+        if (reAtom.getKind() == NodeKind.REG_EXP_ATOM_CHAR_ESCAPE) {
+            regexpHash = regexpHash + hash(((BLangReAtomCharOrEscape) reAtom).charOrEscape);
+        } else if (reAtom.getKind() == NodeKind.REG_EXP_CHARACTER_CLASS) {
+            regexpHash = regexpHash + generateHashForReCharacterClass((BLangReCharacterClass) reAtom);
+        } else if (reAtom.getKind() == NodeKind.REG_EXP_CAPTURING_GROUP) {
+            regexpHash = regexpHash + generateHashForReCapturingGroup((BLangReCapturingGroups) reAtom);
+        }
+        if (reAtomQuantifier.quantifier != null) {
+            BLangReQuantifier reQuantifier = reAtomQuantifier.quantifier;
+            regexpHash = regexpHash + hash(reQuantifier.quantifier);
+            if (reQuantifier.nonGreedyChar != null) {
+                return regexpHash + hash(reQuantifier.nonGreedyChar);
+            }
+        }
+        return regexpHash;
+    }
+
+    private Integer generateHashForReCharacterClass(BLangReCharacterClass reCharacterClass) {
+        int regexpHash = hash(reCharacterClass.characterClassStart) + hash(reCharacterClass.characterClassEnd);
+        if (reCharacterClass.negation != null) {
+            regexpHash = regexpHash + hash(reCharacterClass.negation);
+        }
+        if (reCharacterClass.charSet == null) {
+            return regexpHash;
+        }
+        BLangReCharSet charSet = reCharacterClass.charSet;
+        for (BLangExpression charSetAtom : charSet.charSetAtoms) {
+            if (charSetAtom.getKind() == NodeKind.REG_EXP_CHAR_SET_RANGE) {
+                BLangReCharSetRange charSetRange = ((BLangReCharSetRange) charSetAtom);
+                regexpHash = regexpHash + hash(charSetRange.lhsCharSetAtom) +
+                        hash(charSetRange.dash) + hash(charSetRange.rhsCharSetAtom);
+            } else {
+                regexpHash = regexpHash + hash(charSetAtom);
+            }
+        }
+        return regexpHash;
+    }
+
+    private Integer generateHashForReCapturingGroup(BLangReCapturingGroups reCapturingGroup) {
+        int regexpHash = hash(reCapturingGroup.openParen) +
+                generateHashForRegExp(reCapturingGroup.disjunction.sequenceList) + hash(reCapturingGroup.closeParen);
+        if (reCapturingGroup.flagExpr == null) {
+            return regexpHash;
+        }
+        BLangReFlagExpression flagExpr = (BLangReFlagExpression) reCapturingGroup.flagExpr;
+        regexpHash = regexpHash + hash(flagExpr.questionMark) + hash(flagExpr.colon);
+        return regexpHash + hash(flagExpr.flagsOnOff.flags);
     }
 
     private Integer getTypeHash(BType type) {
@@ -1356,13 +1610,13 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
                 fieldMap.put(recordVarNameField.getVariableName().value, recordVarNameField);
             }
         }
-        return fieldNames.stream().map(fieldMap::get).collect(Collectors.toList());
+        return fieldNames.stream().map(fieldMap::get).toList();
     }
 
     private List<String> getFieldNames(BLangTableConstructorExpr constructorExpr) {
         List<String> fieldNames = null;
-        if (Types.getReferredType(constructorExpr.getBType()).tag == TypeTags.TABLE) {
-            fieldNames = ((BTableType) Types.getReferredType(constructorExpr.getBType())).fieldNameList;
+        if (Types.getImpliedType(constructorExpr.getBType()).tag == TypeTags.TABLE) {
+            fieldNames = ((BTableType) Types.getImpliedType(constructorExpr.getBType())).fieldNameList;
             if (fieldNames != null) {
                 return fieldNames;
             }
@@ -1371,7 +1625,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
                 !constructorExpr.tableKeySpecifier.fieldNameIdentifierList.isEmpty()) {
             BLangTableKeySpecifier tableKeySpecifier = constructorExpr.tableKeySpecifier;
             return tableKeySpecifier.fieldNameIdentifierList.stream().map(identifier ->
-                    ((BLangIdentifier) identifier).value).collect(Collectors.toList());
+                    ((BLangIdentifier) identifier).value).toList();
         } else {
             return new ArrayList<>();
         }
@@ -1379,6 +1633,10 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
 
     @Override
     public void visit(BLangRecordLiteral recordLiteral) {
+        BType type = recordLiteral.getBType();
+        if (type != null) {
+            addDependency(this.currDependentSymbolDeque.peek(), Types.getImpliedType(type).tsymbol);
+        }
         for (RecordLiteralNode.RecordField field : recordLiteral.fields) {
             if (field.isKeyValueField()) {
                 BLangRecordLiteral.BLangRecordKeyValueField keyValuePair =
@@ -1402,8 +1660,10 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         if (isNotVariableReferenceLVExpr(varRefExpr)) {
             this.unusedLocalVariables.remove(varRefExpr.symbol);
         }
-
-        checkVarRef(varRefExpr.symbol, varRefExpr.pos);
+        BSymbol varRefSymbol = varRefExpr.symbol;
+        if (varRefSymbol != null && (varRefSymbol.tag & SymTag.FUNCTION) != SymTag.FUNCTION) {
+            checkVarRef(varRefSymbol, varRefExpr.pos);
+        }
     }
 
     @Override
@@ -1415,22 +1675,17 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     }
 
     @Override
-    public void visit(BLangFieldBasedAccess.BLangNSPrefixedFieldBasedAccess nsPrefixedFieldBasedAccess) {
-        if (!nsPrefixedFieldBasedAccess.isLValue && isObjectMemberAccessWithSelf(nsPrefixedFieldBasedAccess)) {
-            checkVarRef(nsPrefixedFieldBasedAccess.symbol, nsPrefixedFieldBasedAccess.pos);
+    public void visit(BLangFieldBasedAccess.BLangPrefixedFieldBasedAccess prefixedFieldBasedAccess) {
+        if (!prefixedFieldBasedAccess.isLValue && isObjectMemberAccessWithSelf(prefixedFieldBasedAccess)) {
+            checkVarRef(prefixedFieldBasedAccess.symbol, prefixedFieldBasedAccess.pos);
         }
-        analyzeNode(nsPrefixedFieldBasedAccess.expr, env);
+        analyzeNode(prefixedFieldBasedAccess.expr, env);
     }
 
     @Override
     public void visit(BLangIndexBasedAccess indexAccessExpr) {
         analyzeNode(indexAccessExpr.expr, env);
         analyzeNode(indexAccessExpr.indexExpr, env);
-    }
-
-    @Override
-    public void visit(BLangTableMultiKeyExpr tableMultiKeyExpr) {
-        tableMultiKeyExpr.multiKeyIndexExprs.forEach(value -> analyzeNode(value, env));
     }
 
     @Override
@@ -1441,9 +1696,27 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     @Override
     public void visit(BLangXMLNavigationAccess xmlNavigation) {
         analyzeNode(xmlNavigation.expr, env);
-        if (xmlNavigation.childIndex == null) {
-            analyzeNode(xmlNavigation.childIndex, env);
-        }
+    }
+
+    @Override
+    public void visit(BLangExtendedXMLNavigationAccess extendedXmlNavigationAccess) {
+        analyzeNode(extendedXmlNavigationAccess.stepExpr, env);
+        extendedXmlNavigationAccess.extensions.forEach(extension -> analyzeNode(extension, env));
+    }
+
+    @Override
+    public void visit(BLangXMLIndexedStepExtend xmlIndexedStepExtend) {
+        analyzeNode(xmlIndexedStepExtend.indexExpr, env);
+    }
+
+    @Override
+    public void visit(BLangXMLFilterStepExtend xmlFilterStepExtend) {
+        /* ignore */
+    }
+
+    @Override
+    public void visit(BLangXMLMethodCallStepExtend xmlMethodCallStepExtend) {
+        analyzeNode(xmlMethodCallStepExtend.invocation, env);
     }
 
     @Override
@@ -1452,6 +1725,9 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
 
         BSymbol symbol = invocationExpr.symbol;
         this.unusedLocalVariables.remove(symbol);
+
+        Set<BSymbol> dependents = invocationToDependent.computeIfAbsent(symbol, s -> new LinkedHashSet<>());
+        dependents.add(this.currDependentSymbolDeque.peek());
 
         if (isFunctionOrMethodDefinedInCurrentModule(symbol.owner, env) &&
                 !isGlobalVarsInitialized(invocationExpr.pos, invocationExpr)) {
@@ -1475,24 +1751,27 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         BSymbol owner = this.env.scope.owner;
         if (owner.kind == SymbolKind.FUNCTION) {
             BInvokableSymbol invokableOwnerSymbol = (BInvokableSymbol) owner;
-            Name name = names.fromIdNode(invocationExpr.name);
             // Todo: we need to handle function pointer referring global variable, passed into a function.
             // i.e 'foo' is a function pointer pointing to a function referring a global variable G1, then we pass
             // that pointer into 'bar', now 'bar' may have a dependency on G1.
 
             // Todo: test lambdas and function arguments
 
-            BSymbol dependsOnFunctionSym = symResolver.lookupSymbolInMainSpace(this.env, name);
-            if (symTable.notFoundSymbol != dependsOnFunctionSym) {
-                addDependency(invokableOwnerSymbol, dependsOnFunctionSym);
+            if (symbol != symTable.notFoundSymbol) {
+                addDependency(invokableOwnerSymbol, symbol);
             }
-        } else if (symbol != null && symbol.kind == SymbolKind.FUNCTION) {
+        } else if (symbol.kind == SymbolKind.FUNCTION) {
             BInvokableSymbol invokableProviderSymbol = (BInvokableSymbol) symbol;
             BSymbol curDependent = this.currDependentSymbolDeque.peek();
-            if (curDependent != null && isGlobalVarSymbol(curDependent)) {
+            if (isGlobalVarSymbol(curDependent)) {
                 addDependency(curDependent, invokableProviderSymbol);
             }
         }
+    }
+
+    @Override
+    public void visit(BLangCollectContextInvocation collectContextInvocation) {
+        analyzeNode(collectContextInvocation.invocation, env);
     }
 
     @Override
@@ -1503,11 +1782,19 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         for (BLangNamedArgsExpression namedArg : errorConstructorExpr.namedArgs) {
             analyzeNode(namedArg, env);
         }
+        BType detailType = ((BErrorType) Types.getImpliedType(errorConstructorExpr.getBType())).detailType;
+        addDependency(this.currDependentSymbolDeque.peek(), Types.getImpliedType(detailType).tsymbol);
     }
 
     @Override
     public void visit(BLangActionInvocation actionInvocation) {
         this.visit((BLangInvocation) actionInvocation);
+    }
+
+    @Override
+    public void visit(BLangResourceAccessInvocation resourceAccessInvocation) {
+        analyzeNode(resourceAccessInvocation.resourceAccessPathSegments, env);
+        this.visit((BLangInvocation) resourceAccessInvocation);
     }
 
     @Override
@@ -1535,7 +1822,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
                                             (BLangVariable) joinClause.variableDefinitionNode.getVariable());
         analyzeNode(joinClause.collection, env);
         if (joinClause.onClause != null) {
-            analyzeNode((BLangNode) joinClause.onClause, env);
+            analyzeNode(joinClause.onClause, env);
         }
     }
 
@@ -1568,8 +1855,44 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     }
 
     @Override
+    public void visit(BLangGroupByClause groupByClause) {
+        groupByClause.groupingKeyList.forEach(value -> analyzeNode(value, env));
+        replaceWithSeqSymbol(groupByClause.env);
+    }
+
+    private void replaceWithSeqSymbol(SymbolEnv env) {
+        for (Map.Entry<Name, Scope.ScopeEntry> symbolEntry : env.scope.entries.entrySet()) {
+            BSymbol sym = null;
+            Location loc = null;
+            for (Map.Entry<BSymbol, Location> unusedLocalVariable : this.unusedLocalVariables.entrySet()) {
+                BSymbol unusedVarSymbol = unusedLocalVariable.getKey();
+                if (unusedVarSymbol.name.equals(symbolEntry.getKey())) {
+                    sym = unusedLocalVariable.getKey();
+                    loc = unusedLocalVariable.getValue();
+                    break;
+                }
+            }
+            if (sym != null) {
+                this.unusedLocalVariables.remove(sym);
+                this.unusedLocalVariables.put(symbolEntry.getValue().symbol, loc);
+            }
+        }
+    }
+
+    @Override
+    public void visit(BLangGroupingKey groupingKey) {
+        analyzeNode((BLangNode) groupingKey.getGroupingKey(), env);
+    }
+
+    @Override
     public void visit(BLangSelectClause selectClause) {
         analyzeNode(selectClause.expression, env);
+    }
+
+    @Override
+    public void visit(BLangCollectClause bLangCollectClause) {
+        replaceWithSeqSymbol(bLangCollectClause.env);
+        analyzeNode(bLangCollectClause.expression, env);
     }
 
     @Override
@@ -1589,7 +1912,10 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
 
     @Override
     public void visit(BLangOnFailClause onFailClause) {
-        analyzeNode((BLangVariable) onFailClause.variableDefinitionNode.getVariable(), env);
+        VariableDefinitionNode onFailVarDefNode = onFailClause.variableDefinitionNode;
+        if (onFailVarDefNode != null) {
+            analyzeNode((BLangVariable) onFailVarDefNode.getVariable(), env);
+        }
         analyzeNode(onFailClause.body, env);
     }
 
@@ -1601,7 +1927,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         StringBuilder uninitializedFields =
                 getUninitializedFieldsForSelfKeyword((BObjectType) ((BLangSimpleVarRef)
                         invocationExpr.expr).symbol.type);
-        if (uninitializedFields.length() != 0) {
+        if (!uninitializedFields.isEmpty()) {
             this.dlog.error(invocationExpr.pos, DiagnosticErrorCode.CONTAINS_UNINITIALIZED_FIELDS,
                     uninitializedFields.toString());
             return false;
@@ -1616,7 +1942,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
             if (isSelfKeyWordExpr(expr)) {
                 StringBuilder uninitializedFields =
                         getUninitializedFieldsForSelfKeyword((BObjectType) ((BLangSimpleVarRef) expr).symbol.type);
-                if (uninitializedFields.length() != 0) {
+                if (!uninitializedFields.isEmpty()) {
                     this.dlog.error(location, DiagnosticErrorCode.CONTAINS_UNINITIALIZED_FIELDS,
                             uninitializedFields.toString());
                     return false;
@@ -1647,7 +1973,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
                     uninitializedFields.append(", ").append(symbol.getName().value);
                 }
             }
-            if (uninitializedFields.length() != 0) {
+            if (!uninitializedFields.isEmpty()) {
                 this.dlog.error(pos, DiagnosticErrorCode.INVALID_FUNCTION_CALL_WITH_UNINITIALIZED_VARIABLES,
                         uninitializedFields.toString());
                 return false;
@@ -1714,7 +2040,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         Set<BSymbol> providers = globalNodeDependsOn.computeIfAbsent(dependent, s -> new LinkedHashSet<>());
         providers.add(provider);
 
-        // Store the dependencies of functions seperately for lock optimization in later stage.
+        // Store the dependencies of functions separately for lock optimization in later stage.
         addFunctionToGlobalVarDependency(dependent, provider);
     }
 
@@ -1735,7 +2061,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         typeInitExpr.argsExpr.forEach(argExpr -> analyzeNode(argExpr, env));
         if (this.currDependentSymbolDeque.peek() != null) {
             addDependency(this.currDependentSymbolDeque.peek(),
-                    Types.getReferredType(typeInitExpr.getBType()).tsymbol);
+                    Types.getImpliedType(typeInitExpr.getBType()).tsymbol);
         }
     }
 
@@ -1843,7 +2169,13 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     public void visit(BLangLambdaFunction bLangLambdaFunction) {
         BLangFunction funcNode = bLangLambdaFunction.function;
         SymbolEnv funcEnv = SymbolEnv.createFunctionEnv(funcNode, funcNode.symbol.scope, env);
+        funcNode.requiredParams.forEach(param -> analyzeNode(param, funcEnv));
+        analyzeNode(funcNode.restParam, funcEnv);
+        analyzeNode(funcNode.returnTypeNode, env);
         visitFunctionBodyWithDynamicEnv(funcNode, funcEnv);
+        if (isGlobalVarSymbol(funcNode.symbol)) {
+            dependsOnLambda.put(this.currDependentSymbolDeque.peek(), funcNode.symbol);
+        }
     }
 
     @Override
@@ -1861,18 +2193,10 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     }
 
     @Override
-    public void visit(BLangMatchExpression matchExpression) {
-        analyzeNode(matchExpression.expr, env);
-        matchExpression.patternClauses.forEach(pattern -> analyzeNode(pattern, env));
-    }
-
-    @Override
-    public void visit(BLangMatchExprPatternClause matchExprPatternClause) {
-        analyzeNode(matchExprPatternClause.expr, env);
-    }
-
-    @Override
     public void visit(BLangCheckedExpr checkedExpr) {
+        if (isOnFailEnclosed()) {
+            this.possibleFailureReached = true;
+        }
         analyzeNode(checkedExpr.expr, env);
     }
 
@@ -1893,18 +2217,20 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
 
     @Override
     public void visit(BLangAnnotation annotationNode) {
+        this.currDependentSymbolDeque.push(annotationNode.symbol);
+        analyzeNode(annotationNode.typeNode, env);
+        this.currDependentSymbolDeque.pop();
     }
 
     @Override
     public void visit(BLangAnnotationAttachment annAttachmentNode) {
+        addDependency(currDependentSymbolDeque.peek(), annAttachmentNode.annotationSymbol);
+        analyzeNode(annAttachmentNode.expr, env);
     }
 
     @Override
     public void visit(BLangRetry retryNode) {
-        analyzeNode(retryNode.retryBody, env);
-        if (retryNode.onFailClause != null) {
-            analyzeNode(retryNode.onFailClause, env);
-        }
+        analyzeStmtWithOnFail(retryNode.retryBody, retryNode.onFailClause);
     }
 
     @Override
@@ -1992,11 +2318,11 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         if (this.currDependentSymbolDeque.isEmpty()) {
             return;
         }
-        BType resolvedType = Types.getReferredType(userDefinedType.getBType());
+        BType resolvedType = userDefinedType.getBType();
         if (resolvedType == symTable.semanticError) {
             return;
         }
-        BTypeSymbol tsymbol = resolvedType.tsymbol;
+        BTypeSymbol tsymbol = Types.getImpliedType(resolvedType).tsymbol;
         recordGlobalVariableReferenceRelationship(tsymbol);
     }
 
@@ -2027,21 +2353,23 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
 
     @Override
     public void visit(BLangRecordTypeNode recordTypeNode) {
-        BTypeSymbol tsymbol = Types.getReferredType(recordTypeNode.getBType()).tsymbol;
+        BTypeSymbol tsymbol = Types.getImpliedType(recordTypeNode.getBType()).tsymbol;
         for (TypeNode type : recordTypeNode.getTypeReferences()) {
             BLangType bLangType = (BLangType) type;
             analyzeNode(bLangType, env);
             recordGlobalVariableReferenceRelationship(
-                    Types.getReferredType(bLangType.getBType()).tsymbol);
+                    Types.getImpliedType(bLangType.getBType()).tsymbol);
         }
         for (BLangSimpleVariable field : recordTypeNode.fields) {
-            addTypeDependency(tsymbol, Types.getReferredType(field.getBType()), new HashSet<>());
+            addTypeDependency(tsymbol, Types.getImpliedType(field.getBType()), new HashSet<>());
             analyzeNode(field, env);
+            field.annAttachments.forEach(attachment -> analyzeNode(attachment, env));
             recordGlobalVariableReferenceRelationship(field.symbol);
         }
     }
 
     private void addTypeDependency(BTypeSymbol dependentTypeSymbol, BType providerType, Set<BType> unresolvedTypes) {
+        providerType = Types.getImpliedType(providerType);
         if (unresolvedTypes.contains(providerType)) {
             return;
         }
@@ -2063,10 +2391,6 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
                         types.getTypeWithEffectiveIntersectionTypes(((BMapType) providerType).getConstraint()),
                         unresolvedTypes);
                 break;
-            case TypeTags.TYPEREFDESC:
-                addTypeDependency(dependentTypeSymbol, Types.getReferredType(providerType),
-                        unresolvedTypes);
-                break;
             default:
                 addDependency(dependentTypeSymbol, providerType.tsymbol);
         }
@@ -2079,7 +2403,10 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
 
     @Override
     public void visit(BLangTupleTypeNode tupleTypeNode) {
-        tupleTypeNode.memberTypeNodes.forEach(type -> analyzeNode(type, env));
+        for (BLangSimpleVariable member : tupleTypeNode.members) {
+            analyzeNode(member, env);
+            member.annAttachments.forEach(attachment -> analyzeNode(attachment, env));
+        }
     }
 
     @Override
@@ -2124,13 +2451,14 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         analyzeNode(trapExpr.expr, env);
     }
 
+    @Override
     public void visit(BLangServiceConstructorExpr serviceConstructorExpr) {
         if (this.currDependentSymbolDeque.peek() != null) {
             addDependency(this.currDependentSymbolDeque.peek(),
-                    Types.getReferredType(serviceConstructorExpr.getBType()).tsymbol);
+                    Types.getImpliedType(serviceConstructorExpr.getBType()).tsymbol);
         }
 
-        addDependency(Types.getReferredType(serviceConstructorExpr.getBType()).tsymbol,
+        addDependency(Types.getImpliedType(serviceConstructorExpr.getBType()).tsymbol,
                 serviceConstructorExpr.serviceNode.symbol);
         analyzeNode(serviceConstructorExpr.serviceNode, env);
     }
@@ -2152,6 +2480,10 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
 
     @Override
     public void visit(BLangErrorType errorType) {
+        BLangType detailType = errorType.detailType;
+        if (detailType != null && detailType.getBType() != null) {
+            addDependency(this.currDependentSymbolDeque.peek(), Types.getImpliedType(detailType.getBType()).tsymbol);
+        }
     }
 
     @Override
@@ -2193,6 +2525,9 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         analyzeNode(bLangTupleVariable.typeNode, env);
         populateUnusedVariableMapForNonSimpleBindingPatternVariables(this.unusedLocalVariables, bLangTupleVariable);
         this.currDependentSymbolDeque.push(bLangTupleVariable.symbol);
+        for (BLangVariable memberVariable : bLangTupleVariable.memberVariables) {
+            symbolOwner.put(memberVariable.symbol, bLangTupleVariable.symbol);
+        }
         analyzeNode(bLangTupleVariable.expr, env);
         this.currDependentSymbolDeque.pop();
     }
@@ -2207,6 +2542,10 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         analyzeNode(bLangRecordVariable.typeNode, env);
         populateUnusedVariableMapForNonSimpleBindingPatternVariables(this.unusedLocalVariables, bLangRecordVariable);
         this.currDependentSymbolDeque.push(bLangRecordVariable.symbol);
+        for (BLangRecordVariable.BLangRecordVariableKeyValue recordVariableKeyValue :
+                                                                                bLangRecordVariable.variableList) {
+            symbolOwner.put(recordVariableKeyValue.valueBindingPattern.symbol, bLangRecordVariable.symbol);
+        }
         analyzeNode(bLangRecordVariable.expr, env);
         this.currDependentSymbolDeque.pop();
     }
@@ -2221,6 +2560,21 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         analyzeNode(bLangErrorVariable.typeNode, env);
         populateUnusedVariableMapForNonSimpleBindingPatternVariables(this.unusedLocalVariables, bLangErrorVariable);
         this.currDependentSymbolDeque.push(bLangErrorVariable.symbol);
+        BSymbol symbol = bLangErrorVariable.symbol;
+        if (bLangErrorVariable.message != null) {
+            symbolOwner.put(bLangErrorVariable.message.symbol, symbol);
+        }
+        if (bLangErrorVariable.cause != null) {
+            symbolOwner.put(bLangErrorVariable.cause.symbol, symbol);
+        }
+        if (bLangErrorVariable.restDetail != null) {
+            symbolOwner.put(bLangErrorVariable.restDetail.symbol, symbol);
+        }
+
+        for (BLangErrorVariable.BLangErrorDetailEntry errorDetailEntry : bLangErrorVariable.detail) {
+            symbolOwner.put(errorDetailEntry.valueBindingPattern.symbol, bLangErrorVariable.symbol);
+        }
+
         analyzeNode(bLangErrorVariable.expr, env);
         this.currDependentSymbolDeque.pop();
     }
@@ -2231,19 +2585,31 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     }
 
     @Override
-    public void visit(BLangMatchStaticBindingPatternClause bLangMatchStaticBindingPatternClause) {
-        analyzeNode(bLangMatchStaticBindingPatternClause.body, env);
-    }
+    public void visit(BLangNaturalExpression naturalExpression) {
+        for (BLangExpression argumentExpr : naturalExpression.arguments) {
+            analyzeNode(argumentExpr, env);
+        }
 
-    @Override
-    public void visit(BLangMatchStructuredBindingPatternClause bLangMatchStructuredBindingPatternClause) {
-        analyzeNode(bLangMatchStructuredBindingPatternClause.body, env);
+        for (BLangLiteral string : naturalExpression.strings) {
+            analyzeNode(string, env);
+        }
+
+        for (BLangExpression expr : naturalExpression.insertions) {
+            analyzeNode(expr, env);
+        }
     }
 
     private void addUninitializedVar(BLangVariable variable) {
         if (!this.uninitializedVars.containsKey(variable.symbol)) {
             this.uninitializedVars.put(variable.symbol, InitStatus.UN_INIT);
         }
+    }
+
+    @Override
+    public void visit(BLangRegExpTemplateLiteral regExpTemplateLiteral) {
+        List<BLangExpression> interpolationsList =
+                symResolver.getListOfInterpolations(regExpTemplateLiteral.reDisjunction.sequenceList);
+        interpolationsList.forEach(interpolation -> analyzeNode(interpolation, env));
     }
 
     /**
@@ -2256,26 +2622,50 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
      */
     private BranchResult analyzeBranch(BLangNode node, SymbolEnv env) {
         Map<BSymbol, InitStatus> prevUninitializedVars = this.uninitializedVars;
+        Map<BSymbol, InitStatus> prevOnFailUninitializedVars = getPossibleFailureUnInitVars();
+        if (node != null && isOnFailEnclosed()) {
+            BLangOnFailClause onFailClause = this.enclosingOnFailClause.peek();
+            prevOnFailUninitializedVars = this.possibleFailureUnInitVars.get(onFailClause);
+            this.possibleFailureUnInitVars.put(onFailClause, copyOnFailUninitializedVars(onFailClause));
+        }
         boolean prevFlowTerminated = this.flowTerminated;
+        boolean prevFailureReached = this.possibleFailureReached;
+        boolean prevDefiniteFailureReached = this.definiteFailureReached;
 
         // Get a snapshot of the current uninitialized vars before visiting the node.
         // This is done so that the original set of uninitialized vars will not be
         // updated/marked as initialized.
         this.uninitializedVars = copyUninitializedVars();
         this.flowTerminated = false;
+        this.possibleFailureReached = false;
+        this.definiteFailureReached = false;
 
         analyzeNode(node, env);
-        BranchResult brachResult = new BranchResult(this.uninitializedVars, this.flowTerminated);
+        BranchResult branchResult = new BranchResult(this.uninitializedVars, getPossibleFailureUnInitVars(),
+                this.flowTerminated, this.possibleFailureReached, this.definiteFailureReached);
 
         // Restore the original set of uninitialized vars
         this.uninitializedVars = prevUninitializedVars;
         this.flowTerminated = prevFlowTerminated;
-
-        return brachResult;
+        this.possibleFailureReached = prevFailureReached;
+        this.definiteFailureReached = prevDefiniteFailureReached;
+        updateUnInitVarsForOnFailClause(prevOnFailUninitializedVars);
+        return branchResult;
     }
 
     private Map<BSymbol, InitStatus> copyUninitializedVars() {
-        return new HashMap<>(this.uninitializedVars);
+        return new LinkedHashMap<>(this.uninitializedVars);
+    }
+
+    private Map<BSymbol, InitStatus> copyOnFailUninitializedVars(BLangOnFailClause onFailClause) {
+        return new LinkedHashMap<>(this.possibleFailureUnInitVars.get(onFailClause));
+    }
+
+    private Map<BSymbol, InitStatus> getPossibleFailureUnInitVars() {
+        if (isOnFailEnclosed()) {
+            return this.possibleFailureUnInitVars.get(this.enclosingOnFailClause.peek());
+        }
+        return null;
     }
 
     private void analyzeNode(BLangNode node, SymbolEnv env) {
@@ -2293,8 +2683,8 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         intersection.retainAll(secondUninitVars.keySet());
 
         return Stream.concat(firstUninitVars.entrySet().stream(), secondUninitVars.entrySet().stream())
-                .collect(Collectors.toMap(entry -> entry.getKey(),
-                        // If only one branch have uninitialized the var, then its a partial initialization
+                .collect(Collectors.toMap(Map.Entry::getKey,
+                        // If only one branch have uninitialized the var, then it's a partial initialization
                         entry -> intersection.contains(entry.getKey()) ? entry.getValue() : InitStatus.PARTIAL_INIT,
                         (a, b) -> {
                             // If atleast one of the branches have partially initialized the var,
@@ -2304,7 +2694,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
                             }
 
                             return InitStatus.UN_INIT;
-                        }));
+                        }, LinkedHashMap::new));
     }
 
     private void checkVarRef(BSymbol symbol, Location pos) {
@@ -2324,29 +2714,32 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     }
 
     private void recordGlobalVariableReferenceRelationship(BSymbol symbol) {
-        if (this.env.scope == null) {
+        if (this.env.scope == null || symbol == null) {
             return;
         }
 
         boolean globalVarSymbol = isGlobalVarSymbol(symbol);
         BSymbol ownerSymbol = this.env.scope.owner;
-        boolean isInPkgLevel = ownerSymbol.getKind() == SymbolKind.PACKAGE;
-        // Restrict to observations made in pkg level.
-        if (isInPkgLevel && (globalVarSymbol || symbol instanceof BTypeSymbol)
-            || (ownerSymbol.tag == SymTag.LET && globalVarSymbol)) {
-            BSymbol dependent = this.currDependentSymbolDeque.peek();
-            addDependency(dependent, symbol);
-        } else if (ownerSymbol.kind == SymbolKind.FUNCTION && globalVarSymbol) {
-            // Global variable ref from non package level.
-            BInvokableSymbol invokableOwnerSymbol = (BInvokableSymbol) ownerSymbol;
-            addDependency(invokableOwnerSymbol, symbol);
-        } else if (ownerSymbol.kind == SymbolKind.OBJECT && globalVarSymbol) {
-            // Global variable reference from a field assignment of an object or a service.
-            // Or global variable reference from a init function of an object or a service.
-            addDependency(ownerSymbol, symbol);
-        } else if (ownerSymbol.kind == SymbolKind.RECORD && globalVarSymbol) {
-            // Global variable reference from a field assignment of an record type declaration.
-            addDependency(ownerSymbol, symbol);
+        switch (ownerSymbol.getKind()) {
+            case FUNCTION :
+                // Global variable ref from non package level.
+            case OBJECT:
+                // Global variable reference from a field assignment of an object or a service.
+                // Or global variable reference from an init function of an object or a service.
+            case RECORD:
+                // Global variable reference from a field assignment of a record type declaration.
+                if (globalVarSymbol) {
+                    addDependency(ownerSymbol, symbol);
+                    break;
+                }
+                // fall through
+            default:
+                if (symbol.kind == SymbolKind.TYPE_DEF || globalVarSymbol || symbol instanceof BTypeSymbol ||
+                        ownerSymbol.tag == SymTag.LET) {
+                    BSymbol dependent = this.currDependentSymbolDeque.peek();
+                    addDependency(dependent, symbol.kind == SymbolKind.TYPE_DEF
+                            ? Types.getImpliedType(symbol.type).tsymbol : symbol);
+                }
         }
     }
 
@@ -2364,14 +2757,14 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
                 BLangRecordVarRef recordVarRef = (BLangRecordVarRef) varRef;
                 recordVarRef.recordRefFields.forEach(field -> checkAssignment(field.variableReference));
                 if (recordVarRef.restParam != null) {
-                    checkAssignment((BLangExpression) recordVarRef.restParam);
+                    checkAssignment(recordVarRef.restParam);
                 }
                 return;
             case TUPLE_VARIABLE_REF:
                 BLangTupleVarRef tupleVarRef = (BLangTupleVarRef) varRef;
                 tupleVarRef.expressions.forEach(this::checkAssignment);
                 if (tupleVarRef.restParam != null) {
-                    checkAssignment((BLangExpression) tupleVarRef.restParam);
+                    checkAssignment(tupleVarRef.restParam);
                 }
                 return;
             case ERROR_VARIABLE_REF:
@@ -2395,7 +2788,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
                 BLangAccessExpression accessExpr = (BLangAccessExpression) varRef;
 
                 BLangExpression expr = accessExpr.expr;
-                BType type = Types.getReferredType(expr.getBType());
+                BType type = Types.getImpliedType(expr.getBType());
                 if (isObjectMemberAccessWithSelf(accessExpr)) {
                     BObjectType objectType = (BObjectType) type;
 
@@ -2438,22 +2831,29 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
             addFunctionToGlobalVarDependency(owner, ((BLangSimpleVarRef) varRef).symbol);
         }
 
-        this.uninitializedVars.remove(((BLangVariableReference) varRef).symbol);
+        BSymbol symbol = ((BLangVariableReference) varRef).symbol;
+        if (this.possibleFailureReached && this.uninitializedVars.containsKey(symbol)) {
+            getPossibleFailureUnInitVars().put(symbol, InitStatus.PARTIAL_INIT);
+        } else if (!this.possibleFailureUnInitVars.isEmpty() && !this.possibleFailureReached) {
+            getPossibleFailureUnInitVars().remove(symbol);
+        }
+        this.uninitializedVars.remove(symbol);
     }
 
     private void checkFinalObjectFieldUpdate(BLangFieldBasedAccess fieldAccess) {
         BLangExpression expr = fieldAccess.expr;
 
-        BType exprType = Types.getReferredType(expr.getBType());
+        BType exprType = Types.getImpliedType(expr.getBType());
 
-        if (types.isSubTypeOfBaseType(exprType, TypeTags.OBJECT) &&
+        if (types.isSubTypeOfBaseType(exprType, PredefinedType.OBJECT) &&
                 isFinalFieldInAllObjects(fieldAccess.pos, exprType, fieldAccess.field.value)) {
-            dlog.error(fieldAccess.pos, DiagnosticErrorCode.CANNOT_UPDATE_FINAL_OBJECT_FIELD, fieldAccess.symbol);
+            dlog.error(fieldAccess.pos, DiagnosticErrorCode.CANNOT_UPDATE_FINAL_OBJECT_FIELD,
+                    fieldAccess.symbol.originalName);
         }
     }
 
     private boolean isFinalFieldInAllObjects(Location pos, BType btype, String fieldName) {
-        BType type = Types.getReferredType(btype);
+        BType type = Types.getImpliedType(btype);
         if (type.tag == TypeTags.OBJECT) {
 
             BField field = ((BObjectType) type).fields.get(fieldName);
@@ -2462,7 +2862,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
             }
 
             BObjectTypeSymbol objTypeSymbol = (BObjectTypeSymbol) type.tsymbol;
-            Name funcName = names.fromString(Symbols.getAttachedFuncSymbolName(objTypeSymbol.name.value, fieldName));
+            Name funcName = Names.fromString(Symbols.getAttachedFuncSymbolName(objTypeSymbol.name.value, fieldName));
             BSymbol funcSymbol = symResolver.resolveObjectMethod(pos, env, funcName, objTypeSymbol);
 
             // Object member functions are inherently final
@@ -2499,11 +2899,13 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
 
     private void checkUnusedImports(List<BLangImportPackage> imports) {
         for (BLangImportPackage importStmt : imports) {
-            if (importStmt.symbol == null || importStmt.symbol.isUsed ||
-                    Names.IGNORE.value.equals(importStmt.alias.value)) {
-                continue;
+            BLangIdentifier prefix = importStmt.alias;
+            String prefixValue = prefix.value;
+            Location location = prefix.pos;
+            BPackageSymbol symbol = importStmt.symbol;
+            if (symbol != null && !symbol.isUsed && !Names.IGNORE.value.equals(prefixValue)) {
+                dlog.error(location, DiagnosticErrorCode.UNUSED_MODULE_PREFIX, prefixValue);
             }
-            dlog.error(importStmt.alias.pos, DiagnosticErrorCode.UNUSED_MODULE_PREFIX, importStmt.alias.value);
         }
     }
 
@@ -2521,11 +2923,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
     }
 
     private boolean addVarIfInferredTypeIncludesError(BLangSimpleVariable variable) {
-        BType typeIntersection =
-                types.getTypeIntersection(Types.IntersectionContext.compilerInternalIntersectionContext(),
-                                          variable.getBType(), symTable.errorType, env);
-        if (typeIntersection != null &&
-                typeIntersection != symTable.semanticError && typeIntersection != symTable.noType) {
+        if (types.containsErrorType(variable.getBType().semType())) {
             unusedErrorVarsDeclaredWithVar.put(variable.symbol, variable.pos);
             return true;
         }
@@ -2608,7 +3006,7 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
                     populateUnusedVariableMapForMembers(unusedLocalVariables, member.valueBindingPattern);
                 }
 
-                populateUnusedVariableMapForMembers(unusedLocalVariables, (BLangVariable) recordVariable.restParam);
+                populateUnusedVariableMapForMembers(unusedLocalVariables, recordVariable.restParam);
                 break;
             case TUPLE_VARIABLE:
                 BLangTupleVariable tupleVariable = (BLangTupleVariable) variable;
@@ -2675,14 +3073,22 @@ public class DataflowAnalyzer extends BLangNodeVisitor {
         UN_INIT, PARTIAL_INIT
     }
 
-    private class BranchResult {
+    private static class BranchResult {
 
         Map<BSymbol, InitStatus> uninitializedVars;
+        Map<BSymbol, InitStatus> possibleFailureUnInitVars;
         boolean flowTerminated;
+        boolean definiteFailureReached;
+        boolean possibleFailureReached;
 
-        BranchResult(Map<BSymbol, InitStatus> uninitializedVars, boolean flowTerminated) {
+
+        BranchResult(Map<BSymbol, InitStatus> uninitializedVars, Map<BSymbol, InitStatus> possibleFailureUnInitVars,
+                     boolean flowTerminated, boolean possibleFailureReached, boolean definiteFailureReached) {
             this.uninitializedVars = uninitializedVars;
+            this.possibleFailureUnInitVars = possibleFailureUnInitVars;
             this.flowTerminated = flowTerminated;
+            this.possibleFailureReached = possibleFailureReached;
+            this.definiteFailureReached = definiteFailureReached;
         }
     }
 }
