@@ -25,14 +25,13 @@ import io.ballerina.compiler.syntax.tree.ErrorMatchPatternNode;
 import io.ballerina.compiler.syntax.tree.QualifiedNameReferenceNode;
 import org.ballerinalang.annotation.JavaSPIService;
 import org.ballerinalang.langserver.common.utils.CommonUtil;
-import org.ballerinalang.langserver.common.utils.completion.QNameReferenceUtil;
 import org.ballerinalang.langserver.commons.BallerinaCompletionContext;
 import org.ballerinalang.langserver.commons.completion.LSCompletionItem;
+import org.ballerinalang.langserver.completions.util.QNameRefCompletionUtil;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * Completion provider for {@link ErrorMatchPatternNode} context.
@@ -58,16 +57,16 @@ public class ErrorMatchPatternNodeContext extends MatchStatementContext<ErrorMat
          */
         List<Symbol> errorTypes;
         List<LSCompletionItem> completionItems = new ArrayList<>();
-        if (QNameReferenceUtil.onQualifiedNameIdentifier(context, context.getNodeAtCursor())) {
+        if (QNameRefCompletionUtil.onQualifiedNameIdentifier(context, context.getNodeAtCursor())) {
             // Covers 3 and 4
             QualifiedNameReferenceNode qNameRef = (QualifiedNameReferenceNode) context.getNodeAtCursor();
-            errorTypes = QNameReferenceUtil.getModuleContent(context, qNameRef, this.errorTypeFilter());
+            errorTypes = QNameRefCompletionUtil.getModuleContent(context, qNameRef, this.errorTypeFilter());
         } else {
             // covers 1 and 2
             List<Symbol> visibleSymbols = context.visibleSymbols(context.getCursorPosition());
             errorTypes = visibleSymbols.stream()
                     .filter(this.errorTypeFilter())
-                    .collect(Collectors.toList());
+                    .toList();
             completionItems.addAll(this.getModuleCompletionItems(context));
         }
         completionItems.addAll(this.getCompletionItemList(errorTypes, context));
