@@ -24,25 +24,26 @@ import io.ballerina.compiler.api.symbols.SymbolKind;
 import io.ballerina.compiler.api.symbols.TypeDefinitionSymbol;
 import io.ballerina.compiler.api.symbols.TypeDescKind;
 import io.ballerina.compiler.api.symbols.TypeSymbol;
+import io.ballerina.compiler.syntax.tree.FunctionArgumentNode;
 import io.ballerina.compiler.syntax.tree.ImplicitNewExpressionNode;
 import io.ballerina.compiler.syntax.tree.Node;
 import io.ballerina.compiler.syntax.tree.NonTerminalNode;
 import io.ballerina.compiler.syntax.tree.ParenthesizedArgList;
 import io.ballerina.compiler.syntax.tree.QualifiedNameReferenceNode;
 import io.ballerina.compiler.syntax.tree.SyntaxKind;
+import io.ballerina.tools.text.LinePosition;
 import org.ballerinalang.annotation.JavaSPIService;
 import org.ballerinalang.langserver.common.utils.CommonUtil;
 import org.ballerinalang.langserver.common.utils.SymbolUtil;
-import org.ballerinalang.langserver.common.utils.completion.QNameReferenceUtil;
 import org.ballerinalang.langserver.commons.BallerinaCompletionContext;
 import org.ballerinalang.langserver.commons.completion.LSCompletionItem;
-import org.ballerinalang.langserver.completions.util.ContextTypeResolver;
+import org.ballerinalang.langserver.completions.util.QNameRefCompletionUtil;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * Completion provider for {@link ImplicitNewExpressionNode} context.
@@ -72,7 +73,7 @@ public class ImplicitNewExpressionNodeContext extends InvocationNodeContextProvi
             */
             List<Symbol> filteredSymbols = context.visibleSymbols(context.getCursorPosition()).stream()
                     .filter(this.getSymbolFilterPredicate(node))
-                    .collect(Collectors.toList());
+                    .toList();
             filteredSymbols.forEach(symbol -> {
                 Optional<LSCompletionItem> cItem = this.getExplicitNewCompletionItem(symbol, context);
                 cItem.ifPresent(completionItems::add);
@@ -108,12 +109,17 @@ public class ImplicitNewExpressionNodeContext extends InvocationNodeContextProvi
     private List<LSCompletionItem> getCompletionsWithinArgs(BallerinaCompletionContext ctx,
                                                             ImplicitNewExpressionNode node) {
         NonTerminalNode nodeAtCursor = ctx.getNodeAtCursor();
-        if (QNameReferenceUtil.onQualifiedNameIdentifier(ctx, nodeAtCursor)) {
+        if (QNameRefCompletionUtil.onQualifiedNameIdentifier(ctx, nodeAtCursor)) {
             QualifiedNameReferenceNode qNameRef = (QualifiedNameReferenceNode) nodeAtCursor;
-            return this.getCompletionItemList(QNameReferenceUtil.getExpressionContextEntries(ctx, qNameRef), ctx);
+            return this.getCompletionItemList(QNameRefCompletionUtil.getExpressionContextEntries(ctx, qNameRef), ctx);
         }
         List<LSCompletionItem> completionItems = new ArrayList<>();
-        completionItems.addAll(this.expressionCompletions(ctx));
+        List<FunctionArgumentNode> arguments = node.parenthesizedArgList().isPresent() ?
+                node.parenthesizedArgList().get().arguments().stream().toList()
+                : Collections.emptyList();
+        if (isNotInNamedArgOnlyContext(ctx, arguments)) {
+            completionItems.addAll(this.expressionCompletions(ctx));
+        }
         completionItems.addAll(getNamedArgExpressionCompletionItems(ctx, node));
 
         return completionItems;
@@ -122,8 +128,12 @@ public class ImplicitNewExpressionNodeContext extends InvocationNodeContextProvi
     private List<LSCompletionItem> getNamedArgExpressionCompletionItems(BallerinaCompletionContext context,
                                                                         ImplicitNewExpressionNode node) {
         List<LSCompletionItem> completionItems = new ArrayList<>();
-        ContextTypeResolver resolver = new ContextTypeResolver(context);
-        Optional<TypeSymbol> type = node.parent().apply(resolver);
+        Optional<TypeSymbol> type = Optional.empty();
+        if (context.currentSemanticModel().isPresent() && context.currentDocument().isPresent()) {
+            LinePosition linePosition = node.parent().location().lineRange().startLine();
+            type = context.currentSemanticModel().get().expectedType(context.currentDocument().get(), linePosition);
+        }
+
         if (type.isEmpty()) {
             return completionItems;
         }
