@@ -60,9 +60,7 @@ import org.eclipse.lsp4j.services.LanguageServer;
 import org.wso2.ballerinalang.compiler.util.ProjectDirConstants;
 import org.wso2.ballerinalang.util.RepoUtils;
 
-import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -109,7 +107,11 @@ public class BallerinaConnectorService implements ExtendedLanguageServerService 
             try {
                 Settings settings = RepoUtils.readSettings();
                 CentralAPIClient client = new CentralAPIClient(RepoUtils.getRemoteRepoURL(),
-                        initializeProxy(settings.getProxy()), getAccessTokenOfCLI(settings));
+                        initializeProxy(settings.getProxy()), settings.getProxy().username(),
+                        settings.getProxy().password(), getAccessTokenOfCLI(settings),
+                        settings.getCentral().getConnectTimeout(),
+                        settings.getCentral().getReadTimeout(), settings.getCentral().getWriteTimeout(),
+                        settings.getCentral().getCallTimeout(), settings.getCentral().getMaxRetries());
 
                 JsonElement connectorSearchResult = client.getConnectors(request.getQueryMap(),
                         "any", RepoUtils.getBallerinaVersion());
@@ -119,7 +121,7 @@ public class BallerinaConnectorService implements ExtendedLanguageServerService 
 
                 // Fetch local project connectors.
                 if (request.getTargetFile() != null) {
-                    Path filePath = Paths.get(request.getTargetFile());
+                    Path filePath = Path.of(request.getTargetFile());
                     List<Connector> localConnectors = fetchLocalConnectors(filePath, false, request.getQuery());
                     connectorList.setLocalConnectors(localConnectors);
                 }
@@ -138,18 +140,12 @@ public class BallerinaConnectorService implements ExtendedLanguageServerService 
      * @param detailed detailed connector out put or not
      * @param query    search query to filter connector list
      * @return connector list
-     * @throws IOException
      */
     private List<Connector> fetchLocalConnectors(Path filePath, boolean detailed, String query) {
         Optional<Project> project = workspaceManager.project(filePath);
         List<Connector> connectors = new ArrayList<>();
-        try {
-            if (project.isPresent()) {
-                connectors.addAll(ConnectorGenerator.getProjectConnectors(project.get(), detailed, query));
-            }
-        } catch (IOException e) {
-            String msg = "Local connector fetching operation failed!";
-            this.clientLogger.logError(this.connectorExtContext, msg, e, null, (Position) null);
+        if (project.isPresent()) {
+            connectors.addAll(ConnectorGenerator.getProjectConnectors(project.get(), detailed, query));
         }
 
         return connectors;
@@ -198,8 +194,12 @@ public class BallerinaConnectorService implements ExtendedLanguageServerService 
         try {
             Settings settings = RepoUtils.readSettings();
             CentralAPIClient client = new CentralAPIClient(RepoUtils.getRemoteRepoURL(),
-                    initializeProxy(settings.getProxy()),
-                    getAccessTokenOfCLI(settings));
+                    initializeProxy(settings.getProxy()), settings.getProxy().username(),
+                    settings.getProxy().password(),
+                    getAccessTokenOfCLI(settings),
+                    settings.getCentral().getConnectTimeout(),
+                    settings.getCentral().getReadTimeout(), settings.getCentral().getWriteTimeout(),
+                    settings.getCentral().getCallTimeout(), settings.getCentral().getMaxRetries());
             if (request.getConnectorId() != null) {
                 // Fetch connector by connector Id.
                 connector = client.getConnector(request.getConnectorId(), "any", RepoUtils.getBallerinaVersion());
@@ -226,7 +226,7 @@ public class BallerinaConnectorService implements ExtendedLanguageServerService 
         try {
             if (request.getTargetFile() != null) {
                 // Generate local connector metadata.
-                filePath = Paths.get(request.getTargetFile());
+                filePath = Path.of(request.getTargetFile());
             } else {
                 // Generate connector metadata by connector FQN.
                 filePath = resolveBalaPath(request.getOrgName(), request.getModuleName(), request.getVersion());
@@ -270,9 +270,8 @@ public class BallerinaConnectorService implements ExtendedLanguageServerService 
 
                 Map<String, JsonElement> recordDefJsonMap = new HashMap<>();
                 ConnectorNodeVisitor connectorNodeVisitor = new ConnectorNodeVisitor(request.getName(), semanticModel);
-                module.documentIds().forEach(documentId -> {
-                    module.document(documentId).syntaxTree().rootNode().accept(connectorNodeVisitor);
-                });
+                module.documentIds().forEach(documentId ->
+                    module.document(documentId).syntaxTree().rootNode().accept(connectorNodeVisitor));
 
 
                 TypeDefinitionNode recordNode = null;
@@ -295,9 +294,9 @@ public class BallerinaConnectorService implements ExtendedLanguageServerService 
 
                 Gson gson = new Gson();
                 if (recordNode != null) {
-                    if (recordJson instanceof JsonObject) {
+                    if (recordJson instanceof JsonObject jsonObject) {
                         JsonElement recordsJson = gson.toJsonTree(recordDefJsonMap);
-                        ((JsonObject) recordJson).add("records", recordsJson);
+                        jsonObject.add("records", recordsJson);
                     }
                     recordCache.addRecordAST(request.getOrg(), request.getModule(),
                             request.getVersion(), request.getName(), recordJson);
