@@ -31,7 +31,6 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 
@@ -42,12 +41,16 @@ public class PartialParserTests {
     private static final String SINGLE_STATEMENT = "partialParser/getSTForSingleStatement";
     private static final String EXPRESSION = "partialParser/getSTForExpression";
     private static final String MODULE_MEMBER = "partialParser/getSTForModuleMembers";
+    private static final String MODULE_PART = "partialParser/getSTForModulePart";
+    private static final String RESOURCE = "partialParser/getSTForResource";
 
-    private static final Path RES_DIR = Paths.get("src/test/resources/").toAbsolutePath();
+    private static final Path RES_DIR = Path.of("src/test/resources/").toAbsolutePath();
     private static final Path ST_WINDOWS = RES_DIR.resolve("syntax-tree").resolve("windows");
     private static final Path ST_LINUX = RES_DIR.resolve("syntax-tree").resolve("linux");
 
     private final Path sampleRecord = RES_DIR.resolve("ballerina").resolve("sample_record.bal");
+    private final Path sampleServiceNListener = RES_DIR.resolve("ballerina").resolve("sample_service_and_listener.bal");
+    private final Path sampleResource = RES_DIR.resolve("ballerina").resolve("sample_resource.bal");
 
     private Endpoint serviceEndpoint;
 
@@ -158,6 +161,23 @@ public class PartialParserTests {
         Assert.assertEquals(json.getSyntaxTree(), expected);
     }
 
+    @Test(description = "Test getting ST for an expression with insert modification")
+    public void testModifiedSTForExpression() throws ExecutionException, InterruptedException, FileNotFoundException {
+        String expression = "";
+        String modification = "(population - infantCount) * 20;";
+        String file = "expression.json";
+
+        STModification stModification = new STModification(0, 0, 0, 0, modification);
+        PartialSTRequest request = new PartialSTRequest(expression, stModification);
+        CompletableFuture<?> result = serviceEndpoint.request(EXPRESSION, request);
+        STResponse json = (STResponse) result.get();
+
+        BufferedReader br = new BufferedReader(getFileReader(file));
+        JsonObject expected = JsonParser.parseReader(br).getAsJsonObject();
+
+        Assert.assertEquals(json.getSyntaxTree(), expected);
+    }
+
     @Test(description = "Test getting ST for a record")
     public void testSTForRecordMembers() throws ExecutionException, InterruptedException, IOException {
 
@@ -171,6 +191,32 @@ public class PartialParserTests {
         BufferedReader br = new BufferedReader(getFileReader(file));
         JsonObject expected = JsonParser.parseReader(br).getAsJsonObject();
 
+        Assert.assertEquals(json.getSyntaxTree(), expected);
+    }
+
+    @Test(description = "Test getting ST for a module part")
+    public void testSTForModulePart() throws ExecutionException, InterruptedException, IOException {
+        String file = "sample_service_and_listener.json";
+
+        String modulePart =  Files.readString(sampleServiceNListener);
+        PartialSTRequest request = new PartialSTRequest(modulePart);
+        CompletableFuture<?> result = serviceEndpoint.request(MODULE_PART, request);
+        STResponse json = (STResponse) result.get();
+        BufferedReader br = new BufferedReader(getFileReader(file));
+        JsonObject expected = JsonParser.parseReader(br).getAsJsonObject();
+        Assert.assertEquals(json.getSyntaxTree(), expected);
+    }
+
+    @Test(description = "Test getting ST for a resource")
+    public void testSTForResource() throws ExecutionException, InterruptedException, IOException {
+        String file = "sample_resource.json";
+
+        String modulePart =  Files.readString(sampleResource);
+        PartialSTRequest request = new PartialSTRequest(modulePart);
+        CompletableFuture<?> result = serviceEndpoint.request(RESOURCE, request);
+        STResponse json = (STResponse) result.get();
+        BufferedReader br = new BufferedReader(getFileReader(file));
+        JsonObject expected = JsonParser.parseReader(br).getAsJsonObject();
         Assert.assertEquals(json.getSyntaxTree(), expected);
     }
 
