@@ -22,6 +22,7 @@ import io.ballerina.projects.DependencyGraph;
 import io.ballerina.projects.DependencyResolutionType;
 import io.ballerina.projects.Document;
 import io.ballerina.projects.Module;
+import io.ballerina.projects.ModuleDescriptor;
 import io.ballerina.projects.ModuleName;
 import io.ballerina.projects.PackageDependencyScope;
 import io.ballerina.projects.PackageDescriptor;
@@ -40,24 +41,34 @@ import io.ballerina.projects.environment.ResolutionOptions;
 import io.ballerina.projects.environment.ResolutionRequest;
 import io.ballerina.projects.environment.ResolutionResponse;
 import io.ballerina.projects.util.ProjectUtils;
+import org.apache.commons.io.FileUtils;
 import org.ballerinalang.model.elements.PackageID;
 import org.ballerinalang.test.BCompileUtil;
 import org.testng.Assert;
 import org.testng.annotations.BeforeClass;
+import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 import org.wso2.ballerinalang.compiler.PackageCache;
 import org.wso2.ballerinalang.compiler.util.CompilerContext;
 import org.wso2.ballerinalang.compiler.util.Name;
+import org.wso2.ballerinalang.util.RepoUtils;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
+import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.Set;
+
+import static io.ballerina.projects.test.TestUtils.replaceDistributionVersionOfDependenciesToml;
 
 /**
  * Contains cases to test dependency graph changes with package edits.
@@ -65,16 +76,19 @@ import java.util.stream.Collectors;
  * @since 2.0.0
  */
 public class DependencyGraphTests extends BaseTest {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src/test/resources").toAbsolutePath();
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources").toAbsolutePath();
     private static final ResolutionOptions resolutionOptions = ResolutionOptions.builder().setOffline(true).build();
     ProjectEnvironmentBuilder projectEnvironmentBuilder;
+    private static Path tempResourceDir;
+
     @BeforeClass
     public void setup() throws IOException {
+        // copy the resource directory to a temp directory
+        tempResourceDir = Files.createTempDirectory("project-api-test");
+        FileUtils.copyDirectory(RESOURCE_DIRECTORY.toFile(), tempResourceDir.toFile());
+
         // dist => cache (0.1.0), io (1.4.2)
         // central => cache (0.1.0), io (1.5.0)
-        Path customUserHome = Paths.get("build", "userHome");
-        Path centralCache = customUserHome.resolve("repositories/central.ballerina.io");
-        Files.createDirectories(centralCache);
         BCompileUtil.compileAndCacheBala(
                 "projects_for_resolution_tests/ultimate_package_resolution/package_runtime");
         BCompileUtil.compileAndCacheBala(
@@ -84,23 +98,24 @@ public class DependencyGraphTests extends BaseTest {
         BCompileUtil.compileAndCacheBala(
                 "projects_for_resolution_tests/ultimate_package_resolution/package_cache");
         BCompileUtil.compileAndCacheBala(
-                "projects_for_resolution_tests/ultimate_package_resolution/package_cache", centralCache);
+                "projects_for_resolution_tests/ultimate_package_resolution/package_cache", CENTRAL_CACHE);
         BCompileUtil.compileAndCacheBala(
                 "projects_for_resolution_tests/ultimate_package_resolution/package_io_1_5_0",
-                centralCache);
+                CENTRAL_CACHE);
 
-        Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
+        Environment environment = EnvironmentBuilder.getBuilder().setUserHome(CUSTOM_USER_HOME).build();
         projectEnvironmentBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
     }
 
     @Test
-    public void testVersionChange() {
+    public void testVersionChange() throws IOException {
         /* test_dependencies_package --> package_dep (0.1.0), package_c
          * Specify minimum version for package_dep as 0.1.1
          */
 
         // 1) load the project
-        Path projectPath = RESOURCE_DIRECTORY.resolve("projects_for_edit_api_tests/package_test_dependencies_toml");
+        Path projectPath = tempResourceDir.resolve("projects_for_edit_api_tests/package_test_dependencies_toml");
+        replaceDistributionVersionOfDependenciesToml(projectPath, RepoUtils.getBallerinaShortVersion());
 
         // Create build options with sticky
         BuildProject project = TestUtils.loadBuildProject(projectPath, BuildOptions.builder().setSticky(true).build());
@@ -116,7 +131,7 @@ public class DependencyGraphTests extends BaseTest {
 
         ResolvedPackageDependency packageDep = dependencyGraphOld.getNodes().stream().filter(
                 resolvedPackageDependency -> resolvedPackageDependency.packageInstance().packageName().toString()
-                        .equals("package_dep")).collect(Collectors.toList()).get(0);
+                        .equals("package_dep")).toList().get(0);
         PackageID packageDepPkgID = new PackageID(new Name(packageDep.packageInstance().packageOrg().value()),
                 new Name(packageDep.packageInstance().getDefaultModule().moduleName().toString()),
                 new Name(packageDep.packageInstance().packageVersion().toString()));
@@ -127,17 +142,19 @@ public class DependencyGraphTests extends BaseTest {
 
         // 2) update version of the package_dep dependency in Dependencies.toml
         project.currentPackage().ballerinaToml().get().modify().withContent(
-                        "[package]\n" +
-                        "org = \"foo\"\n" +
-                        "name = \"test_dependencies_package\"\n" +
-                        "version = \"2.1.0\"\n" +
-                        "\n" +
-                        "[build-options]\n" +
-                        "observabilityIncluded = false\n\n" +
-                        "[[dependency]]\n" +
-                        "org = \"foo\"\n" +
-                        "name = \"package_dep\"\n" +
-                        "version = \"0.1.1\"").apply();
+                """
+                        [package]
+                        org = "foo"
+                        name = "test_dependencies_package"
+                        version = "2.1.0"
+
+                        [build-options]
+                        observabilityIncluded = false
+
+                        [[dependency]]
+                        org = "foo"
+                        name = "package_dep"
+                        version = "0.1.1\"""").apply();
 
         // 3) compare dependency graphs before and after edit
         DependencyGraph<ResolvedPackageDependency> dependencyGraphNew =
@@ -153,14 +170,16 @@ public class DependencyGraphTests extends BaseTest {
     }
 
     @Test
-    public void testRemoveDependency() {
+    public void testRemoveDependency() throws IOException {
         /*
          * package_b.mod_b2 --> package_c.mod_c1
          * Remove package_c dependency
          */
 
         // 1) load the project
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("projects_for_resolution_tests/package_b");
+        Path projectDirPath = tempResourceDir.resolve("projects_for_resolution_tests/package_b");
+        replaceDistributionVersionOfDependenciesToml(projectDirPath, RepoUtils.getBallerinaShortVersion());
+
         BuildProject project = TestUtils.loadBuildProject(projectDirPath);
         DependencyGraph<ResolvedPackageDependency> dependencyGraphOld =
                 project.currentPackage().getResolution().dependencyGraph();
@@ -173,7 +192,7 @@ public class DependencyGraphTests extends BaseTest {
         project.currentPackage().getCompilation();
         ResolvedPackageDependency packageC = dependencyGraphOld.getNodes().stream().filter(resolvedPackageDependency ->
                 resolvedPackageDependency.packageInstance().packageName().toString().equals("package_c"))
-                .collect(Collectors.toList()).get(0);
+                .toList().get(0);
         PackageID packageCPkgID = new PackageID(new Name(packageC.packageInstance().packageOrg().value()),
                 new Name(packageC.packageInstance().getDefaultModule().moduleName().toString()),
                 new Name(packageC.packageInstance().packageVersion().toString()));
@@ -195,14 +214,15 @@ public class DependencyGraphTests extends BaseTest {
     }
 
     @Test
-    public void testAddDependency() {
+    public void testAddDependency() throws IOException {
         /*
          * package_b.mod_b2 --> package_c.mod_c1
          * Import package_e
          */
 
         // 1) load the project
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("projects_for_resolution_tests/package_b");
+        Path projectDirPath = tempResourceDir.resolve("projects_for_resolution_tests/package_b");
+        replaceDistributionVersionOfDependenciesToml(projectDirPath, RepoUtils.getBallerinaShortVersion());
         BuildProject project = TestUtils.loadBuildProject(projectDirPath);
         DependencyGraph<ResolvedPackageDependency> dependencyGraphOld =
                 project.currentPackage().getResolution().dependencyGraph();
@@ -216,7 +236,7 @@ public class DependencyGraphTests extends BaseTest {
 
         ResolvedPackageDependency packageC = dependencyGraphOld.getNodes().stream().filter(resolvedPackageDependency ->
                 resolvedPackageDependency.packageInstance().packageName().toString().equals("package_c"))
-                .collect(Collectors.toList()).get(0);
+                .toList().get(0);
         PackageID packageCPkgID = new PackageID(new Name(packageC.packageInstance().packageOrg().value()),
                 new Name(packageC.packageInstance().getDefaultModule().moduleName().toString()),
                 new Name(packageC.packageInstance().packageVersion().toString()));
@@ -226,12 +246,13 @@ public class DependencyGraphTests extends BaseTest {
         Module modB2 = project.currentPackage().module(ModuleName.from(PackageName.from("package_b"), "mod_b2"));
         Document document = modB2.document(modB2.documentIds().stream().findFirst().get());
         document.modify().withContent(
-                "import samjs/package_c.mod_c1;\n" +
-                "import samjs/package_e as _;\n" +
-                "\n" +
-                "public function func2() {\n" +
-                "    mod_c1:func1();\n" +
-                "}"
+                """
+                        import samjs/package_c.mod_c1;
+                        import samjs/package_e as _;
+
+                        public function func2() {
+                            mod_c1:func1();
+                        }"""
         ).apply();
 
         // 3) compare dependency graphs before and after edit
@@ -245,14 +266,15 @@ public class DependencyGraphTests extends BaseTest {
     }
 
     @Test
-    public void testRemoveAndAddDependencies() {
+    public void testRemoveAndAddDependencies() throws IOException {
         /*
          * package_b.mod_b2 --> package_c.mod_c1
          * Import package_e. remove pacakge_c.mod_c1
          */
 
         // 1) load the project
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("projects_for_resolution_tests/package_b");
+        Path projectDirPath = tempResourceDir.resolve("projects_for_resolution_tests/package_b");
+        replaceDistributionVersionOfDependenciesToml(projectDirPath, RepoUtils.getBallerinaShortVersion());
         BuildProject project = TestUtils.loadBuildProject(projectDirPath);
         DependencyGraph<ResolvedPackageDependency> dependencyGraphOld =
                 project.currentPackage().getResolution().dependencyGraph();
@@ -265,7 +287,7 @@ public class DependencyGraphTests extends BaseTest {
         project.currentPackage().getCompilation();
         ResolvedPackageDependency packageC = dependencyGraphOld.getNodes().stream().filter(resolvedPackageDependency ->
                 resolvedPackageDependency.packageInstance().packageName().toString().equals("package_c"))
-                .collect(Collectors.toList()).get(0);
+                .toList().get(0);
         PackageID packageID = new PackageID(new Name(packageC.packageInstance().packageOrg().value()),
                 new Name(packageC.packageInstance().getDefaultModule().moduleName().toString()),
                 new Name(packageC.packageInstance().packageVersion().toString()));
@@ -274,8 +296,10 @@ public class DependencyGraphTests extends BaseTest {
         // 2) update the mod_b2/mod2.bal file to remove package_c dependency
         Module modB2 = project.currentPackage().module(ModuleName.from(PackageName.from("package_b"), "mod_b2"));
         Document document = modB2.document(modB2.documentIds().stream().findFirst().get());
-        document.modify().withContent("import samjs/package_e as _;\n" +
-                "public function func2() {\n" + "}").apply();
+        document.modify().withContent("""
+                import samjs/package_e as _;
+                public function func2() {
+                }""").apply();
 
         // 3) compare dependency graphs before and after edit
         DependencyGraph<ResolvedPackageDependency> dependencyGraphNew =
@@ -287,14 +311,15 @@ public class DependencyGraphTests extends BaseTest {
     }
 
     @Test
-    public void testUnaffectedEdit() {
+    public void testUnaffectedEdit() throws IOException {
         /*
          * package_b.mod_b2 --> package_c.mod_c1
          * Import package_e
          */
 
         // 1) load the project
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("projects_for_resolution_tests/package_b");
+        Path projectDirPath = tempResourceDir.resolve("projects_for_resolution_tests/package_b");
+        replaceDistributionVersionOfDependenciesToml(projectDirPath, RepoUtils.getBallerinaShortVersion());
         BuildProject project = TestUtils.loadBuildProject(projectDirPath);
         DependencyGraph<ResolvedPackageDependency> dependencyGraphOld =
                 project.currentPackage().getResolution().dependencyGraph();
@@ -307,7 +332,7 @@ public class DependencyGraphTests extends BaseTest {
         project.currentPackage().getCompilation();
         ResolvedPackageDependency packageC = dependencyGraphOld.getNodes().stream().filter(resolvedPackageDependency ->
                 resolvedPackageDependency.packageInstance().packageName().toString().equals("package_c"))
-                .collect(Collectors.toList()).get(0);
+                .toList().get(0);
         PackageID packageCPkgID = new PackageID(new Name(packageC.packageInstance().packageOrg().value()),
                 new Name(packageC.packageInstance().getDefaultModule().moduleName().toString()),
                 new Name(packageC.packageInstance().packageVersion().toString()));
@@ -329,14 +354,15 @@ public class DependencyGraphTests extends BaseTest {
     }
 
     @Test
-    public void testMissingTransitiveDependency() {
+    public void testMissingTransitiveDependency() throws IOException {
         /*
          * package_a --> package_b(0.1.0) --> package_c(0.1.0)
          * Specify package_c(0.3.0) in Ballerina.toml
          * Revert Ballerina.toml changes
          */
 
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("projects_for_resolution_tests/package_a");
+        Path projectDirPath = tempResourceDir.resolve("projects_for_resolution_tests/package_a");
+        replaceDistributionVersionOfDependenciesToml(projectDirPath, RepoUtils.getBallerinaShortVersion());
         BuildProject project = TestUtils.loadBuildProject(projectDirPath);
         DependencyGraph<ResolvedPackageDependency> dependencyGraphOld =
                 project.currentPackage().getResolution().dependencyGraph();
@@ -355,14 +381,16 @@ public class DependencyGraphTests extends BaseTest {
 
         // 1) update version of the package_c dependency in Ballerina.toml. 0.3.0 is unavailable
         project.currentPackage().ballerinaToml().get().modify().withContent(
-                "[package]\n" +
-                "org = \"samjs\"\n" +
-                "name = \"package_a\"\n" +
-                "version = \"0.1.0\"\n\n" +
-                "[[dependency]]\n" +
-                "org = \"samjs\"\n" +
-                "name = \"package_c\"\n" +
-                "version = \"0.3.0\"").apply();
+                """
+                        [package]
+                        org = "samjs"
+                        name = "package_a"
+                        version = "0.1.0"
+
+                        [[dependency]]
+                        org = "samjs"
+                        name = "package_c"
+                        version = "0.3.0\"""").apply();
 
         dependencyGraphOld = project.currentPackage().getResolution().dependencyGraph();
         // dependency graph should contain self and package_b
@@ -370,20 +398,22 @@ public class DependencyGraphTests extends BaseTest {
 
         // The bir of the direct dependency should be removed since the compiler throws
         // an exception when compiling with the BIR
-        ProjectUtils.deleteDirectory(Paths.get("build/repo/cache/samjs/package_b/0.1.0"));
+        ProjectUtils.deleteDirectory(Path.of("build/repo/cache/samjs/package_b/0.1.0"));
 
         project.currentPackage().getCompilation();
         // verify that the compiler package cache contains package_b but not package_c
-        Assert.assertNotNull(packageCache.getSymbol(packageBPkgID));
+        Assert.assertNull(packageCache.getSymbol(packageBPkgID));
         PackageID packageCPkgID2 = new PackageID(new Name("samjs"), new Name("package_c"), new Name("0.3.0"));
         Assert.assertNull(packageCache.getSymbol(packageCPkgID2));
 
         // 2) Revert Ballerina.toml changes and update the content in the default module to import package_c
         project.currentPackage().ballerinaToml().get().modify().withContent(
-                "[package]\n" +
-                "org = \"samjs\"\n" +
-                "name = \"package_a\"\n" +
-                "version = \"0.1.0\"\n").apply();
+                """
+                        [package]
+                        org = "samjs"
+                        name = "package_a"
+                        version = "0.1.0"
+                        """).apply();
 
         // 3) check the new dependency graph. dependency graph should contain self package_b. package_c
         DependencyGraph<ResolvedPackageDependency> dependencyGraphNew =
@@ -402,7 +432,7 @@ public class DependencyGraphTests extends BaseTest {
     @Test
     public void testVersionResolutionSOFT() {
         // http -> io, cache -> io (1.4.2)
-        Path projectDirPath = RESOURCE_DIRECTORY
+        Path projectDirPath = tempResourceDir
                 .resolve("projects_for_resolution_tests/ultimate_package_resolution/package_http");
         BuildProject project = TestUtils.loadBuildProject(projectEnvironmentBuilder, projectDirPath);
         PackageResolver packageResolver = project.projectEnvironmentContext().getService(PackageResolver.class);
@@ -461,7 +491,7 @@ public class DependencyGraphTests extends BaseTest {
     @Test
     public void testVersionResolutionMEDIUM() {
         // http -> io, cache -> io (1.4.2)
-        Path projectDirPath = RESOURCE_DIRECTORY
+        Path projectDirPath = tempResourceDir
                 .resolve("projects_for_resolution_tests/ultimate_package_resolution/package_http");
         BuildProject project = TestUtils.loadBuildProject(projectEnvironmentBuilder, projectDirPath);
         PackageResolver packageResolver = project.projectEnvironmentContext().getService(PackageResolver.class);
@@ -541,7 +571,7 @@ public class DependencyGraphTests extends BaseTest {
     @Test
     public void testVersionResolutionHARD() {
         // http -> io, cache -> io (1.4.2)
-        Path projectDirPath = RESOURCE_DIRECTORY
+        Path projectDirPath = tempResourceDir
                 .resolve("projects_for_resolution_tests/ultimate_package_resolution/package_http");
         BuildProject project = TestUtils.loadBuildProject(projectEnvironmentBuilder, projectDirPath);
         PackageResolver packageResolver = project.projectEnvironmentContext().getService(PackageResolver.class);
@@ -605,5 +635,228 @@ public class DependencyGraphTests extends BaseTest {
         Assert.assertEquals(packageMetadataResponse.resolvedDescriptor().version().toString(), "1.5.0");
         Assert.assertEquals(packageMetadataResponse.resolutionStatus(),
                 ResolutionResponse.ResolutionStatus.RESOLVED);
+    }
+
+    @Test
+    public void testGetAllDependents() {
+        // Create a sample DependencyGraph with String nodes
+        DependencyGraph<String> dependencyGraph = DependencyGraph.from(new LinkedHashMap<>() {{
+            put("A", new LinkedHashSet<>() {{
+                add("B");
+                add("C");
+            }});
+            put("B", new LinkedHashSet<>() {{
+                add("D");
+            }});
+            put("C", new LinkedHashSet<>());
+            put("D", new LinkedHashSet<>());
+            put("E", new LinkedHashSet<>() {{
+                add("F");
+            }});
+            put("F", new LinkedHashSet<>());
+        }});
+
+        Collection<String> allDependents = dependencyGraph.getAllDependents("D");
+        Set<String> expectedDependents = new HashSet<>(Arrays.asList("A", "B"));
+
+        Assert.assertEquals(expectedDependents, allDependents);
+    }
+
+    @Test
+    public void testGetAllDependencies() {
+        // Create a sample DependencyGraph with String nodes
+        DependencyGraph<String> dependencyGraph = DependencyGraph.from(new LinkedHashMap<>() {{
+            put("A", new LinkedHashSet<>() {{
+                add("B");
+                add("C");
+            }});
+            put("B", new LinkedHashSet<>() {{
+                add("D");
+            }});
+            put("C", new LinkedHashSet<>());
+            put("D", new LinkedHashSet<>());
+            put("E", new LinkedHashSet<>() {{
+                add("F");
+            }});
+            put("F", new LinkedHashSet<>());
+        }});
+
+        Collection<String> allDependencies = dependencyGraph.getAllDependencies("A");
+        Set<String> expectedDependencies = new HashSet<>(Arrays.asList("B", "C", "D"));
+
+        Assert.assertEquals(expectedDependencies, allDependencies);
+    }
+
+    @Test
+    public void testTopologicalSortOfModuleDescriptor() {
+        PackageName packageName = PackageName.from("package");
+        PackageDescriptor packageDescriptor = PackageDescriptor.from(
+                PackageOrg.BALLERINA_ORG, packageName, PackageVersion.from("0.0.1"));
+
+        ModuleDescriptor moduleDescriptor = ModuleDescriptor.from(ModuleName.from(packageName), packageDescriptor);
+        ModuleDescriptor moduleADescriptor = ModuleDescriptor.from(
+                ModuleName.from(packageName, "module_a"), packageDescriptor);
+        ModuleDescriptor moduleBDescriptor = ModuleDescriptor.from(
+                ModuleName.from(packageName, "module_b"), packageDescriptor);
+        ModuleDescriptor moduleCDescriptor = ModuleDescriptor.from(
+                ModuleName.from(packageName, "module_c"), packageDescriptor);
+
+        DependencyGraph<ModuleDescriptor> dependencyGraph = DependencyGraph.from(new LinkedHashMap<>() {{
+            put(moduleADescriptor, new LinkedHashSet<>() {{
+                add(moduleBDescriptor);
+            }});
+            put(moduleDescriptor, new LinkedHashSet<>() {{
+                add(moduleBDescriptor);
+                add(moduleADescriptor);
+                add(moduleCDescriptor);
+            }});
+            put(moduleBDescriptor, new LinkedHashSet<>());
+            put(moduleCDescriptor, new LinkedHashSet<>());
+        }});
+
+        Assert.assertEquals(dependencyGraph.toTopologicallySortedList(), new LinkedList<>() {{
+            add(moduleBDescriptor);
+            add(moduleADescriptor);
+            add(moduleCDescriptor);
+            add(moduleDescriptor);
+        }});
+    }
+
+    @Test
+    public void testTopologicalSortOfPackageDescriptor() {
+        PackageVersion packageVersion = PackageVersion.from("0.0.1");
+        PackageName packageName = PackageName.from("package_c");
+
+        PackageDescriptor firstPackageDescriptor = PackageDescriptor.from(
+                PackageOrg.BALLERINA_ORG, PackageName.from("package_a"), packageVersion);
+        PackageDescriptor secondPackageDescriptor = PackageDescriptor.from(
+                PackageOrg.BALLERINA_ORG, PackageName.from("package_b"), packageVersion);
+        PackageDescriptor thirdPackageDescriptor = PackageDescriptor.from(
+                PackageOrg.BALLERINA_ORG, packageName, packageVersion);
+        PackageDescriptor forthPackageDescriptor = PackageDescriptor.from(
+                PackageOrg.BALLERINA_X_ORG, packageName, packageVersion);
+        PackageDescriptor fifthPackageDescriptor = PackageDescriptor.from(
+                PackageOrg.BALLERINA_ORG, packageName, PackageVersion.from("0.0.2"));
+
+        DependencyGraph<PackageDescriptor> dependencyGraph = DependencyGraph.from(new LinkedHashMap<>() {{
+            put(secondPackageDescriptor, new LinkedHashSet<>() {{
+                add(fifthPackageDescriptor);
+            }});
+            put(firstPackageDescriptor, new LinkedHashSet<>() {{
+                add(forthPackageDescriptor);
+                add(secondPackageDescriptor);
+                add(thirdPackageDescriptor);
+            }});
+            put(fifthPackageDescriptor, new LinkedHashSet<>());
+            put(thirdPackageDescriptor, new LinkedHashSet<>());
+            put(forthPackageDescriptor, new LinkedHashSet<>());
+        }});
+
+        Assert.assertEquals(dependencyGraph.toTopologicallySortedList(), new LinkedList<>() {{
+            add(fifthPackageDescriptor);
+            add(secondPackageDescriptor);
+            add(thirdPackageDescriptor);
+            add(forthPackageDescriptor);
+            add(firstPackageDescriptor);
+        }});
+    }
+
+    @Test(dataProvider = "provideDependenciesInDifferentOrder")
+    public void testTopologicalSortConsistency(Map<String, Set<String>> dependencies) {
+        DependencyGraph<String> dependencyGraph = DependencyGraph.from(dependencies);
+        Assert.assertEquals(dependencyGraph.toTopologicallySortedList(), new LinkedList<>() {{
+            add("package7");
+            add("package8");
+            add("package6");
+            add("package3");
+            add("package4");
+            add("package5");
+            add("package1");
+            add("package2");
+        }});
+    }
+
+    @DataProvider(name = "provideDependenciesInDifferentOrder")
+    public Object[][] provideDependenciesInDifferentOrder() {
+        return new Object[][]{
+                {new LinkedHashMap<>() {{
+                    put("package1", new LinkedHashSet<>() {{
+                        add("package3");
+                        add("package4");
+                        add("package5");
+                    }});
+                    put("package2", new LinkedHashSet<>() {{
+                        add("package5");
+                    }});
+                    put("package3", new LinkedHashSet<>() {{
+                        add("package6");
+                        add("package7");
+                    }});
+                    put("package4", new LinkedHashSet<>() {{
+                        add("package6");
+                    }});
+                    put("package5", new LinkedHashSet<>() {{
+                        add("package8");
+                    }});
+                    put("package6", new LinkedHashSet<>() {{
+                        add("package7");
+                        add("package8");
+                    }});
+                    put("package7", new LinkedHashSet<>());
+                    put("package8", new LinkedHashSet<>());
+                }}},
+                {new LinkedHashMap<>() {{
+                    put("package8", new LinkedHashSet<>());
+                    put("package7", new LinkedHashSet<>());
+                    put("package6", new LinkedHashSet<>() {{
+                        add("package8");
+                        add("package7");
+                    }});
+                    put("package4", new LinkedHashSet<>() {{
+                        add("package6");
+                    }});
+                    put("package5", new LinkedHashSet<>() {{
+                        add("package8");
+                    }});
+                    put("package3", new LinkedHashSet<>() {{
+                        add("package7");
+                        add("package6");
+                    }});
+                    put("package2", new LinkedHashSet<>() {{
+                        add("package5");
+                    }});
+                    put("package1", new LinkedHashSet<>() {{
+                        add("package5");
+                        add("package4");
+                        add("package3");
+                    }});
+                }}},
+                {new LinkedHashMap<>() {{
+                    put("package4", new LinkedHashSet<>() {{
+                        add("package6");
+                    }});
+                    put("package3", new LinkedHashSet<>() {{
+                        add("package6");
+                        add("package7");
+                    }});
+                    put("package2", new LinkedHashSet<>() {{
+                        add("package5");
+                    }});
+                    put("package1", new LinkedHashSet<>() {{
+                        add("package5");
+                        add("package3");
+                        add("package4");
+                    }});
+                    put("package8", new LinkedHashSet<>());
+                    put("package7", new LinkedHashSet<>());
+                    put("package6", new LinkedHashSet<>() {{
+                        add("package8");
+                        add("package7");
+                    }});
+                    put("package5", new LinkedHashSet<>() {{
+                        add("package8");
+                    }});
+                }}}
+        };
     }
 }
