@@ -63,24 +63,30 @@ import org.testng.Assert;
 import org.testng.SkipException;
 import org.testng.annotations.BeforeTest;
 import org.testng.annotations.Test;
+import org.wso2.ballerinalang.util.RepoUtils;
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
 import java.io.Reader;
 import java.io.Writer;
 import java.lang.management.ManagementFactory;
 import java.lang.management.OperatingSystemMXBean;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static io.ballerina.projects.test.TestUtils.isWindows;
+import static io.ballerina.projects.test.TestUtils.replaceDistributionVersionOfDependenciesToml;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -91,20 +97,30 @@ import static org.mockito.Mockito.when;
  * @since 2.0.0
  */
 public class PackageResolutionTests extends BaseTest {
-    private static final Path RESOURCE_DIRECTORY = Paths.get(
+    private static final Path RESOURCE_DIRECTORY = Path.of(
             "src/test/resources/projects_for_resolution_tests").toAbsolutePath();
-    private static final Path testBuildDirectory = Paths.get("build").toAbsolutePath();
+    private static Path tempResourceDir;
+    private static final Path testBuildDirectory = Path.of("build").toAbsolutePath();
 
     @BeforeTest
     public void setup() throws IOException {
+        // create temp dir and copy resources
+        tempResourceDir = Files.createTempDirectory("project-api-test");
+        FileUtils.copyDirectory(RESOURCE_DIRECTORY.toFile(), tempResourceDir.toFile());
+
         // Compile and cache dependency for custom repo tests
-        cacheDependencyToLocalRepo(RESOURCE_DIRECTORY.resolve("package_c_with_pkg_private_function"));
+        cacheDependencyToLocalRepo(tempResourceDir.resolve("package_c_with_pkg_private_function"));
+
+        replaceDependenciesTomlVersion(tempResourceDir.resolve("package_n"));
+        replaceDependenciesTomlVersion(tempResourceDir.resolve("package_p_withDep"));
+        replaceDependenciesTomlVersion(tempResourceDir.resolve("package_p_withoutDep"));
+        replaceDependenciesTomlVersion(tempResourceDir.resolve("package_z"));
     }
 
     @Test(description = "tests resolution with zero direct dependencies")
     public void testProjectWithZeroDependencies() {
         // package_c --> {}
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_c");
+        Path projectDirPath = tempResourceDir.resolve("package_c");
         BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
@@ -118,11 +134,13 @@ public class PackageResolutionTests extends BaseTest {
                 "Unexpected number of dependencies");
     }
 
-    @Test(description = "tests resolution with one direct dependency")
-    public void testProjectWithOneDependency() {
+    @Test(description = "tests resolution with one direct dependency", dataProvider = "optimizeDependencyCompilation")
+    public void testProjectWithOneDependency(boolean optimizeDependencyCompilation) throws IOException {
         // package_b --> package_c
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_b");
-        BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
+        Path projectDirPath = tempResourceDir.resolve("package_b");
+        replaceDistributionVersionOfDependenciesToml(projectDirPath, RepoUtils.getBallerinaShortVersion());
+        BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath,
+                BuildOptions.builder().setOptimizeDependencyCompilation(optimizeDependencyCompilation).build());
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
         // Check whether there are any diagnostics
@@ -135,29 +153,30 @@ public class PackageResolutionTests extends BaseTest {
                 "Unexpected number of dependencies");
     }
 
-    @Test(description = "tests resolution with invalid build file")
-    public void testProjectWithInvalidBuildFile() throws IOException {
+    @Test(description = "tests resolution with invalid build file", dataProvider = "optimizeDependencyCompilation")
+    public void testProjectWithInvalidBuildFile(boolean optimizeDependencyCompilation) throws IOException {
         // Package path
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_n");
+        Path projectDirPath = tempResourceDir.resolve("package_n");
 
         BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_o_1_0_0");
         BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_o_1_0_2");
 
-        BuildOptions.BuildOptionsBuilder buildOptionsBuilder = BuildOptions.builder().setExperimental(true);
+        BuildOptions.BuildOptionsBuilder buildOptionsBuilder = BuildOptions.builder();
         buildOptionsBuilder.setSticky(false);
-        BuildOptions buildOptions = buildOptionsBuilder.build();
+        buildOptionsBuilder.targetDir(String.valueOf(projectDirPath.resolve(ProjectConstants.TARGET_DIR_NAME)));
+        BuildOptions buildOptions = buildOptionsBuilder.setOptimizeDependencyCompilation(
+                optimizeDependencyCompilation).build();
 
         Project loadProject = TestUtils.loadBuildProject(projectDirPath, buildOptions);
 
         // Delete the build file
-        if (loadProject.sourceRoot().resolve(ProjectConstants.TARGET_DIR_NAME).toFile().exists()) {
-            TestUtils.deleteDirectory(loadProject.sourceRoot().resolve(ProjectConstants.TARGET_DIR_NAME).toFile());
+        if (loadProject.targetDir().toFile().exists()) {
+            TestUtils.deleteDirectory(loadProject.targetDir().toFile());
         }
 
         // Create empty build file
-        Files.createDirectory(loadProject.sourceRoot().resolve(ProjectConstants.TARGET_DIR_NAME));
-        Files.createFile(loadProject.sourceRoot().resolve(ProjectConstants.TARGET_DIR_NAME)
-                .resolve(ProjectConstants.BUILD_FILE));
+        Files.createDirectory(loadProject.targetDir());
+        Files.createFile(loadProject.targetDir().resolve(ProjectConstants.BUILD_FILE));
 
         PackageCompilation compilation = loadProject.currentPackage().getCompilation();
         Assert.assertEquals(compilation.diagnosticResult().errorCount(), 0);
@@ -166,15 +185,15 @@ public class PackageResolutionTests extends BaseTest {
     @Test(description = "tests validation of invalid build file", dependsOnMethods = "testProjectWithInvalidBuildFile")
     public void testDependencyGraphWithInvalidBuildFile() {
         // Package path
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_n");
+        Path projectDirPath = tempResourceDir.resolve("package_n");
 
         BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_o_1_0_0");
         BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_o_1_0_2");
+        BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_o_1_1_0");
 
-        BuildOptions.BuildOptionsBuilder buildOptionsBuilder = BuildOptions.builder().setExperimental(true);
+        BuildOptions.BuildOptionsBuilder buildOptionsBuilder = BuildOptions.builder();
         buildOptionsBuilder.setSticky(false);
         BuildOptions buildOptions = buildOptionsBuilder.build();
-
         Project loadProject = TestUtils.loadBuildProject(projectDirPath, buildOptions);
 
         PackageCompilation compilation = loadProject.currentPackage().getCompilation();
@@ -196,13 +215,9 @@ public class PackageResolutionTests extends BaseTest {
         BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_o_1_1_0");
 
         // Stage 1 : Package P without dep in Ballerina toml
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_p_withoutDep");
+        Path projectDirPath = tempResourceDir.resolve("package_p_withoutDep");
 
-        BuildOptions.BuildOptionsBuilder buildOptionsBuilder = BuildOptions.builder().setExperimental(true);
-        buildOptionsBuilder.setSticky(false);
-        BuildOptions buildOptions = buildOptionsBuilder.build();
-
-        Project loadProject = TestUtils.loadBuildProject(projectDirPath, buildOptions);
+        Project loadProject = TestUtils.loadBuildProject(projectDirPath);
         PackageCompilation compilation = loadProject.currentPackage().getCompilation();
 
         DependencyGraph<ResolvedPackageDependency> dependencyGraph = compilation.getResolution().dependencyGraph();
@@ -213,12 +228,9 @@ public class PackageResolutionTests extends BaseTest {
         Assert.assertEquals(packageO.packageInstance().manifest().version().toString(), "1.0.2");
 
         // Stage 2 : Package P with deps
-        projectDirPath = RESOURCE_DIRECTORY.resolve("package_p_withDep");
-        buildOptionsBuilder = BuildOptions.builder().setExperimental(true);
-        buildOptionsBuilder.setSticky(false);
-        buildOptions = buildOptionsBuilder.build();
+        projectDirPath = tempResourceDir.resolve("package_p_withDep");
 
-        loadProject = TestUtils.loadBuildProject(projectDirPath, buildOptions);
+        loadProject = TestUtils.loadBuildProject(projectDirPath);
         compilation = loadProject.currentPackage().getCompilation();
 
         dependencyGraph = compilation.getResolution().dependencyGraph();
@@ -230,10 +242,9 @@ public class PackageResolutionTests extends BaseTest {
 
     @Test(dependsOnMethods = "testProjectWithInvalidBuildFile", description = "tests project with empty build file")
     public void testProjectSaveWithEmptyBuildFile() throws IOException {
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_n");
+        Path projectDirPath = tempResourceDir.resolve("package_n");
         Project loadProject = TestUtils.loadBuildProject(projectDirPath);
-        Path buildPath = loadProject.sourceRoot().resolve(ProjectConstants.TARGET_DIR_NAME)
-                .resolve(ProjectConstants.BUILD_FILE);
+        Path buildPath = loadProject.targetDir().resolve(ProjectConstants.BUILD_FILE);
 
         Files.deleteIfExists(buildPath);
         Files.createFile(buildPath); // Empty build file
@@ -247,10 +258,9 @@ public class PackageResolutionTests extends BaseTest {
 
     @Test(dependsOnMethods = "testProjectSaveWithEmptyBuildFile", description = "tests project with empty build file")
     public void testProjectSaveWithNewlineBuildFile() throws IOException {
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_n");
+        Path projectDirPath = tempResourceDir.resolve("package_n");
         Project loadProject = TestUtils.loadBuildProject(projectDirPath);
-        Path buildPath = loadProject.sourceRoot().resolve(ProjectConstants.TARGET_DIR_NAME)
-                .resolve(ProjectConstants.BUILD_FILE);
+        Path buildPath = loadProject.targetDir().resolve(ProjectConstants.BUILD_FILE);
 
         Files.deleteIfExists(buildPath);
         Files.createFile(buildPath);
@@ -270,10 +280,9 @@ public class PackageResolutionTests extends BaseTest {
         if (isWindows()) {
             throw new SkipException("Skipping tests on Windows");
         }
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_n");
+        Path projectDirPath = tempResourceDir.resolve("package_n");
         Project loadProject = TestUtils.loadBuildProject(projectDirPath);
-        Path buildPath = loadProject.sourceRoot().resolve(ProjectConstants.TARGET_DIR_NAME)
-                .resolve(ProjectConstants.BUILD_FILE);
+        Path buildPath = loadProject.targetDir().resolve(ProjectConstants.BUILD_FILE);
 
         Files.deleteIfExists(buildPath);
         Files.createFile(buildPath);
@@ -293,10 +302,9 @@ public class PackageResolutionTests extends BaseTest {
         if (isWindows()) {
             throw new SkipException("Skipping tests on Windows");
         }
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_n");
+        Path projectDirPath = tempResourceDir.resolve("package_n");
         Project loadProject = TestUtils.loadBuildProject(projectDirPath);
-        Path buildPath = loadProject.sourceRoot().resolve(ProjectConstants.TARGET_DIR_NAME)
-                .resolve(ProjectConstants.BUILD_FILE);
+        Path buildPath = loadProject.targetDir().resolve(ProjectConstants.BUILD_FILE);
         boolean readable = buildPath.toFile().setReadable(false, false);
         if (!readable) {
             Assert.fail("could not set readable permission");
@@ -322,10 +330,9 @@ public class PackageResolutionTests extends BaseTest {
         if (isWindows()) {
             throw new SkipException("Skipping tests on Windows");
         }
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_n");
+        Path projectDirPath = tempResourceDir.resolve("package_n");
         Project loadProject = TestUtils.loadBuildProject(projectDirPath);
-        Path buildPath = loadProject.sourceRoot().resolve(ProjectConstants.TARGET_DIR_NAME)
-                .resolve(ProjectConstants.BUILD_FILE);
+        Path buildPath = loadProject.targetDir().resolve(ProjectConstants.BUILD_FILE);
         boolean writable = buildPath.toFile().setWritable(false, false);
         if (!writable) {
             Assert.fail("could not set writable permission");
@@ -351,18 +358,15 @@ public class PackageResolutionTests extends BaseTest {
                 "projectB");
         FileUtils.deleteDirectory(projectBCachePath.toFile());
 
-
         // Step 1 : Build ProjectB1 and Cache
         CompileResult depCompileResult = BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/projectB1");
         if (depCompileResult.getErrorCount() > 0) {
             Assert.fail("Package B contains compilations error");
         }
 
-
         // Step 2 : Build ProjectA with ProjectB as an import
-        Path projectA = RESOURCE_DIRECTORY.resolve("projectA");
+        Path projectA = tempResourceDir.resolve("projectA");
         Project loadProjectA = TestUtils.loadBuildProject(projectA);
-
 
         // Step 3 : Get compilation of ProjectA and verify dependencies
         PackageCompilation compilation = loadProjectA.currentPackage().getCompilation();
@@ -373,7 +377,6 @@ public class PackageResolutionTests extends BaseTest {
                 Assert.assertEquals(manifest.version().toString(), "1.0.0");
             }
         }
-
 
         // Step 4 : Modify projectA to be blank
 
@@ -393,7 +396,6 @@ public class PackageResolutionTests extends BaseTest {
         Document document = defaultModuleProjectA.document(mainDocumentId.get());
         document.modify().withContent(newMainProjectAContent).apply();
 
-
         // Step 5 : Compile ProjectA and verify dependency
         compilation = loadProjectA.currentPackage().getCompilation();
         dependencyGraph = compilation.getResolution().dependencyGraph();
@@ -404,10 +406,8 @@ public class PackageResolutionTests extends BaseTest {
             }
         }
 
-
         // Step 6 : Clear ProjectB cache
         FileUtils.deleteDirectory(projectBCachePath.toFile());
-
 
         // Step 7 : Compile ProjectB2 and cache
         depCompileResult = BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/projectB2");
@@ -418,12 +418,15 @@ public class PackageResolutionTests extends BaseTest {
         // Step 8 : Clear ProjectB cache
         FileUtils.deleteDirectory(projectBCachePath.toFile());
 
-
         // Step 9 : Modify ProjectA again with the old content
 
         // - Step 9.1 : Get the main.bal file document
-        String oldMainProjectAContent = "import samjs/projectB;\n" + "\n" + "public function getHello() returns " +
-                "(string) {\n" + "    return projectB:hello();\n" + "}";
+        String oldMainProjectAContent = """
+                import samjs/projectB;
+
+                public function getHello() returns (string) {
+                    return projectB:hello();
+                }""";
 
         Module oldModuleProjectA = loadProjectA.currentPackage().getDefaultModule();
 
@@ -439,7 +442,6 @@ public class PackageResolutionTests extends BaseTest {
         document = defaultModuleProjectA.document(mainDocumentId.get());
         document.modify().withContent(oldMainProjectAContent).apply();
 
-
         // Step 10 : Compile ProjectA and verify dependency
         compilation = loadProjectA.currentPackage().getCompilation();
         Assert.assertNotEquals(compilation.diagnosticResult().errorCount(), 0, "Package A has compiled successfully " +
@@ -448,9 +450,10 @@ public class PackageResolutionTests extends BaseTest {
     }
 
     @Test(description = "tests resolution with one transitive dependency")
-    public void testProjectWithOneTransitiveDependency() {
+    public void testProjectWithOneTransitiveDependency() throws IOException {
         // package_a --> package_b --> package_c
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_a");
+        Path projectDirPath = tempResourceDir.resolve("package_a");
+        replaceDistributionVersionOfDependenciesToml(projectDirPath, RepoUtils.getBallerinaShortVersion());
         BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
@@ -468,7 +471,7 @@ public class PackageResolutionTests extends BaseTest {
     public void testProjectWithTwoDirectDependencies() {
         // package_d --> package_b --> package_c
         // package_d --> package_e
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_d");
+        Path projectDirPath = tempResourceDir.resolve("package_d");
         BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
@@ -489,20 +492,22 @@ public class PackageResolutionTests extends BaseTest {
     public void testProjectWithMissingTransitiveDependency() throws IOException {
         // package_missing_transitive_dep --> package_b --> package_c
         // package_missing_transitive_dep --> package_k --> package_z (this is missing)
-        Path balaPath = RESOURCE_DIRECTORY.resolve("balas").resolve("missing_transitive_deps")
+        Path balaPath = tempResourceDir.resolve("balas").resolve("missing_transitive_deps")
                 .resolve("samjs-package_kk-any-1.0.0.bala");
         BCompileUtil.copyBalaToDistRepository(balaPath, "samjs", "package_kk", "1.0.0");
 
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_missing_transitive_dep");
+        Path projectDirPath = tempResourceDir.resolve("package_missing_transitive_dep");
         BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
         buildProject.currentPackage().getResolution();
     }
 
-    @Test(description = "Test dependencies should not be stored in bala archive")
-    public void testProjectWithTransitiveTestDependencies() throws IOException {
+    @Test(description = "Test dependencies should not be stored in bala archive",
+            dataProvider = "optimizeDependencyCompilation")
+    public void testProjectWithTransitiveTestDependencies(boolean optimizeDependencyCompilation) throws IOException {
         // package_with_test_dependency --> package_c
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_with_test_dependency");
-        BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
+        Path projectDirPath = tempResourceDir.resolve("package_with_test_dependency");
+        BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath,
+                BuildOptions.builder().setOptimizeDependencyCompilation(optimizeDependencyCompilation).build());
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
         // Dependency graph should contain two entries here
@@ -510,7 +515,7 @@ public class PackageResolutionTests extends BaseTest {
                 compilation.getResolution().dependencyGraph();
         Assert.assertEquals(depGraphOfSrcProject.getNodes().size(), 2);
 
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_11);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_21);
 
         // Check whether there are any diagnostics
         DiagnosticResult diagnosticResult = jBallerinaBackend.diagnosticResult();
@@ -532,9 +537,8 @@ public class PackageResolutionTests extends BaseTest {
         Assert.assertEquals(depGraphOfBala.getNodes().size(), 1);
     }
 
-    // TODO: enable after https://github.com/ballerina-platform/ballerina-lang/pull/31972 is merged
-    @Test(description = "Ultimate test case")
-    public void testProjectWithManyDependencies() {
+    @Test(description = "Ultimate test case", dataProvider = "optimizeDependencyCompilation")
+    public void testProjectWithManyDependencies(boolean optimizeDependencyCompilation) {
         BCompileUtil.compileAndCacheBala(
                 "projects_for_resolution_tests/ultimate_package_resolution/package_runtime");
         BCompileUtil.compileAndCacheBala(
@@ -548,22 +552,21 @@ public class PackageResolutionTests extends BaseTest {
 
         OperatingSystemMXBean os = ManagementFactory.getOperatingSystemMXBean();
         long initialOpenCount = 0;
-        if (os instanceof UnixOperatingSystemMXBean) {
-            UnixOperatingSystemMXBean unixOperatingSystemMXBean = (UnixOperatingSystemMXBean) os;
+        if (os instanceof UnixOperatingSystemMXBean unixOperatingSystemMXBean) {
             initialOpenCount = unixOperatingSystemMXBean.getOpenFileDescriptorCount();
         }
-        Project project = BCompileUtil.loadProject(
-                "projects_for_resolution_tests/ultimate_package_resolution/package_http");
+        Project project = TestUtils.loadProject(tempResourceDir
+                        .resolve("ultimate_package_resolution/package_http"),
+                BuildOptions.builder().setOptimizeDependencyCompilation(optimizeDependencyCompilation).build());
 
         PackageCompilation compilation = project.currentPackage().getCompilation();
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_11);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_21);
         // Check whether there are any diagnostics
         DiagnosticResult diagnosticResult = jBallerinaBackend.diagnosticResult();
         diagnosticResult.errors().forEach(OUT::println);
         Assert.assertEquals(diagnosticResult.diagnosticCount(), 0, "Unexpected compilation diagnostics");
 
-        if (os instanceof UnixOperatingSystemMXBean) {
-            UnixOperatingSystemMXBean unixOperatingSystemMXBean = (UnixOperatingSystemMXBean) os;
+        if (os instanceof UnixOperatingSystemMXBean unixOperatingSystemMXBean) {
             Assert.assertEquals(initialOpenCount, unixOperatingSystemMXBean.getOpenFileDescriptorCount());
         }
 
@@ -606,41 +609,50 @@ public class PackageResolutionTests extends BaseTest {
         List<ResolvedPackageDependency> nodeInGraph = dependencyGraph.toTopologicallySortedList();
         Assert.assertEquals(nodeInGraph.size(), 2);
     }
-    // For this to be enabled, #31026 should be fixed.
-    @Test(enabled = false, dependsOnMethods = "testResolveDependencyFromUnsupportedCustomRepo")
-    public void testResolveDependencyFromCustomRepo() {
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_b");
-        String dependencyContent = "[[dependency]]\n" +
-                "org = \"samjs\"\n" +
-                "name = \"package_c\"\n" +
-                "version = \"0.1.0\"\n" +
-                "repository = \"local\"";
+
+    @Test (description = "Resolve a dependency from the local repo", dataProvider = "optimizeDependencyCompilation")
+    public void testResolveDependencyFromCustomRepo(boolean optimizeDependencyCompilation) throws IOException {
+        Path projectDirPath = tempResourceDir.resolve("package_b");
+        replaceDistributionVersionOfDependenciesToml(projectDirPath, RepoUtils.getBallerinaShortVersion());
+        String dependencyContent = """
+                
+                [[dependency]]
+                org = "samjs"
+                name = "package_c"
+                version = "0.1.0"
+                repository = "local\"""";
 
         // 1) load the build project
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(USER_HOME).build();
         ProjectEnvironmentBuilder projectEnvironmentBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
-        BuildProject project = TestUtils.loadBuildProject(projectEnvironmentBuilder, projectDirPath);
+        BuildOptions buildOptions = BuildOptions.builder()
+                .setOptimizeDependencyCompilation(optimizeDependencyCompilation).build();
+        BuildProject project = TestUtils.loadBuildProject(projectEnvironmentBuilder, projectDirPath, buildOptions);
 
         // 2) set local repository to dependency
-        project.currentPackage().dependenciesToml().orElseThrow().modify().withContent(dependencyContent).apply();
+        String currentContent = project.currentPackage().ballerinaToml().get()
+                .tomlDocument().textDocument().toString();
+        String updatedContent = currentContent.concat(dependencyContent);
+        project.currentPackage().ballerinaToml().orElseThrow().modify().withContent(updatedContent).apply();
 
         // 3) Compile and check the diagnostics
         PackageCompilation compilation = project.currentPackage().getCompilation();
         DiagnosticResult diagnosticResult = compilation.diagnosticResult();
 
         // 4) The dependency is expected to load from distribution cache, hence zero diagnostics
-        Assert.assertEquals(diagnosticResult.errorCount(), 2);
+        Assert.assertEquals(diagnosticResult.errorCount(), 0);
     }
 
     // For this to be enabled, #31026 should be fixed.
     @Test (enabled = false)
     public void testResolveDependencyFromUnsupportedCustomRepo() {
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_b");
-        String dependencyContent = "[[dependency]]\n" +
-                "org = \"samjs\"\n" +
-                "name = \"package_c\"\n" +
-                "version = \"0.1.0\"\n" +
-                "repository = \"stdlib.local\"";
+        Path projectDirPath = tempResourceDir.resolve("package_b");
+        String dependencyContent = """
+                [[dependency]]
+                org = "samjs"
+                name = "package_c"
+                version = "0.1.0"
+                repository = "stdlib.local\"""";
 
         // 2) load the build project
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(USER_HOME).build();
@@ -655,18 +667,18 @@ public class PackageResolutionTests extends BaseTest {
         // 4) The dependency is expected to load from distribution cache, hence zero diagnostics
         Assert.assertEquals(diagnosticResult.errorCount(), 3);
         List<String> diagnosticMsgs = diagnosticResult.errors().stream()
-                .map(Diagnostic::message).collect(Collectors.toList());
+                .map(Diagnostic::message).toList();
         Assert.assertTrue(diagnosticMsgs.contains("cannot resolve module 'samjs/package_c.mod_c1 as mod_c1'"));
     }
 
     @Test(description = "tests resolution with invalid bala dependency", enabled = false)
     public void testProjectWithInvalidBalaDependency() throws IOException {
         // package_x --> package_bash/soap
-        Path balaPath = RESOURCE_DIRECTORY.resolve("balas").resolve("invalid")
+        Path balaPath = tempResourceDir.resolve("balas").resolve("invalid")
                 .resolve("bash-soap-any-0.1.0.bala");
         BCompileUtil.copyBalaToDistRepository(balaPath, "bash", "soap", "0.1.0");
 
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_x_with_invalid_bala_dep");
+        Path projectDirPath = tempResourceDir.resolve("package_x_with_invalid_bala_dep");
         BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
@@ -698,14 +710,14 @@ public class PackageResolutionTests extends BaseTest {
     public void testProjectWithInvalidTransitiveBalaDependency() throws IOException {
         // package_hello --> package_zip
         // package_xx    --> package_hello
-        Path zipBalaPath = RESOURCE_DIRECTORY.resolve("balas").resolve("invalid")
+        Path zipBalaPath = tempResourceDir.resolve("balas").resolve("invalid")
                 .resolve("zip-2020r1-java8-1.0.4.balo");
         BCompileUtil.copyBalaToDistRepository(zipBalaPath, "hemikak", "zip", "1.0.4");
-        Path helloBalaPath = RESOURCE_DIRECTORY.resolve("balas").resolve("invalid")
+        Path helloBalaPath = tempResourceDir.resolve("balas").resolve("invalid")
                 .resolve("hello-2020r1-any-0.1.0.balo");
         BCompileUtil.copyBalaToDistRepository(helloBalaPath, "bache", "hello", "0.1.0");
 
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_xx_with_invalid_transitive_bala_dep");
+        Path projectDirPath = tempResourceDir.resolve("package_xx_with_invalid_transitive_bala_dep");
         BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
@@ -752,15 +764,15 @@ public class PackageResolutionTests extends BaseTest {
 
     @Test(description = "tests resolution for dependency given in Ballerina.toml invalid repository")
     public void testPackageResolutionOfDependencyInvalidRepository() {
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_y_having_dependency_missing_repo");
+        Path projectDirPath = tempResourceDir.resolve("package_y_having_dependency_missing_repo");
         BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
         // Check whether there are any diagnostics
         DiagnosticResult diagnosticResult = compilation.diagnosticResult();
         diagnosticResult.diagnostics().forEach(OUT::println);
-        Assert.assertEquals(diagnosticResult.errorCount(), 4, "Unexpected compilation diagnostics");
-        Assert.assertEquals(diagnosticResult.warningCount(), 1, "Unexpected compilation diagnostics");
+        Assert.assertEquals(diagnosticResult.errorCount(), 3, "Unexpected compilation diagnostics");
+        Assert.assertEquals(diagnosticResult.warningCount(), 2, "Unexpected compilation diagnostics");
 
         Iterator<Diagnostic> diagnosticIterator = diagnosticResult.diagnostics().iterator();
         Assert.assertTrue(diagnosticIterator.next().toString().contains(
@@ -769,8 +781,8 @@ public class PackageResolutionTests extends BaseTest {
         // Check dependency cannot be resolved diagnostic
         Assert.assertEquals(
                 diagnosticIterator.next().toString(),
-                "ERROR [Ballerina.toml:(21:12,21:21)] invalid 'repository' under [dependency]: 'repository' " +
-                        "can only have the value 'local'");
+                "WARNING [Ballerina.toml:(17:1,21:21)] Provided custom repository (invalid) cannot be found in the " +
+                        "Settings.toml. ");
         Assert.assertEquals(diagnosticIterator.next().toString(),
                             "ERROR [fee.bal:(1:1,1:16)] cannot resolve module 'ccc/ddd'");
         Assert.assertEquals(diagnosticIterator.next().toString(),
@@ -792,7 +804,7 @@ public class PackageResolutionTests extends BaseTest {
         changeBallerinaVersionInPackageJson("package_b", "slbeta6");
         changeBallerinaVersionInPackageJson("package_c", "slbeta4");
 
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("packages_for_various_dist_test/package_d");
+        Path projectDirPath = tempResourceDir.resolve("packages_for_various_dist_test/package_d");
         BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
@@ -815,7 +827,7 @@ public class PackageResolutionTests extends BaseTest {
         changeBallerinaVersionInPackageJson("package_b", "2301.89.0");
         changeBallerinaVersionInPackageJson("package_c", "slbeta6");
 
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("packages_for_various_dist_test/package_d");
+        Path projectDirPath = tempResourceDir.resolve("packages_for_various_dist_test/package_d");
         BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
         // Check whether there are any diagnostics
@@ -841,11 +853,11 @@ public class PackageResolutionTests extends BaseTest {
                 "projects_for_resolution_tests/packages_for_various_dist_test/package_c");
         // Cache package_c to central
         cacheDependencyToCentralRepository(
-                RESOURCE_DIRECTORY.resolve("packages_for_various_dist_test/package_c"));
+                tempResourceDir.resolve("packages_for_various_dist_test/package_c"));
         // Change `ballerina_version` of `package_c` in the central to a higher dist version --> package_c_two
         Path packageJsonInProjectBalaPath = testBuildDirectory.resolve("user-home").resolve("repositories")
                 .resolve("central.ballerina.io").resolve("bala").resolve("various_dist_test")
-                .resolve("package_c").resolve("0.1.0").resolve("java11").resolve("package.json");
+                .resolve("package_c").resolve("0.1.0").resolve(JvmTarget.JAVA_21.code()).resolve("package.json");
         changeBallerinaVersionInPackageJson(packageJsonInProjectBalaPath, "2301.89.0");
 
         BCompileUtil.compileAndCacheBala(
@@ -856,13 +868,54 @@ public class PackageResolutionTests extends BaseTest {
         // Change `ballerina_version` of package.json in /repo/bala
         changeBallerinaVersionInPackageJson("package_b", "slbeta6");
 
-        Path projectDirPath = RESOURCE_DIRECTORY.resolve("packages_for_various_dist_test/package_d");
+        Path projectDirPath = tempResourceDir.resolve("packages_for_various_dist_test/package_d");
         BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
         // Check whether there are any diagnostics
         DiagnosticResult diagnosticResult = compilation.diagnosticResult();
         diagnosticResult.errors().forEach(OUT::println);
         Assert.assertEquals(diagnosticResult.diagnosticCount(), 0, "Unexpected compilation diagnostics");
+    }
+
+    @Test(description = "Resolve dependencies when a dependency has a hierarchical name and is specified in " +
+            "the Ballerina.toml and the Dependencies.toml of the dependent")
+    public void testDependencyWithHierrarchicalNameInDepTomlAndBalToml() {
+        Path projectDirPath = tempResourceDir.resolve("package_z");
+
+        BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_zz_1_0_0");
+        BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_zz_1_0_2");
+
+        BuildOptions.BuildOptionsBuilder buildOptionsBuilder = BuildOptions.builder();
+        buildOptionsBuilder.setSticky(true);
+        BuildOptions buildOptions = buildOptionsBuilder.build();
+        Project loadProject = TestUtils.loadBuildProject(projectDirPath, buildOptions);
+
+        PackageCompilation compilation = loadProject.currentPackage().getCompilation();
+
+        DependencyGraph<ResolvedPackageDependency> dependencyGraph = compilation.getResolution().dependencyGraph();
+        ResolvedPackageDependency packageO =
+                dependencyGraph.getNodes().stream().filter(
+                        node -> node.packageInstance().manifest().name().toString().equals("foo.bar")
+                ).findFirst().orElseThrow();
+        Assert.assertEquals(packageO.packageInstance().manifest().version().toString(), "1.0.0");
+    }
+
+    private void replaceDependenciesTomlVersion(Path projectPath) throws IOException {
+        String currentDistrVersion = RepoUtils.getBallerinaShortVersion();
+        Path dependenciesTomlTemplatePath = projectPath.resolve("Dependencies-template.toml");
+        Path dependenciesTomlPath = projectPath.resolve("Dependencies.toml");
+
+        try (FileInputStream input = new FileInputStream(dependenciesTomlTemplatePath.toString());
+            FileOutputStream output = new FileOutputStream(dependenciesTomlPath.toString());
+            BufferedReader reader = new BufferedReader(new InputStreamReader(input));
+            BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(output))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                line = line.replace("**INSERT_DISTRIBUTION_VERSION_HERE**", currentDistrVersion);
+                writer.write(line);
+                writer.newLine();
+            }
+        }
     }
 
     private void changeBallerinaVersionInPackageJson(String packageName, String balVersion) {
