@@ -20,20 +20,22 @@ package io.ballerina.projects.test;
 import io.ballerina.projects.DiagnosticResult;
 import io.ballerina.projects.PackageCompilation;
 import io.ballerina.projects.directory.BuildProject;
+import org.apache.commons.io.FileUtils;
 import org.ballerinalang.test.BCompileUtil;
 import org.testng.Assert;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
+import org.wso2.ballerinalang.util.RepoUtils;
 
 import java.io.IOException;
 import java.io.PrintStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
-import static io.ballerina.projects.test.TestUtils.readFileAsString;
+import static io.ballerina.projects.test.TestUtils.assertTomlFilesEquals;
+import static io.ballerina.projects.test.TestUtils.replaceDistributionVersionOfDependenciesToml;
 import static io.ballerina.projects.util.ProjectConstants.BALLERINA_TOML;
 import static io.ballerina.projects.util.ProjectConstants.BUILD_FILE;
 import static io.ballerina.projects.util.ProjectConstants.DEPENDENCIES_TOML;
@@ -48,13 +50,18 @@ import static io.ballerina.projects.util.ProjectConstants.TARGET_DIR_NAME;
 public class SubsequentBuildTests {
 
     private static final Path RESOURCE_DIRECTORY =
-            Paths.get("src/test/resources/projects_for_resolution_tests").toAbsolutePath();
+            Path.of("src/test/resources/projects_for_resolution_tests").toAbsolutePath();
+    private static Path tempResourceDir;
     private static final PrintStream OUT = System.out;
     private Path packagePath;
 
     @BeforeClass
     public void setUp() throws IOException {
-        packagePath = RESOURCE_DIRECTORY.resolve("package_f");
+        // copy the resource directory to a temp directory
+        tempResourceDir = Files.createTempDirectory("project-api-test");
+        FileUtils.copyDirectory(RESOURCE_DIRECTORY.toFile(), tempResourceDir.toFile());
+
+        packagePath = tempResourceDir.resolve("package_f");
         // Delete build file if exists
         Files.deleteIfExists(packagePath.resolve(TARGET_DIR_NAME).resolve(BUILD_FILE));
         // Delete Dependencies.toml file if exists
@@ -63,10 +70,12 @@ public class SubsequentBuildTests {
         // package_f --> package_d
         // package_d --> package_b --> package_c
         // package_d --> package_e
-        BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_c");
-        BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_b");
-        BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_e");
-        BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_d");
+        BCompileUtil.compileAndCacheBala(tempResourceDir.resolve("package_c").toString());
+        Path packageBPath = tempResourceDir.resolve("package_b");
+        replaceDistributionVersionOfDependenciesToml(packageBPath, RepoUtils.getBallerinaShortVersion());
+        BCompileUtil.compileAndCacheBala(packageBPath.toString());
+        BCompileUtil.compileAndCacheBala(tempResourceDir.resolve("package_e").toString());
+        BCompileUtil.compileAndCacheBala(tempResourceDir.resolve("package_d").toString());
     }
 
     @Test
@@ -81,8 +90,8 @@ public class SubsequentBuildTests {
         Assert.assertEquals(diagnosticResult.diagnosticCount(), 0, "Unexpected compilation diagnostics");
 
         // Check Dependencies.toml content
-        Assert.assertEquals(readFileAsString(packagePath.resolve(DEPENDENCIES_TOML)), readFileAsString(
-                packagePath.resolve(RESOURCE_DIR_NAME).resolve("UpdatedDependencies.toml")));
+        assertTomlFilesEquals(packagePath.resolve(DEPENDENCIES_TOML),
+                packagePath.resolve(RESOURCE_DIR_NAME).resolve("UpdatedDependencies.toml"));
     }
 
     @Test(dependsOnMethods = "testBuildPackage")
@@ -92,17 +101,19 @@ public class SubsequentBuildTests {
         // package_d --> package_e
 
         // update package_c version and push to local repo
-        String pkgDBallerinaTomlContent = "[package]\n"
-                + "org = \"samjs\"\n"
-                + "name = \"package_c\"\n"
-                + "version = \"0.2.0\"\n"
-                + "export = [\"package_c\", \"package_c.mod_c1\", \"package_c.mod_c2\"]\n";
-        Files.write(RESOURCE_DIRECTORY.resolve("package_c").resolve(BALLERINA_TOML),
+        String pkgDBallerinaTomlContent = """
+                [package]
+                org = "samjs"
+                name = "package_c"
+                version = "0.2.0"
+                export = ["package_c", "package_c.mod_c1", "package_c.mod_c2"]
+                """;
+        Files.write(tempResourceDir.resolve("package_c").resolve(BALLERINA_TOML),
                     pkgDBallerinaTomlContent.getBytes(StandardCharsets.UTF_8));
         BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_c");
 
         // Build the project
-        BuildProject buildProject = BuildProject.load(packagePath);
+        BuildProject buildProject = TestUtils.loadBuildProject(packagePath);
         buildProject.save();
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
@@ -111,8 +122,8 @@ public class SubsequentBuildTests {
         Assert.assertEquals(diagnosticResult.diagnosticCount(), 0, "Unexpected compilation diagnostics");
 
         // Check updated Dependencies.toml content
-        Assert.assertEquals(readFileAsString(packagePath.resolve(DEPENDENCIES_TOML)), readFileAsString(
-                packagePath.resolve(RESOURCE_DIR_NAME).resolve("UpdatedDependencies.toml")));
+        assertTomlFilesEquals(packagePath.resolve(DEPENDENCIES_TOML),
+                packagePath.resolve(RESOURCE_DIR_NAME).resolve("UpdatedDependencies.toml"));
     }
 
     @AfterClass
@@ -121,14 +132,16 @@ public class SubsequentBuildTests {
         Files.deleteIfExists(packagePath.resolve(DEPENDENCIES_TOML));
         Files.deleteIfExists(packagePath.resolve(TARGET_DIR_NAME).resolve(BUILD_FILE));
         // revert package_c version
-        String pkgDBallerinaTomlContent = "[package]\n"
-                + "org = \"samjs\"\n"
-                + "name = \"package_c\"\n"
-                + "version = \"0.1.0\"\n"
-                + "export = [\"package_c\", \"package_c.mod_c1\", \"package_c.mod_c2\"]\n";
-        Files.write(RESOURCE_DIRECTORY.resolve("package_c").resolve(BALLERINA_TOML),
+        String pkgDBallerinaTomlContent = """
+                [package]
+                org = "samjs"
+                name = "package_c"
+                version = "0.1.0"
+                export = ["package_c", "package_c.mod_c1", "package_c.mod_c2"]
+                """;
+        Files.write(tempResourceDir.resolve("package_c").resolve(BALLERINA_TOML),
                     pkgDBallerinaTomlContent.getBytes(StandardCharsets.UTF_8));
         // Delete package_c build file
-        Files.deleteIfExists(RESOURCE_DIRECTORY.resolve("package_c").resolve(TARGET_DIR_NAME).resolve(BUILD_FILE));
+        Files.deleteIfExists(tempResourceDir.resolve("package_c").resolve(TARGET_DIR_NAME).resolve(BUILD_FILE));
     }
 }
