@@ -39,7 +39,6 @@ import org.wso2.ballerinalang.compiler.PackageCache;
 import org.wso2.ballerinalang.compiler.util.CompilerContext;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 
 import static io.ballerina.projects.test.TestUtils.isWindows;
@@ -51,7 +50,7 @@ import static io.ballerina.projects.test.TestUtils.resetPermissions;
  * @since 2.0.0
  */
 public class TestSingleFileProject {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src/test/resources/");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources/");
 
     @Test (description = "tests loading a valid standalone Ballerina file")
     public void testLoadSingleFile() {
@@ -87,7 +86,7 @@ public class TestSingleFileProject {
         Path targetDirPath = project.targetDir();
         Assert.assertNotNull(targetDirPath);
         Assert.assertTrue(targetDirPath.toFile().exists());
-        Assert.assertEquals(Paths.get(System.getProperty("java.io.tmpdir")), targetDirPath.getParent());
+        Assert.assertEquals(Path.of(System.getProperty("java.io.tmpdir")), targetDirPath.getParent());
     }
 
     @Test (description = "tests loading a valid standalone Ballerina file")
@@ -148,6 +147,7 @@ public class TestSingleFileProject {
         Assert.assertFalse(project.buildOptions().observabilityIncluded());
         Assert.assertFalse(project.buildOptions().codeCoverage());
         Assert.assertFalse(project.buildOptions().offlineBuild());
+        Assert.assertFalse(project.buildOptions().experimental());
         Assert.assertFalse(project.buildOptions().testReport());
     }
 
@@ -169,6 +169,7 @@ public class TestSingleFileProject {
         Assert.assertTrue(project.buildOptions().skipTests());
         Assert.assertTrue(project.buildOptions().observabilityIncluded());
         Assert.assertFalse(project.buildOptions().codeCoverage());
+        Assert.assertFalse(project.buildOptions().experimental());
         Assert.assertFalse(project.buildOptions().testReport());
     }
 
@@ -248,12 +249,12 @@ public class TestSingleFileProject {
         PackageCompilation compilation = currentPackage.getCompilation();
 
         Assert.assertEquals(compilation.diagnosticResult().diagnosticCount(), 1);
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_11);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_21);
         Assert.assertEquals(jBallerinaBackend.diagnosticResult().diagnosticCount(), 1);
 
         Assert.assertEquals(
                 compilation.diagnosticResult().diagnostics().stream().findFirst().get().location().lineRange()
-                        .filePath(), "main_with_error.bal");
+                        .fileName(), "main_with_error.bal");
     }
 
     @Test
