@@ -20,6 +20,9 @@ package org.ballerinalang.testerina.test;
 
 import org.ballerinalang.test.context.BMainInstance;
 import org.ballerinalang.test.context.BallerinaTestException;
+import org.ballerinalang.test.context.Utils;
+import org.ballerinalang.testerina.test.utils.AssertionUtils;
+import org.ballerinalang.testerina.test.utils.CommonUtils;
 import org.ballerinalang.testerina.test.utils.FileUtils;
 import org.testng.Assert;
 import org.testng.annotations.AfterMethod;
@@ -27,8 +30,9 @@ import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.HashMap;
+import java.util.Map;
 
 /**
  * Test class containting tests related to Rerun failed test functionality.
@@ -39,41 +43,88 @@ public class RerunFailedTest extends BaseTestCase {
     private String projectPath;
 
     @BeforeClass
-    public void setup() throws BallerinaTestException {
+    public void setup() {
         balClient = new BMainInstance(balServer);
         projectPath = projectBasedTestsPath.toString();
     }
 
     @Test
-    public void testFullTest() throws BallerinaTestException {
-        String msg1 = "2 passing";
-        String msg2 = "2 failing";
+    public void testFullTest() throws BallerinaTestException, IOException {
         String[] args = mergeCoverageArgs(new String[]{"rerun-failed-tests"});
         String output = balClient.runMainAndReadStdOut("test", args,
                 new HashMap<>(), projectPath, false);
-        if (!output.contains(msg1) || !output.contains(msg2)) {
-            Assert.fail("Test failed due to running test suite with failed tests failure.");
+        String firstString = "tests.test_execute-generated_";
+        String endString = "lineNumber";
+        output = CommonUtils.replaceVaryingString(firstString, endString, output);
+        AssertionUtils.assertOutput("RerunFailedTest-testFullTest.txt", output.replaceAll("\r", ""));
+        if (!Utils.isWindowsOS()) {
+            //  Skip the exit code check on Windows due to PowerShell always setting the exit code to 0.
+            Assert.assertEquals(balClient.getLastExitCode(), 1, "The exit code is not as expected.");
         }
     }
 
     @Test (dependsOnMethods = "testFullTest")
-    public void testRerunFailedTest() throws BallerinaTestException {
-        String msg1 = "0 passing";
-        String msg2 = "2 failing";
+    public void testRerunFailedTest() throws BallerinaTestException, IOException {
         String[] args = mergeCoverageArgs(new String[]{"--rerun-failed", "rerun-failed-tests"});
         String output = balClient.runMainAndReadStdOut("test", args,
                 new HashMap<>(), projectPath, false);
-        if (!output.contains(msg1) || !output.contains(msg2)) {
-            Assert.fail("Test failed due to rerun failed tests failure.");
+        String firstString = "tests.test_execute-generated_";
+        String endString = "lineNumber";
+        output = CommonUtils.replaceVaryingString(firstString, endString, output);
+        AssertionUtils.assertOutput("RerunFailedTest-testRerunFailedTest.txt", output.replaceAll("\r", ""));
+        if (!Utils.isWindowsOS()) {
+            //  Skip the exit code check on Windows due to PowerShell always setting the exit code to 0.
+            Assert.assertEquals(balClient.getLastExitCode(), 1, "The exit code is not as expected.");
         }
+    }
+
+    @Test (dependsOnMethods = "testRerunFailedTest")
+    public void testRerunFailedTestWithoutAnInitialRun() throws BallerinaTestException, IOException {
+        // delete the target directory along with rerun_test.json file
+        String packageDirName = "rerun-failed-tests";
+        runBalClean(packageDirName);
+
+        String[] args = new String[]{"--rerun-failed", packageDirName};
+        String output = balClient.runMainAndReadStdOut("test", args, new HashMap<>(), projectPath, false);
+        AssertionUtils.assertOutput("RerunFailedTest-testRerunFailedTestWithoutAnInitialRun.txt",
+                output.replaceAll("\r", ""));
+        if (!Utils.isWindowsOS()) {
+            //  Skip the exit code check on Windows due to PowerShell always setting the exit code to 0.
+            Assert.assertEquals(balClient.getLastExitCode(), 1, "The exit code is not as expected.");
+        }
+    }
+
+    @Test
+    public void testRerunFailedTestWithInvalidRunTestJson() throws BallerinaTestException, IOException {
+        String[] args = new String[]{"--rerun-failed", "rerun-failed-tests-with-invalid-json"};
+        String output = balClient.runMainAndReadStdOut("test", args,
+                new HashMap<>(), projectPath, false);
+        AssertionUtils.assertOutput("RerunFailedTest-testRerunFailedTestWithInvalidRunTestJson.txt",
+                output.replaceAll("\r", ""));
+    }
+
+    @Test
+    public void testRerunFailedTestWithMissingModuleNameInRunTestJson() throws BallerinaTestException, IOException {
+        String[] args = new String[]{"--rerun-failed", "rerun-failed-tests-with-missing-module-name"};
+        String output = balClient.runMainAndReadStdOut("test", args,
+                new HashMap<>(), projectPath, false);
+        AssertionUtils.assertOutput("RerunFailedTest-testRerunFailedTestWithMissingModuleNameInRunTestJson.txt",
+                output.replaceAll("\r", ""));
     }
 
     @AfterMethod
     public void copyExec() {
         try {
-            FileUtils.copyBallerinaExec(Paths.get(projectPath), String.valueOf(System.currentTimeMillis()));
+            FileUtils.copyBallerinaExec(Path.of(projectPath), String.valueOf(System.currentTimeMillis()));
         } catch (IOException e) {
             // ignore exception
         }
+    }
+
+    private void runBalClean(String packageDirName) throws BallerinaTestException {
+        String[] args = new String[]{"--target-dir", packageDirName + "/target"};
+        Map<String, String> envProperties = new HashMap<>();
+        envProperties.put("user.dir", projectPath);
+        balClient.runMain("clean", args, envProperties, null, null, projectPath);
     }
 }
